--- a/clip.html
+++ b/clip.html
@@ -1,4 +1,4 @@
-<html>
+п»ї<html>
 <head>
 <title>Call duty</title>
 <script language=javascript>
@@ -6,7 +6,7 @@ function CopyClip(txt) {
 alert(txt);
 /*if(window.clipboardData){
             window.clipboardData.setData("Text", txt); //IE
-            alert("В буфер обмена сохранено:\n" + window.clipboardData.getData("Text"));
+            alert("Р’ Р±СѓС„РµСЂ РѕР±РјРµРЅР° СЃРѕС…СЂР°РЅРµРЅРѕ:\n" + window.clipboardData.getData("Text"));
         }
         else {*/
 var input = document.getElementById( 'TmpField' );
@@ -14,7 +14,7 @@ var input = document.getElementById( 'TmpField' );
   input.focus();
   input.select();
   document.execCommand( 'Copy' );
-            alert("Ваш браузер: " + navigator.appCodeName + '\nСбавьте обороты до IE5+');
+            alert("Р’Р°С€ Р±СЂР°СѓР·РµСЂ: " + navigator.appCodeName + '\nРЎР±Р°РІСЊС‚Рµ РѕР±РѕСЂРѕС‚С‹ РґРѕ IE5+');
 //       }
 }
 
