--- a/clipdemo.html
+++ b/clipdemo.html
@@ -1,24 +1,24 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Пример copy, paste, печать текста.</H1>
+  <H1>РџСЂРёРјРµСЂ copy, paste, РїРµС‡Р°С‚СЊ С‚РµРєСЃС‚Р°.</H1>
 
 <textarea id=news1 cols=60 rows=25>
-Ситуация в Египте после отказа президента Хосни Мубарака уйти в отставку перетекла
- в новое русло и, как опасаются наблюдатели, может повлечь новую волну насилия.
- Столкновения уже начались. В пятницу армия страны фактически выступила на 
-стороне главы государства, поддержав его решение передать власть де-факто 
-вице-президенту Омару Сулейману и пообещав стать гарантом реформ.
-Однако выступление Мубарака, который возглавляет страну уже почти 30 лет, 
-вызвало огромное разочарование в рядах сотен тысяч протестующих граждан, 
-ожидавших его добровольной отставки или военного переворота. В пятницу в 
-Каире и других городах ожидаются самые масштабные за 18 дней революции 
-манифестации с участием свыше 10 миллионов человек.
+РЎРёС‚СѓР°С†РёСЏ РІ Р•РіРёРїС‚Рµ РїРѕСЃР»Рµ РѕС‚РєР°Р·Р° РїСЂРµР·РёРґРµРЅС‚Р° РҐРѕСЃРЅРё РњСѓР±Р°СЂР°РєР° СѓР№С‚Рё РІ РѕС‚СЃС‚Р°РІРєСѓ РїРµСЂРµС‚РµРєР»Р°
+ РІ РЅРѕРІРѕРµ СЂСѓСЃР»Рѕ Рё, РєР°Рє РѕРїР°СЃР°СЋС‚СЃСЏ РЅР°Р±Р»СЋРґР°С‚РµР»Рё, РјРѕР¶РµС‚ РїРѕРІР»РµС‡СЊ РЅРѕРІСѓСЋ РІРѕР»РЅСѓ РЅР°СЃРёР»РёСЏ.
+ РЎС‚РѕР»РєРЅРѕРІРµРЅРёСЏ СѓР¶Рµ РЅР°С‡Р°Р»РёСЃСЊ. Р’ РїСЏС‚РЅРёС†Сѓ Р°СЂРјРёСЏ СЃС‚СЂР°РЅС‹ С„Р°РєС‚РёС‡РµСЃРєРё РІС‹СЃС‚СѓРїРёР»Р° РЅР° 
+СЃС‚РѕСЂРѕРЅРµ РіР»Р°РІС‹ РіРѕСЃСѓРґР°СЂСЃС‚РІР°, РїРѕРґРґРµСЂР¶Р°РІ РµРіРѕ СЂРµС€РµРЅРёРµ РїРµСЂРµРґР°С‚СЊ РІР»Р°СЃС‚СЊ РґРµ-С„Р°РєС‚Рѕ 
+РІРёС†Рµ-РїСЂРµР·РёРґРµРЅС‚Сѓ РћРјР°СЂСѓ РЎСѓР»РµР№РјР°РЅСѓ Рё РїРѕРѕР±РµС‰Р°РІ СЃС‚Р°С‚СЊ РіР°СЂР°РЅС‚РѕРј СЂРµС„РѕСЂРј.
+РћРґРЅР°РєРѕ РІС‹СЃС‚СѓРїР»РµРЅРёРµ РњСѓР±Р°СЂР°РєР°, РєРѕС‚РѕСЂС‹Р№ РІРѕР·РіР»Р°РІР»СЏРµС‚ СЃС‚СЂР°РЅСѓ СѓР¶Рµ РїРѕС‡С‚Рё 30 Р»РµС‚, 
+РІС‹Р·РІР°Р»Рѕ РѕРіСЂРѕРјРЅРѕРµ СЂР°Р·РѕС‡Р°СЂРѕРІР°РЅРёРµ РІ СЂСЏРґР°С… СЃРѕС‚РµРЅ С‚С‹СЃСЏС‡ РїСЂРѕС‚РµСЃС‚СѓСЋС‰РёС… РіСЂР°Р¶РґР°РЅ, 
+РѕР¶РёРґР°РІС€РёС… РµРіРѕ РґРѕР±СЂРѕРІРѕР»СЊРЅРѕР№ РѕС‚СЃС‚Р°РІРєРё РёР»Рё РІРѕРµРЅРЅРѕРіРѕ РїРµСЂРµРІРѕСЂРѕС‚Р°. Р’ РїСЏС‚РЅРёС†Сѓ РІ 
+РљР°РёСЂРµ Рё РґСЂСѓРіРёС… РіРѕСЂРѕРґР°С… РѕР¶РёРґР°СЋС‚СЃСЏ СЃР°РјС‹Рµ РјР°СЃС€С‚Р°Р±РЅС‹Рµ Р·Р° 18 РґРЅРµР№ СЂРµРІРѕР»СЋС†РёРё 
+РјР°РЅРёС„РµСЃС‚Р°С†РёРё СЃ СѓС‡Р°СЃС‚РёРµРј СЃРІС‹С€Рµ 10 РјРёР»Р»РёРѕРЅРѕРІ С‡РµР»РѕРІРµРє.
 </textarea><br>
 <input type=submit value=Copy  onClick="CopyText(document.getElementById('news1').value);">
 <input type=submit value=Paste onClick="document.getElementById('news1').value=PasteText();"><br>
