--- a/contacts.html
+++ b/contacts.html
@@ -1,13 +1,13 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Контакты</H1>
-Пишите письма на адрес <a href="mailto:ochicherin@yandex.ru?Subject=Уверения в глубочайшем почтении&Body=Уважаемый Олег Николаевич">ochicherin@yandex.ru</a>
+  <H1>РљРѕРЅС‚Р°РєС‚С‹</H1>
+РџРёС€РёС‚Рµ РїРёСЃСЊРјР° РЅР° Р°РґСЂРµСЃ <a href="mailto:ochicherin@yandex.ru?Subject=РЈРІРµСЂРµРЅРёСЏ РІ РіР»СѓР±РѕС‡Р°Р№С€РµРј РїРѕС‡С‚РµРЅРёРё&Body=РЈРІР°Р¶Р°РµРјС‹Р№ РћР»РµРі РќРёРєРѕР»Р°РµРІРёС‡">ochicherin@yandex.ru</a>
 <!--
 BEGIN:VCARD
 N;ENCODING=BASE64;CHARSET=windows-1251:1+j35fDo7TvO6+XjO83o6u7r4OXi6Pc7Ow==
