--- a/democlock.html
+++ b/democlock.html
@@ -1,12 +1,12 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <h1>Как устроены часы.</h1>
+  <h1>РљР°Рє СѓСЃС‚СЂРѕРµРЅС‹ С‡Р°СЃС‹.</h1>
 
 <pre>
  
@@ -15,33 +15,33 @@
 
 <hr>
 
-<h1>Часы.</h1>
+<h1>Р§Р°СЃС‹.</h1>
 
-Простой элемент часы. Теперь их можно разбрасывать по всему сайту.
+РџСЂРѕСЃС‚РѕР№ СЌР»РµРјРµРЅС‚ С‡Р°СЃС‹. РўРµРїРµСЂСЊ РёС… РјРѕР¶РЅРѕ СЂР°Р·Р±СЂР°СЃС‹РІР°С‚СЊ РїРѕ РІСЃРµРјСѓ СЃР°Р№С‚Сѓ.
 
 <br>
 <br>
 <div id=area1>
-<span class=clock style="BACKGROUND: #000000;FONT-WEIGHT: bold; FONT-SIZE: 16px; COLOR: #00ff00">ЧАСЫ</span>
+<span class=clock style="BACKGROUND: #000000;FONT-WEIGHT: bold; FONT-SIZE: 16px; COLOR: #00ff00">Р§РђРЎР«</span>
 </div>
 <br>
 <br>
 
 <hr>
 
-Это исходный код элемента. 
+Р­С‚Рѕ РёСЃС…РѕРґРЅС‹Р№ РєРѕРґ СЌР»РµРјРµРЅС‚Р°. 
 <textarea class=preview>area1</textarea>
 
 <hr>
 
-А это результирующий код. Его текст обновляется вместе с самим элементом.
+Рђ СЌС‚Рѕ СЂРµР·СѓР»СЊС‚РёСЂСѓСЋС‰РёР№ РєРѕРґ. Р•РіРѕ С‚РµРєСЃС‚ РѕР±РЅРѕРІР»СЏРµС‚СЃСЏ РІРјРµСЃС‚Рµ СЃ СЃР°РјРёРј СЌР»РµРјРµРЅС‚РѕРј.
 <textarea class=liveview>area1</textarea>
 
 <hr>
 
 <br>
 <br>
-<span class=clock style="BACKGROUND: #ffffff;FONT-WEIGHT: bold; FONT-SIZE: 16px; COLOR: #ff0000">ЧАСЫ</span>
+<span class=clock style="BACKGROUND: #ffffff;FONT-WEIGHT: bold; FONT-SIZE: 16px; COLOR: #ff0000">Р§РђРЎР«</span>
 
 </BODY>
 </HTML>
