--- a/demofont.html
+++ b/demofont.html
@@ -1,7 +1,7 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
   <style>
@@ -41,17 +41,17 @@
 </style>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Использование нестандартных шрифтов</H1>
+  <H1>РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ РЅРµСЃС‚Р°РЅРґР°СЂС‚РЅС‹С… С€СЂРёС„С‚РѕРІ</H1>
 <pre>
-Иногда возникает потребность использовать на странице нестандартный шрифт.
-Браузер по умолчанию использует локальные шрифты.
+РРЅРѕРіРґР° РІРѕР·РЅРёРєР°РµС‚ РїРѕС‚СЂРµР±РЅРѕСЃС‚СЊ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ РЅР° СЃС‚СЂР°РЅРёС†Рµ РЅРµСЃС‚Р°РЅРґР°СЂС‚РЅС‹Р№ С€СЂРёС„С‚.
+Р‘СЂР°СѓР·РµСЂ РїРѕ СѓРјРѕР»С‡Р°РЅРёСЋ РёСЃРїРѕР»СЊР·СѓРµС‚ Р»РѕРєР°Р»СЊРЅС‹Рµ С€СЂРёС„С‚С‹.
 
-А нам например необходимо воспроизвести бланк почтового отправления.
-Мало у кого на компьютере найдется шрифт, воспроизводящий почтовый индекс.
-Или например линейный штрихкод.
+Рђ РЅР°Рј РЅР°РїСЂРёРјРµСЂ РЅРµРѕР±С…РѕРґРёРјРѕ РІРѕСЃРїСЂРѕРёР·РІРµСЃС‚Рё Р±Р»Р°РЅРє РїРѕС‡С‚РѕРІРѕРіРѕ РѕС‚РїСЂР°РІР»РµРЅРёСЏ.
+РњР°Р»Рѕ Сѓ РєРѕРіРѕ РЅР° РєРѕРјРїСЊСЋС‚РµСЂРµ РЅР°Р№РґРµС‚СЃСЏ С€СЂРёС„С‚, РІРѕСЃРїСЂРѕРёР·РІРѕРґСЏС‰РёР№ РїРѕС‡С‚РѕРІС‹Р№ РёРЅРґРµРєСЃ.
+РР»Рё РЅР°РїСЂРёРјРµСЂ Р»РёРЅРµР№РЅС‹Р№ С€С‚СЂРёС…РєРѕРґ.
 
-Делается это достаточно просто. Шрифт выкладывается на сервер.
-В заголовок файла добавляется секция STYLE. Выглядит это так.
+Р”РµР»Р°РµС‚СЃСЏ СЌС‚Рѕ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ РїСЂРѕСЃС‚Рѕ. РЁСЂРёС„С‚ РІС‹РєР»Р°РґС‹РІР°РµС‚СЃСЏ РЅР° СЃРµСЂРІРµСЂ.
+Р’ Р·Р°РіРѕР»РѕРІРѕРє С„Р°Р№Р»Р° РґРѕР±Р°РІР»СЏРµС‚СЃСЏ СЃРµРєС†РёСЏ STYLE. Р’С‹РіР»СЏРґРёС‚ СЌС‚Рѕ С‚Р°Рє.
 <textarea class=example>
 <style>
     @font-face {
@@ -61,23 +61,23 @@
 </style>
 </textarea>
 
-Теперь можно использовать шрифт на странице, добавляя его у атрибут style.
+РўРµРїРµСЂСЊ РјРѕР¶РЅРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ С€СЂРёС„С‚ РЅР° СЃС‚СЂР°РЅРёС†Рµ, РґРѕР±Р°РІР»СЏСЏ РµРіРѕ Сѓ Р°С‚СЂРёР±СѓС‚ style.
 
-Например 
+РќР°РїСЂРёРјРµСЂ 
 
 <textarea class=example>
 <span style="font-family: 'PostIndexBold'; font-size:2cm;">$117574</span>
 </textarea>
 
-Получится следующее
+РџРѕР»СѓС‡РёС‚СЃСЏ СЃР»РµРґСѓСЋС‰РµРµ
 
 <span style="font-family: 'PostIndexBold'; font-size:2cm;">$117574</span>
 
-Все хорошо, только в IE это не работает. Ему нужен шрифт в файле eot.
-Где его брать? 
-Идем на ресурс <a href="http://www.fontsquirrel.com/fontface/generator">FONT-FACE GENERATOR</a>. Загружаем туда ttf шрифт и в ответ 
-в архиве получаем комплект файлов своего шрифта в различных форматах.
-В результате секция STYLE будет выглядеть следующим образом.
+Р’СЃРµ С…РѕСЂРѕС€Рѕ, С‚РѕР»СЊРєРѕ РІ IE СЌС‚Рѕ РЅРµ СЂР°Р±РѕС‚Р°РµС‚. Р•РјСѓ РЅСѓР¶РµРЅ С€СЂРёС„С‚ РІ С„Р°Р№Р»Рµ eot.
+Р“РґРµ РµРіРѕ Р±СЂР°С‚СЊ? 
+РРґРµРј РЅР° СЂРµСЃСѓСЂСЃ <a href="http://www.fontsquirrel.com/fontface/generator">FONT-FACE GENERATOR</a>. Р—Р°РіСЂСѓР¶Р°РµРј С‚СѓРґР° ttf С€СЂРёС„С‚ Рё РІ РѕС‚РІРµС‚ 
+РІ Р°СЂС…РёРІРµ РїРѕР»СѓС‡Р°РµРј РєРѕРјРїР»РµРєС‚ С„Р°Р№Р»РѕРІ СЃРІРѕРµРіРѕ С€СЂРёС„С‚Р° РІ СЂР°Р·Р»РёС‡РЅС‹С… С„РѕСЂРјР°С‚Р°С….
+Р’ СЂРµР·СѓР»СЊС‚Р°С‚Рµ СЃРµРєС†РёСЏ STYLE Р±СѓРґРµС‚ РІС‹РіР»СЏРґРµС‚СЊ СЃР»РµРґСѓСЋС‰РёРј РѕР±СЂР°Р·РѕРј.
 <textarea class=example>
   <style>
     @font-face {
@@ -93,26 +93,26 @@
   </style>
 </textarea>
 
-Аналогичным образом делаются часы.
+РђРЅР°Р»РѕРіРёС‡РЅС‹Рј РѕР±СЂР°Р·РѕРј РґРµР»Р°СЋС‚СЃСЏ С‡Р°СЃС‹.
 
 <span id=area1>
  <span class=clock style="background: #000000; color:#00ff00; font-family: 'LEDNormal'; font-size:2cm;"></span>
 </span>
 
-Исходный код элемента. 
+РСЃС…РѕРґРЅС‹Р№ РєРѕРґ СЌР»РµРјРµРЅС‚Р°. 
  <textarea class=liveview>area1</textarea>
 
 
-Или штрихкод.
+РР»Рё С€С‚СЂРёС…РєРѕРґ.
 
 <span id=area2>
  <span style="font-family: 'barcod39'; font-size:3cm;">12345678</span>
 </span>
 
-Исходный код элемента. 
+РСЃС…РѕРґРЅС‹Р№ РєРѕРґ СЌР»РµРјРµРЅС‚Р°. 
  <textarea class=postview>area2</textarea>
 
-Всё.
+Р’СЃС‘.
 </pre>
 </body>
 </html>
