--- a/demositemap.html
+++ b/demositemap.html
@@ -1,22 +1,22 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <h1>Как устроена карта сайта.</h1>
+  <h1>РљР°Рє СѓСЃС‚СЂРѕРµРЅР° РєР°СЂС‚Р° СЃР°Р№С‚Р°.</h1>
 
 <pre>
  
-Устроена она очень просто. 
-Есть конфигурационный файл, содержащий перечень всех страниц сайта.
-Если изменяется структура сайта, добавляются страницы, или меняются разделы,
-я вношу изменения только в этот файл.
-По нему генерируются все элементы навигации по сайту.
+РЈСЃС‚СЂРѕРµРЅР° РѕРЅР° РѕС‡РµРЅСЊ РїСЂРѕСЃС‚Рѕ. 
+Р•СЃС‚СЊ РєРѕРЅС„РёРіСѓСЂР°С†РёРѕРЅРЅС‹Р№ С„Р°Р№Р», СЃРѕРґРµСЂР¶Р°С‰РёР№ РїРµСЂРµС‡РµРЅСЊ РІСЃРµС… СЃС‚СЂР°РЅРёС† СЃР°Р№С‚Р°.
+Р•СЃР»Рё РёР·РјРµРЅСЏРµС‚СЃСЏ СЃС‚СЂСѓРєС‚СѓСЂР° СЃР°Р№С‚Р°, РґРѕР±Р°РІР»СЏСЋС‚СЃСЏ СЃС‚СЂР°РЅРёС†С‹, РёР»Рё РјРµРЅСЏСЋС‚СЃСЏ СЂР°Р·РґРµР»С‹,
+СЏ РІРЅРѕС€Сѓ РёР·РјРµРЅРµРЅРёСЏ С‚РѕР»СЊРєРѕ РІ СЌС‚РѕС‚ С„Р°Р№Р».
+РџРѕ РЅРµРјСѓ РіРµРЅРµСЂРёСЂСѓСЋС‚СЃСЏ РІСЃРµ СЌР»РµРјРµРЅС‚С‹ РЅР°РІРёРіР°С†РёРё РїРѕ СЃР°Р№С‚Сѓ.
 
-Файл выглядит так
+Р¤Р°Р№Р» РІС‹РіР»СЏРґРёС‚ С‚Р°Рє
 
 <textarea class=sample>sitemap.xml</textarea>
 
@@ -24,59 +24,59 @@
 
 <hr>
 
-<h1>Меню сайта.</h1>
-Это то, что вы видите в верхней панели страницы. Представляет собой горизонтальный список.
-Состоит из элементов верхнего уровня.
+<h1>РњРµРЅСЋ СЃР°Р№С‚Р°.</h1>
+Р­С‚Рѕ С‚Рѕ, С‡С‚Рѕ РІС‹ РІРёРґРёС‚Рµ РІ РІРµСЂС…РЅРµР№ РїР°РЅРµР»Рё СЃС‚СЂР°РЅРёС†С‹. РџСЂРµРґСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ РіРѕСЂРёР·РѕРЅС‚Р°Р»СЊРЅС‹Р№ СЃРїРёСЃРѕРє.
+РЎРѕСЃС‚РѕРёС‚ РёР· СЌР»РµРјРµРЅС‚РѕРІ РІРµСЂС…РЅРµРіРѕ СѓСЂРѕРІРЅСЏ.
 <span id=area1>
   <div style="background :#FfFfc0" class=sitemap_top>sitemap.xml</div>
 </span>
 
-Исходный код
+РСЃС…РѕРґРЅС‹Р№ РєРѕРґ
 <textarea class=preview>area1</textarea>
 
 <hr>
 
-<h1>Список страниц раздела.</h1>
-Это то, что вы видите на левой панели. Представляет собой вертикальный одноуровневый список.
-Состоит из элементов того же уровня, что и текущая страница. Плюс заголовок со ссылкой на родительскую страницу.
+<h1>РЎРїРёСЃРѕРє СЃС‚СЂР°РЅРёС† СЂР°Р·РґРµР»Р°.</h1>
+Р­С‚Рѕ С‚Рѕ, С‡С‚Рѕ РІС‹ РІРёРґРёС‚Рµ РЅР° Р»РµРІРѕР№ РїР°РЅРµР»Рё. РџСЂРµРґСЃС‚Р°РІР»СЏРµС‚ СЃРѕР±РѕР№ РІРµСЂС‚РёРєР°Р»СЊРЅС‹Р№ РѕРґРЅРѕСѓСЂРѕРІРЅРµРІС‹Р№ СЃРїРёСЃРѕРє.
+РЎРѕСЃС‚РѕРёС‚ РёР· СЌР»РµРјРµРЅС‚РѕРІ С‚РѕРіРѕ Р¶Рµ СѓСЂРѕРІРЅСЏ, С‡С‚Рѕ Рё С‚РµРєСѓС‰Р°СЏ СЃС‚СЂР°РЅРёС†Р°. РџР»СЋСЃ Р·Р°РіРѕР»РѕРІРѕРє СЃРѕ СЃСЃС‹Р»РєРѕР№ РЅР° СЂРѕРґРёС‚РµР»СЊСЃРєСѓСЋ СЃС‚СЂР°РЅРёС†Сѓ.
 <span id=area2>
   <div style="background :#FfFfc0" class=sitemap_current>sitemap.xml</div>
 </span>
 
-Исходный код
+РСЃС…РѕРґРЅС‹Р№ РєРѕРґ
 <textarea class=preview>area2</textarea>
 
 <hr>
 
-<h1>Список дочерних страниц следующего уровня.</h1>
-Это содержимое текущего раздела. Состоит из дочерних страниц следующего уровня.
+<h1>РЎРїРёСЃРѕРє РґРѕС‡РµСЂРЅРёС… СЃС‚СЂР°РЅРёС† СЃР»РµРґСѓСЋС‰РµРіРѕ СѓСЂРѕРІРЅСЏ.</h1>
+Р­С‚Рѕ СЃРѕРґРµСЂР¶РёРјРѕРµ С‚РµРєСѓС‰РµРіРѕ СЂР°Р·РґРµР»Р°. РЎРѕСЃС‚РѕРёС‚ РёР· РґРѕС‡РµСЂРЅРёС… СЃС‚СЂР°РЅРёС† СЃР»РµРґСѓСЋС‰РµРіРѕ СѓСЂРѕРІРЅСЏ.
 <span id=area3>
   <div style="background :#FfFfc0" class=sitemap_child>sitemap.xml</div>
 </span>
 
-Исходный код
+РСЃС…РѕРґРЅС‹Р№ РєРѕРґ
 <textarea class=preview>area3</textarea>
 
 <hr>
 
-<h1>Список всех дочерних страниц следующего уровня.</h1>
-Это тоже содержимое текущего раздела. Но в отличии от предидущего примера состоит из всех дочерних страниц.
+<h1>РЎРїРёСЃРѕРє РІСЃРµС… РґРѕС‡РµСЂРЅРёС… СЃС‚СЂР°РЅРёС† СЃР»РµРґСѓСЋС‰РµРіРѕ СѓСЂРѕРІРЅСЏ.</h1>
+Р­С‚Рѕ С‚РѕР¶Рµ СЃРѕРґРµСЂР¶РёРјРѕРµ С‚РµРєСѓС‰РµРіРѕ СЂР°Р·РґРµР»Р°. РќРѕ РІ РѕС‚Р»РёС‡РёРё РѕС‚ РїСЂРµРґРёРґСѓС‰РµРіРѕ РїСЂРёРјРµСЂР° СЃРѕСЃС‚РѕРёС‚ РёР· РІСЃРµС… РґРѕС‡РµСЂРЅРёС… СЃС‚СЂР°РЅРёС†.
 <span id=area4>
   <div style="background :#FfFfc0" class=sitemap_tree>sitemap.xml</div>
 </span>
 
-Исходный код
+РСЃС…РѕРґРЅС‹Р№ РєРѕРґ
 <textarea class=preview>area4</textarea>
 
 <hr>
 
-<h1>Глобальное меню сайта.</h1>
-Содержит перечень всех страниц сайта. Практически, это содержимое страницы <a href="/sitemap.html">Карта сайта</a>.
+<h1>Р“Р»РѕР±Р°Р»СЊРЅРѕРµ РјРµРЅСЋ СЃР°Р№С‚Р°.</h1>
+РЎРѕРґРµСЂР¶РёС‚ РїРµСЂРµС‡РµРЅСЊ РІСЃРµС… СЃС‚СЂР°РЅРёС† СЃР°Р№С‚Р°. РџСЂР°РєС‚РёС‡РµСЃРєРё, СЌС‚Рѕ СЃРѕРґРµСЂР¶РёРјРѕРµ СЃС‚СЂР°РЅРёС†С‹ <a href="/sitemap.html">РљР°СЂС‚Р° СЃР°Р№С‚Р°</a>.
 <span id=area5>
   <div style="background :#FfFfc0" class=sitemap_total>sitemap.xml</div>
 </span>
 
-Исходный код
+РСЃС…РѕРґРЅС‹Р№ РєРѕРґ
 <textarea class=preview>area5</textarea>
 
 <hr>
