--- a/examples.html
+++ b/examples.html
@@ -1,26 +1,26 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Примеры HTML</H1>
-  В этом разделе собраны примеры html кодов, на которых собственно и построен сайт.
-  Или просто интересные решения.
+  <H1>РџСЂРёРјРµСЂС‹ HTML</H1>
+  Р’ СЌС‚РѕРј СЂР°Р·РґРµР»Рµ СЃРѕР±СЂР°РЅС‹ РїСЂРёРјРµСЂС‹ html РєРѕРґРѕРІ, РЅР° РєРѕС‚РѕСЂС‹С… СЃРѕР±СЃС‚РІРµРЅРЅРѕ Рё РїРѕСЃС‚СЂРѕРµРЅ СЃР°Р№С‚.
+  РР»Рё РїСЂРѕСЃС‚Рѕ РёРЅС‚РµСЂРµСЃРЅС‹Рµ СЂРµС€РµРЅРёСЏ.
 
   <div class=sitemap_child>sitemap.xml</div>
   
   <ul>
-    <li> <a href="xslt_demo.html"> Использование xslt преобразований.</a>
-    <li> <a href="calendar.html"> Календарик </a>
-    <li> <a href="lov_main.html"> Выпадающий список </a>
-    <li> <a href="tty.html"> Телетайп </a>
-    <li> <a href="cookie.html"> Куки </a>
-    <li> <a href="menu_v.html"> Вертикальное меню </a>
-    <li> <a href="menu_h.html"> Горизонтальное меню </a>
-    <li> <a href="menu_n.html"> Windows подобное меню(*) </a>
+    <li> <a href="xslt_demo.html"> РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ xslt РїСЂРµРѕР±СЂР°Р·РѕРІР°РЅРёР№.</a>
+    <li> <a href="calendar.html"> РљР°Р»РµРЅРґР°СЂРёРє </a>
+    <li> <a href="lov_main.html"> Р’С‹РїР°РґР°СЋС‰РёР№ СЃРїРёСЃРѕРє </a>
+    <li> <a href="tty.html"> РўРµР»РµС‚Р°Р№Рї </a>
+    <li> <a href="cookie.html"> РљСѓРєРё </a>
+    <li> <a href="menu_v.html"> Р’РµСЂС‚РёРєР°Р»СЊРЅРѕРµ РјРµРЅСЋ </a>
+    <li> <a href="menu_h.html"> Р“РѕСЂРёР·РѕРЅС‚Р°Р»СЊРЅРѕРµ РјРµРЅСЋ </a>
+    <li> <a href="menu_n.html"> Windows РїРѕРґРѕР±РЅРѕРµ РјРµРЅСЋ(*) </a>
   </ul>
 
 </BODY>
