--- a/faq.html
+++ b/faq.html
@@ -1,13 +1,13 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Как сделать ... </H1>
-<p>В этом разделе лежат памятки на тему 'Как сделать элементарные вещи, которые делаешь очень редко'</p>
+  <H1>РљР°Рє СЃРґРµР»Р°С‚СЊ ... </H1>
+<p>Р’ СЌС‚РѕРј СЂР°Р·РґРµР»Рµ Р»РµР¶Р°С‚ РїР°РјСЏС‚РєРё РЅР° С‚РµРјСѓ 'РљР°Рє СЃРґРµР»Р°С‚СЊ СЌР»РµРјРµРЅС‚Р°СЂРЅС‹Рµ РІРµС‰Рё, РєРѕС‚РѕСЂС‹Рµ РґРµР»Р°РµС€СЊ РѕС‡РµРЅСЊ СЂРµРґРєРѕ'</p>
 <div class=sitemap_child>sitemap.xml</div>
 
 </BODY>
