--- a/faq11.html
+++ b/faq11.html
@@ -1,30 +1,30 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Как сделать "прозрачную" авторизацию при помощи Apache</H1>
+  <H1>РљР°Рє СЃРґРµР»Р°С‚СЊ "РїСЂРѕР·СЂР°С‡РЅСѓСЋ" Р°РІС‚РѕСЂРёР·Р°С†РёСЋ РїСЂРё РїРѕРјРѕС‰Рё Apache</H1>
 
 <pre>
- В некоторых случаях много чего требуется делать за клиента, чего он не хочет
-или объективно не может. 
-Например требуется авторизоваться за клиента, модифицировать отдаваемый контент
-а так же просто добавлять в заголовок запроса некоторые переменные.
+ Р’ РЅРµРєРѕС‚РѕСЂС‹С… СЃР»СѓС‡Р°СЏС… РјРЅРѕРіРѕ С‡РµРіРѕ С‚СЂРµР±СѓРµС‚СЃСЏ РґРµР»Р°С‚СЊ Р·Р° РєР»РёРµРЅС‚Р°, С‡РµРіРѕ РѕРЅ РЅРµ С…РѕС‡РµС‚
+РёР»Рё РѕР±СЉРµРєС‚РёРІРЅРѕ РЅРµ РјРѕР¶РµС‚. 
+РќР°РїСЂРёРјРµСЂ С‚СЂРµР±СѓРµС‚СЃСЏ Р°РІС‚РѕСЂРёР·РѕРІР°С‚СЊСЃСЏ Р·Р° РєР»РёРµРЅС‚Р°, РјРѕРґРёС„РёС†РёСЂРѕРІР°С‚СЊ РѕС‚РґР°РІР°РµРјС‹Р№ РєРѕРЅС‚РµРЅС‚
+Р° С‚Р°Рє Р¶Рµ РїСЂРѕСЃС‚Рѕ РґРѕР±Р°РІР»СЏС‚СЊ РІ Р·Р°РіРѕР»РѕРІРѕРє Р·Р°РїСЂРѕСЃР° РЅРµРєРѕС‚РѕСЂС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ.
 
-Пример - "костыль" для Oracle XDB: 
- - Oracle XML DB Web Services не может работать анонимно и всегда требует авторизацию.
- - С другой стороны клиент СМЭВ не поддерживает Basic авторизацию.
- - Кроме того, если клиент явно не указывает кодировку, в которой требуется ответ,
-   Oracle XML DB возвращает результат в кодировке базы данных.
+РџСЂРёРјРµСЂ - "РєРѕСЃС‚С‹Р»СЊ" РґР»СЏ Oracle XDB: 
+ - Oracle XML DB Web Services РЅРµ РјРѕР¶РµС‚ СЂР°Р±РѕС‚Р°С‚СЊ Р°РЅРѕРЅРёРјРЅРѕ Рё РІСЃРµРіРґР° С‚СЂРµР±СѓРµС‚ Р°РІС‚РѕСЂРёР·Р°С†РёСЋ.
+ - РЎ РґСЂСѓРіРѕР№ СЃС‚РѕСЂРѕРЅС‹ РєР»РёРµРЅС‚ РЎРњР­Р’ РЅРµ РїРѕРґРґРµСЂР¶РёРІР°РµС‚ Basic Р°РІС‚РѕСЂРёР·Р°С†РёСЋ.
+ - РљСЂРѕРјРµ С‚РѕРіРѕ, РµСЃР»Рё РєР»РёРµРЅС‚ СЏРІРЅРѕ РЅРµ СѓРєР°Р·С‹РІР°РµС‚ РєРѕРґРёСЂРѕРІРєСѓ, РІ РєРѕС‚РѕСЂРѕР№ С‚СЂРµР±СѓРµС‚СЃСЏ РѕС‚РІРµС‚,
+   Oracle XML DB РІРѕР·РІСЂР°С‰Р°РµС‚ СЂРµР·СѓР»СЊС‚Р°С‚ РІ РєРѕРґРёСЂРѕРІРєРµ Р±Р°Р·С‹ РґР°РЅРЅС‹С….
 
-Для решения проблемы используем модули mod_rewrite и mod_ext_filter.
-mod_ext_filter решит проблему фильтрации отдаваемого контента,
-а mod_rewrite проксирование запроса.
+Р”Р»СЏ СЂРµС€РµРЅРёСЏ РїСЂРѕР±Р»РµРјС‹ РёСЃРїРѕР»СЊР·СѓРµРј РјРѕРґСѓР»Рё mod_rewrite Рё mod_ext_filter.
+mod_ext_filter СЂРµС€РёС‚ РїСЂРѕР±Р»РµРјСѓ С„РёР»СЊС‚СЂР°С†РёРё РѕС‚РґР°РІР°РµРјРѕРіРѕ РєРѕРЅС‚РµРЅС‚Р°,
+Р° mod_rewrite РїСЂРѕРєСЃРёСЂРѕРІР°РЅРёРµ Р·Р°РїСЂРѕСЃР°.
 
-Редактируем httpd.conf 
+Р РµРґР°РєС‚РёСЂСѓРµРј httpd.conf 
 </pre>
 <textarea class="example">
 ExtFilterDefine fixwsdl mode=output intype=text/xml \
@@ -40,18 +40,18 @@ RequestHeader append Accept-Charset "UTF-8"
 RewriteRule ^/orawsv(.*) http://10.32.1.156:8080/orawsv$1 [P]
 </textarea>
 <pre>
-Что делают команды:
- - Определяем фильтр. в качестве фильтра выступает sed, делающий глобальную замену.
-   Для того, чтобы в команде замены указать / надо написать \\\/
- - Определяем область действия фильтра.
- - Включается механизм перезаписи url.
- - Задается режим отладки. Чтобы отключить, надо поставить 0
- - Задается путь, куда писать журнал.
- - Добавляется заголовок авторизации.
- - Добавляется заголовок определяющий кодировку ответа.
- - Задается правило трансформации url с передачей запроса через прокси.
+Р§С‚Рѕ РґРµР»Р°СЋС‚ РєРѕРјР°РЅРґС‹:
+ - РћРїСЂРµРґРµР»СЏРµРј С„РёР»СЊС‚СЂ. РІ РєР°С‡РµСЃС‚РІРµ С„РёР»СЊС‚СЂР° РІС‹СЃС‚СѓРїР°РµС‚ sed, РґРµР»Р°СЋС‰РёР№ РіР»РѕР±Р°Р»СЊРЅСѓСЋ Р·Р°РјРµРЅСѓ.
+   Р”Р»СЏ С‚РѕРіРѕ, С‡С‚РѕР±С‹ РІ РєРѕРјР°РЅРґРµ Р·Р°РјРµРЅС‹ СѓРєР°Р·Р°С‚СЊ / РЅР°РґРѕ РЅР°РїРёСЃР°С‚СЊ \\\/
+ - РћРїСЂРµРґРµР»СЏРµРј РѕР±Р»Р°СЃС‚СЊ РґРµР№СЃС‚РІРёСЏ С„РёР»СЊС‚СЂР°.
+ - Р’РєР»СЋС‡Р°РµС‚СЃСЏ РјРµС…Р°РЅРёР·Рј РїРµСЂРµР·Р°РїРёСЃРё url.
+ - Р—Р°РґР°РµС‚СЃСЏ СЂРµР¶РёРј РѕС‚Р»Р°РґРєРё. Р§С‚РѕР±С‹ РѕС‚РєР»СЋС‡РёС‚СЊ, РЅР°РґРѕ РїРѕСЃС‚Р°РІРёС‚СЊ 0
+ - Р—Р°РґР°РµС‚СЃСЏ РїСѓС‚СЊ, РєСѓРґР° РїРёСЃР°С‚СЊ Р¶СѓСЂРЅР°Р».
+ - Р”РѕР±Р°РІР»СЏРµС‚СЃСЏ Р·Р°РіРѕР»РѕРІРѕРє Р°РІС‚РѕСЂРёР·Р°С†РёРё.
+ - Р”РѕР±Р°РІР»СЏРµС‚СЃСЏ Р·Р°РіРѕР»РѕРІРѕРє РѕРїСЂРµРґРµР»СЏСЋС‰РёР№ РєРѕРґРёСЂРѕРІРєСѓ РѕС‚РІРµС‚Р°.
+ - Р—Р°РґР°РµС‚СЃСЏ РїСЂР°РІРёР»Рѕ С‚СЂР°РЅСЃС„РѕСЂРјР°С†РёРё url СЃ РїРµСЂРµРґР°С‡РµР№ Р·Р°РїСЂРѕСЃР° С‡РµСЂРµР· РїСЂРѕРєСЃРё.
 
-Всё.
+Р’СЃС‘.
 </pre>
 
 
