--- a/faq14.html
+++ b/faq14.html
@@ -1,7 +1,7 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
@@ -9,66 +9,66 @@
   <H1>Acorp WR-G</H1>
 
 <pre>
-Это роутер. 
+Р­С‚Рѕ СЂРѕСѓС‚РµСЂ. 
 
-Адрес по умолчанию <a href="http://192.168.1.254">192.168.1.254</a>.
+РђРґСЂРµСЃ РїРѕ СѓРјРѕР»С‡Р°РЅРёСЋ <a href="http://192.168.1.254">192.168.1.254</a>.
 
-Интерфейс командной строки <a href="http://192.168.1.254/syscmd.asp">http://192.168.1.254/syscmd.asp</a>
+РРЅС‚РµСЂС„РµР№СЃ РєРѕРјР°РЅРґРЅРѕР№ СЃС‚СЂРѕРєРё <a href="http://192.168.1.254/syscmd.asp">http://192.168.1.254/syscmd.asp</a>
 
-Имя / пароль для входя через telnet версии eng15
+РРјСЏ / РїР°СЂРѕР»СЊ РґР»СЏ РІС…РѕРґСЏ С‡РµСЂРµР· telnet РІРµСЂСЃРёРё eng15
 root / sysadmin
 
-Прошивки
- - <a href="/arc/firmware/acorp_wr-g/wr-g_v142q.rar"> Родная с сайта 1.42.q </a>
- - <a href="/arc/firmware/acorp_wr-g/eng15.rar"> Техническая 1.42 eng15 </a>
- - <a href="/arc/firmware/acorp_wr-g/V146I.rar"> CCCtool 1.45 (восстанавливает испорченный конфиг) </a>  
+РџСЂРѕС€РёРІРєРё
+ - <a href="/arc/firmware/acorp_wr-g/wr-g_v142q.rar"> Р РѕРґРЅР°СЏ СЃ СЃР°Р№С‚Р° 1.42.q </a>
+ - <a href="/arc/firmware/acorp_wr-g/eng15.rar"> РўРµС…РЅРёС‡РµСЃРєР°СЏ 1.42 eng15 </a>
+ - <a href="/arc/firmware/acorp_wr-g/V146I.rar"> CCCtool 1.45 (РІРѕСЃСЃС‚Р°РЅР°РІР»РёРІР°РµС‚ РёСЃРїРѕСЂС‡РµРЅРЅС‹Р№ РєРѕРЅС„РёРі) </a>  
  - <a href="/arc/firmware/acorp_wr-g/wive-ng-0.3.18.tar.7z"> WIVE 0.3.14 </a>
 
-Обновление через веб интерфейс.
+РћР±РЅРѕРІР»РµРЅРёРµ С‡РµСЂРµР· РІРµР± РёРЅС‚РµСЂС„РµР№СЃ.
 <i>
-Распакуйте содержимое архива в отдельную папку.
+Р Р°СЃРїР°РєСѓР№С‚Рµ СЃРѕРґРµСЂР¶РёРјРѕРµ Р°СЂС…РёРІР° РІ РѕС‚РґРµР»СЊРЅСѓСЋ РїР°РїРєСѓ.
 
-1. Меню "Management"->"Upgrade Firmware"
-2. Нажать "Browse", выбрать файл linux-1.4.bin
-3. Нажать "Upload", по окончании обновления нажать "Ok"
-4. Дождаться окончания перезагрузки устройства и еще раз войти в веб-интерфейс роутера
-5. Повторить шаги 1-3 для файла webpages-vpn.bin
+1. РњРµРЅСЋ "Management"->"Upgrade Firmware"
+2. РќР°Р¶Р°С‚СЊ "Browse", РІС‹Р±СЂР°С‚СЊ С„Р°Р№Р» linux-1.4.bin
+3. РќР°Р¶Р°С‚СЊ "Upload", РїРѕ РѕРєРѕРЅС‡Р°РЅРёРё РѕР±РЅРѕРІР»РµРЅРёСЏ РЅР°Р¶Р°С‚СЊ "Ok"
+4. Р”РѕР¶РґР°С‚СЊСЃСЏ РѕРєРѕРЅС‡Р°РЅРёСЏ РїРµСЂРµР·Р°РіСЂСѓР·РєРё СѓСЃС‚СЂРѕР№СЃС‚РІР° Рё РµС‰Рµ СЂР°Р· РІРѕР№С‚Рё РІ РІРµР±-РёРЅС‚РµСЂС„РµР№СЃ СЂРѕСѓС‚РµСЂР°
+5. РџРѕРІС‚РѕСЂРёС‚СЊ С€Р°РіРё 1-3 РґР»СЏ С„Р°Р№Р»Р° webpages-vpn.bin
 
-6. Меню "Management"->"Save/Reload Settings"
-7. Нажать "Browse", выбрать файл config-vpn-ogf.bin
-8. Нажать "Upload", по окончании обновления нажать "Ok"
+6. РњРµРЅСЋ "Management"->"Save/Reload Settings"
+7. РќР°Р¶Р°С‚СЊ "Browse", РІС‹Р±СЂР°С‚СЊ С„Р°Р№Р» config-vpn-ogf.bin
+8. РќР°Р¶Р°С‚СЊ "Upload", РїРѕ РѕРєРѕРЅС‡Р°РЅРёРё РѕР±РЅРѕРІР»РµРЅРёСЏ РЅР°Р¶Р°С‚СЊ "Ok"
 
-9. После окончания обновления рекомендуется очистить кэш браузера
+9. РџРѕСЃР»Рµ РѕРєРѕРЅС‡Р°РЅРёСЏ РѕР±РЅРѕРІР»РµРЅРёСЏ СЂРµРєРѕРјРµРЅРґСѓРµС‚СЃСЏ РѕС‡РёСЃС‚РёС‚СЊ РєСЌС€ Р±СЂР°СѓР·РµСЂР°
 </i>
 
 
-Прошивка при помощи tftp
+РџСЂРѕС€РёРІРєР° РїСЂРё РїРѕРјРѕС‰Рё tftp
 
-Устанавливаем на компьютере адрес 192.168.1.1/255.255.255.0
-Выключаем роутер.
-Нажимаем и держим reset.
-Включаем питание.
-Ждем 6 секунд.
+РЈСЃС‚Р°РЅР°РІР»РёРІР°РµРј РЅР° РєРѕРјРїСЊСЋС‚РµСЂРµ Р°РґСЂРµСЃ 192.168.1.1/255.255.255.0
+Р’С‹РєР»СЋС‡Р°РµРј СЂРѕСѓС‚РµСЂ.
+РќР°Р¶РёРјР°РµРј Рё РґРµСЂР¶РёРј reset.
+Р’РєР»СЋС‡Р°РµРј РїРёС‚Р°РЅРёРµ.
+Р–РґРµРј 6 СЃРµРєСѓРЅРґ.
 
-Роутер станет доступен по адресу 192.168.1.6
-При этом ping не идет.
+Р РѕСѓС‚РµСЂ СЃС‚Р°РЅРµС‚ РґРѕСЃС‚СѓРїРµРЅ РїРѕ Р°РґСЂРµСЃСѓ 192.168.1.6
+РџСЂРё СЌС‚РѕРј ping РЅРµ РёРґРµС‚.
 
-Загружаем прошивку командами
+Р—Р°РіСЂСѓР¶Р°РµРј РїСЂРѕС€РёРІРєСѓ РєРѕРјР°РЅРґР°РјРё
 
 tftp -i 192.168.1.6 put webpages-vpn-eng15.bin
 tftp -i 192.168.1.6 put linux-1.4.2Q_eng16.bin
 
 
-Конфиг лучше не заливать. Может плохо кончиться.
+РљРѕРЅС„РёРі Р»СѓС‡С€Рµ РЅРµ Р·Р°Р»РёРІР°С‚СЊ. РњРѕР¶РµС‚ РїР»РѕС…Рѕ РєРѕРЅС‡РёС‚СЊСЃСЏ.
 
 
-Префиксы файлов.
-WEBP - веб интерфейс
-CSYS - основная файловая система.   
-DF04 - конфирурация устройства.   
-CS04 - конфигурация, выгруженая через веб интерфейс.
+РџСЂРµС„РёРєСЃС‹ С„Р°Р№Р»РѕРІ.
+WEBP - РІРµР± РёРЅС‚РµСЂС„РµР№СЃ
+CSYS - РѕСЃРЅРѕРІРЅР°СЏ С„Р°Р№Р»РѕРІР°СЏ СЃРёСЃС‚РµРјР°.   
+DF04 - РєРѕРЅС„РёСЂСѓСЂР°С†РёСЏ СѓСЃС‚СЂРѕР№СЃС‚РІР°.   
+CS04 - РєРѕРЅС„РёРіСѓСЂР°С†РёСЏ, РІС‹РіСЂСѓР¶РµРЅР°СЏ С‡РµСЂРµР· РІРµР± РёРЅС‚РµСЂС„РµР№СЃ.
 
-Всё.
+Р’СЃС‘.
 </pre>
 
 
