--- a/faq15.html
+++ b/faq15.html
@@ -1,17 +1,17 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Индикатор для маршрутника DI15G</H1>
+  <H1>РРЅРґРёРєР°С‚РѕСЂ РґР»СЏ РјР°СЂС€СЂСѓС‚РЅРёРєР° DI15G</H1>
 
 <pre>
 
-E40281-L-0-0-W ОБЩИЙ КАТОД - 
-E40281-I-0-0-W ОБЩИЙ АНОД
+E40281-L-0-0-W РћР‘Р©РР™ РљРђРўРћР” - 
+E40281-I-0-0-W РћР‘Р©РР™ РђРќРћР”
 
 
 <img width=450 src="http://www.chipselect.ru/images/indicators/led_catalog/cat_64.gif">
