--- a/faq17.html
+++ b/faq17.html
@@ -1,16 +1,16 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Новый диск в Linux</H1>
+  <H1>РќРѕРІС‹Р№ РґРёСЃРє РІ Linux</H1>
 
 <pre>
-1. Создаем раздел при помощи FDISK
-Смотрим доступные физические диски и уже созданные разделы на них
+1. РЎРѕР·РґР°РµРј СЂР°Р·РґРµР» РїСЂРё РїРѕРјРѕС‰Рё FDISK
+РЎРјРѕС‚СЂРёРј РґРѕСЃС‚СѓРїРЅС‹Рµ С„РёР·РёС‡РµСЃРєРёРµ РґРёСЃРєРё Рё СѓР¶Рµ СЃРѕР·РґР°РЅРЅС‹Рµ СЂР°Р·РґРµР»С‹ РЅР° РЅРёС…
 
 # /sbin/fdisk -l
 
@@ -29,16 +29,16 @@ Units = cylinders of 16065 * 512 = 8225280 bytes
    Device Boot      Start         End      Blocks   Id  System
 
 
-Выбираем нужный диск. Создаем на диске партицию 
+Р’С‹Р±РёСЂР°РµРј РЅСѓР¶РЅС‹Р№ РґРёСЃРє. РЎРѕР·РґР°РµРј РЅР° РґРёСЃРєРµ РїР°СЂС‚РёС†РёСЋ 
 
 # /sbin/fdisk /dev/hdb
 
-Создать партицию: n
-Тип партиции: p(или e)
-Начальный цилиндр: 1
-Конечный цилиндр: 26108
+РЎРѕР·РґР°С‚СЊ РїР°СЂС‚РёС†РёСЋ: n
+РўРёРї РїР°СЂС‚РёС†РёРё: p(РёР»Рё e)
+РќР°С‡Р°Р»СЊРЅС‹Р№ С†РёР»РёРЅРґСЂ: 1
+РљРѕРЅРµС‡РЅС‹Р№ С†РёР»РёРЅРґСЂ: 26108
 
-Посмотреть что получилось: p
+РџРѕСЃРјРѕС‚СЂРµС‚СЊ С‡С‚Рѕ РїРѕР»СѓС‡РёР»РѕСЃСЊ: p
 
 Disk /dev/hdb: 214.7 GB, 214748364800 bytes
 255 heads, 63 sectors/track, 26108 cylinders
@@ -47,29 +47,29 @@ Units = cylinders of 16065 * 512 = 8225280 bytes
    Device Boot      Start         End      Blocks   Id  System
 /dev/hdb1               1       26108   209712478+  83  Linux
 
-Записать изменения: w
+Р—Р°РїРёСЃР°С‚СЊ РёР·РјРµРЅРµРЅРёСЏ: w
 
-2. Создаем в разделе файловую систему
+2. РЎРѕР·РґР°РµРј РІ СЂР°Р·РґРµР»Рµ С„Р°Р№Р»РѕРІСѓСЋ СЃРёСЃС‚РµРјСѓ
 
 # /sbin/mkfs.ext3 /dev/hdb1
 
-3. Делаем запись в fstab и монтируем диск  
+3. Р”РµР»Р°РµРј Р·Р°РїРёСЃСЊ РІ fstab Рё РјРѕРЅС‚РёСЂСѓРµРј РґРёСЃРє  
 
-Добавляем в /etc/fstab строку
+Р”РѕР±Р°РІР»СЏРµРј РІ /etc/fstab СЃС‚СЂРѕРєСѓ
 /dev/hdb1       /u01    ext3    defaults        1       1
 
-Создаем точку монтирования
+РЎРѕР·РґР°РµРј С‚РѕС‡РєСѓ РјРѕРЅС‚РёСЂРѕРІР°РЅРёСЏ
 # mkdir /u01
 
-Монтируем партицию
+РњРѕРЅС‚РёСЂСѓРµРј РїР°СЂС‚РёС†РёСЋ
 # mount /u01
 
-Смотрим, что получилось
+РЎРјРѕС‚СЂРёРј, С‡С‚Рѕ РїРѕР»СѓС‡РёР»РѕСЃСЊ
 # mount
 
 /dev/hdb1 on /u01 type ext3 (rw)
 
-Все.
+Р’СЃРµ.
 </pre>
 
 
