--- a/faq18.html
+++ b/faq18.html
@@ -1,24 +1,24 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Диапазоны УКВ</H1>
+  <H1>Р”РёР°РїР°Р·РѕРЅС‹ РЈРљР’</H1>
 
 <pre>
-Таблица диапазонов.
+РўР°Р±Р»РёС†Р° РґРёР°РїР°Р·РѕРЅРѕРІ.
 <div class=csv>fm.csv</div>
 
-Каналы LPD
+РљР°РЅР°Р»С‹ LPD
 <div class=csv3>lpd.csv</div>
 
-Каналы PMR
+РљР°РЅР°Р»С‹ PMR
 <div class=csv>pmr.csv</div>
 
-Коды CTCSS
+РљРѕРґС‹ CTCSS
 <div class=csv2>ctcss.csv</div>
 
 </pre>
