--- a/faq7.html
+++ b/faq7.html
@@ -1,25 +1,25 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Состав и пропорции бетона </H1>
+  <H1>РЎРѕСЃС‚Р°РІ Рё РїСЂРѕРїРѕСЂС†РёРё Р±РµС‚РѕРЅР° </H1>
 
-Вечно забываю, чего и сколько сыпать в бетономешалку, поэтому. 
+Р’РµС‡РЅРѕ Р·Р°Р±С‹РІР°СЋ, С‡РµРіРѕ Рё СЃРєРѕР»СЊРєРѕ СЃС‹РїР°С‚СЊ РІ Р±РµС‚РѕРЅРѕРјРµС€Р°Р»РєСѓ, РїРѕСЌС‚РѕРјСѓ. 
 
 
-<h3>Состав и пропорции бетона из цемента М-400, песка и щебня, таблица</h3> 
+<h3>РЎРѕСЃС‚Р°РІ Рё РїСЂРѕРїРѕСЂС†РёРё Р±РµС‚РѕРЅР° РёР· С†РµРјРµРЅС‚Р° Рњ-400, РїРµСЃРєР° Рё С‰РµР±РЅСЏ, С‚Р°Р±Р»РёС†Р°</h3> 
  
  
 <table border=0 cellpadding=2> 
  <tr> 
-  <th width=100> Марка бетона </th> 
-  <th width=100> Массовый состав, Ц:П:Щ, кг </th> 
-  <th width=100> Объемный состав на 10 л цемента, П:Щ, л </th> 
-  <th width=100> Количество бетона из 10 л цемента, л </th> 
+  <th width=100> РњР°СЂРєР° Р±РµС‚РѕРЅР° </th> 
+  <th width=100> РњР°СЃСЃРѕРІС‹Р№ СЃРѕСЃС‚Р°РІ, Р¦:Рџ:Р©, РєРі </th> 
+  <th width=100> РћР±СЉРµРјРЅС‹Р№ СЃРѕСЃС‚Р°РІ РЅР° 10 Р» С†РµРјРµРЅС‚Р°, Рџ:Р©, Р» </th> 
+  <th width=100> РљРѕР»РёС‡РµСЃС‚РІРѕ Р±РµС‚РѕРЅР° РёР· 10 Р» С†РµРјРµРЅС‚Р°, Р» </th> 
  </tr> 
  <tr align=center> 
   <td>100</td><td> 1 : 4,6 : 7,0 </td><td> 41 : 61 </td><td> 78 </td> 
@@ -46,16 +46,16 @@
  
  
  
-<h3>Бетон из цемента марки М 500, песка и щебня, таблица</h3> 
+<h3>Р‘РµС‚РѕРЅ РёР· С†РµРјРµРЅС‚Р° РјР°СЂРєРё Рњ 500, РїРµСЃРєР° Рё С‰РµР±РЅСЏ, С‚Р°Р±Р»РёС†Р°</h3> 
  
  
  
 <table border=0 cellpadding=2> 
  <tr> 
-  <th width=100> Марка бетона </th> 
-  <th width=100> Массовый состав, Ц:П:Щ, кг </th> 
-  <th width=100> Объемный состав на 10 л цемента, П:Щ, л </th> 
-  <th width=100> Количество бетона из 10 л цемента, л </th> 
+  <th width=100> РњР°СЂРєР° Р±РµС‚РѕРЅР° </th> 
+  <th width=100> РњР°СЃСЃРѕРІС‹Р№ СЃРѕСЃС‚Р°РІ, Р¦:Рџ:Р©, РєРі </th> 
+  <th width=100> РћР±СЉРµРјРЅС‹Р№ СЃРѕСЃС‚Р°РІ РЅР° 10 Р» С†РµРјРµРЅС‚Р°, Рџ:Р©, Р» </th> 
+  <th width=100> РљРѕР»РёС‡РµСЃС‚РІРѕ Р±РµС‚РѕРЅР° РёР· 10 Р» С†РµРјРµРЅС‚Р°, Р» </th> 
  </tr> 
  <tr align=center> 
   <td> 100 </td><td> 1 : 5,8 : 8,1 </td><td> 53 : 71 </td><td> 90 </td> 
@@ -80,7 +80,7 @@
  </tr> 
 </table> 
  
-Взято <a href="http://betonomechalka.ru/257-sostav_i_proporcii_betona_marki_m_100_-_m_450_tablica__ .html">отсюда</a>. 
+Р’Р·СЏС‚Рѕ <a href="http://betonomechalka.ru/257-sostav_i_proporcii_betona_marki_m_100_-_m_450_tablica__В .html">РѕС‚СЃСЋРґР°</a>. 
  
 </BODY>
 </HTML>
