--- a/fb2reader.html
+++ b/fb2reader.html
@@ -1,35 +1,35 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
 
-<h1>Читалка для FB2.</h1>
+<h1>Р§РёС‚Р°Р»РєР° РґР»СЏ FB2.</h1>
 
 <pre>
-Часто возникает задача отобразить на странице контент из файла в формате FB2.
-Браузеры этот формат пока не поддерживают, за исключением внешнего pligin для FireFox.
-FB2 по своей сути обычный XML. А значит его можно при помощи XSLT преобразовать
-в HTML, текст и многое другое. Файлы, осуществляющие такие XSL преобразования 
-лежат <a href="http://www.gribuser.ru/xml/fictionbook/2.0/xsl/export/">здесь</a>.
-Но у них есть несколько недостатков. Во первых они упускают иллюстрации.
-Эту проблему решили <a href="http://habrahabr.ru/blogs/xslt/75827/#habracut">здесь</a>, расширив xsl.
-Работает только в тех браузерах, которые поддерживают ссылку на изображение
-в виде &lt;IMG SRC="data:image/jpeg;base64,бинарное изображение.
-Вторая проблема - кодировка. Как всегда, русский текст нормально не отображает.
-Для того, чтобы работало, надо заменить в xsl файле
+Р§Р°СЃС‚Рѕ РІРѕР·РЅРёРєР°РµС‚ Р·Р°РґР°С‡Р° РѕС‚РѕР±СЂР°Р·РёС‚СЊ РЅР° СЃС‚СЂР°РЅРёС†Рµ РєРѕРЅС‚РµРЅС‚ РёР· С„Р°Р№Р»Р° РІ С„РѕСЂРјР°С‚Рµ FB2.
+Р‘СЂР°СѓР·РµСЂС‹ СЌС‚РѕС‚ С„РѕСЂРјР°С‚ РїРѕРєР° РЅРµ РїРѕРґРґРµСЂР¶РёРІР°СЋС‚, Р·Р° РёСЃРєР»СЋС‡РµРЅРёРµРј РІРЅРµС€РЅРµРіРѕ pligin РґР»СЏ FireFox.
+FB2 РїРѕ СЃРІРѕРµР№ СЃСѓС‚Рё РѕР±С‹С‡РЅС‹Р№ XML. Рђ Р·РЅР°С‡РёС‚ РµРіРѕ РјРѕР¶РЅРѕ РїСЂРё РїРѕРјРѕС‰Рё XSLT РїСЂРµРѕР±СЂР°Р·РѕРІР°С‚СЊ
+РІ HTML, С‚РµРєСЃС‚ Рё РјРЅРѕРіРѕРµ РґСЂСѓРіРѕРµ. Р¤Р°Р№Р»С‹, РѕСЃСѓС‰РµСЃС‚РІР»СЏСЋС‰РёРµ С‚Р°РєРёРµ XSL РїСЂРµРѕР±СЂР°Р·РѕРІР°РЅРёСЏ 
+Р»РµР¶Р°С‚ <a href="http://www.gribuser.ru/xml/fictionbook/2.0/xsl/export/">Р·РґРµСЃСЊ</a>.
+РќРѕ Сѓ РЅРёС… РµСЃС‚СЊ РЅРµСЃРєРѕР»СЊРєРѕ РЅРµРґРѕСЃС‚Р°С‚РєРѕРІ. Р’Рѕ РїРµСЂРІС‹С… РѕРЅРё СѓРїСѓСЃРєР°СЋС‚ РёР»Р»СЋСЃС‚СЂР°С†РёРё.
+Р­С‚Сѓ РїСЂРѕР±Р»РµРјСѓ СЂРµС€РёР»Рё <a href="http://habrahabr.ru/blogs/xslt/75827/#habracut">Р·РґРµСЃСЊ</a>, СЂР°СЃС€РёСЂРёРІ xsl.
+Р Р°Р±РѕС‚Р°РµС‚ С‚РѕР»СЊРєРѕ РІ С‚РµС… Р±СЂР°СѓР·РµСЂР°С…, РєРѕС‚РѕСЂС‹Рµ РїРѕРґРґРµСЂР¶РёРІР°СЋС‚ СЃСЃС‹Р»РєСѓ РЅР° РёР·РѕР±СЂР°Р¶РµРЅРёРµ
+РІ РІРёРґРµ &lt;IMG SRC="data:image/jpeg;base64,Р±РёРЅР°СЂРЅРѕРµ РёР·РѕР±СЂР°Р¶РµРЅРёРµ.
+Р’С‚РѕСЂР°СЏ РїСЂРѕР±Р»РµРјР° - РєРѕРґРёСЂРѕРІРєР°. РљР°Рє РІСЃРµРіРґР°, СЂСѓСЃСЃРєРёР№ С‚РµРєСЃС‚ РЅРѕСЂРјР°Р»СЊРЅРѕ РЅРµ РѕС‚РѕР±СЂР°Р¶Р°РµС‚.
+Р”Р»СЏ С‚РѕРіРѕ, С‡С‚РѕР±С‹ СЂР°Р±РѕС‚Р°Р»Рѕ, РЅР°РґРѕ Р·Р°РјРµРЅРёС‚СЊ РІ xsl С„Р°Р№Р»Рµ
 xsl:output method="xml" encoding="UTF-8"/
-на
+РЅР°
 xsl:output method="xml" encoding="windows-1251"/
  
-Итак.
-<a href="/testbook.fb2">Здесь</a> - исходный текст книги.
-<a href="/fb2html.xslt">Здесь</a> - текст XSL.
+РС‚Р°Рє.
+<a href="/testbook.fb2">Р—РґРµСЃСЊ</a> - РёСЃС…РѕРґРЅС‹Р№ С‚РµРєСЃС‚ РєРЅРёРіРё.
+<a href="/fb2html.xslt">Р—РґРµСЃСЊ</a> - С‚РµРєСЃС‚ XSL.
 
-Вот что получается в результате.
+Р’РѕС‚ С‡С‚Рѕ РїРѕР»СѓС‡Р°РµС‚СЃСЏ РІ СЂРµР·СѓР»СЊС‚Р°С‚Рµ.
 
 </pre>
 
@@ -39,28 +39,28 @@ xsl:output method="xml" encoding="windows-1251"/
 
 <pre>
 
-Здесь текст исходного кода элемента.
+Р—РґРµСЃСЊ С‚РµРєСЃС‚ РёСЃС…РѕРґРЅРѕРіРѕ РєРѕРґР° СЌР»РµРјРµРЅС‚Р°.
 
 <textarea class="preview">fb2_area</textarea>
 
 
-Здесь то, что получается после обработки.
+Р—РґРµСЃСЊ С‚Рѕ, С‡С‚Рѕ РїРѕР»СѓС‡Р°РµС‚СЃСЏ РїРѕСЃР»Рµ РѕР±СЂР°Р±РѕС‚РєРё.
 
 <textarea class="postview">fb2_area</textarea>
 
 
-Чтобы получить автономный файл, который может прочитать браузер,
-необходимо переименовать fb2 в xml и добавить ссылку на xsl.
-Выглядит это так
+Р§С‚РѕР±С‹ РїРѕР»СѓС‡РёС‚СЊ Р°РІС‚РѕРЅРѕРјРЅС‹Р№ С„Р°Р№Р», РєРѕС‚РѕСЂС‹Р№ РјРѕР¶РµС‚ РїСЂРѕС‡РёС‚Р°С‚СЊ Р±СЂР°СѓР·РµСЂ,
+РЅРµРѕР±С…РѕРґРёРјРѕ РїРµСЂРµРёРјРµРЅРѕРІР°С‚СЊ fb2 РІ xml Рё РґРѕР±Р°РІРёС‚СЊ СЃСЃС‹Р»РєСѓ РЅР° xsl.
+Р’С‹РіР»СЏРґРёС‚ СЌС‚Рѕ С‚Р°Рє
 <textarea class="example">
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet type="text/xsl" href="fb22xhtml.xsl"?>
 <FictionBook xmlns="http://www.gribuser.ru/xml/fictionbook/2.0"
 </textarea>
 
-Готовый файл <a href="testbook.xml">здесь</a>.
+Р“РѕС‚РѕРІС‹Р№ С„Р°Р№Р» <a href="testbook.xml">Р·РґРµСЃСЊ</a>.
 
-Всё.
+Р’СЃС‘.
 </pre>
 
 </body>
