--- a/fotogalery.html
+++ b/fotogalery.html
@@ -1,112 +1,112 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Фотогалерея.</H1>
+  <H1>Р¤РѕС‚РѕРіР°Р»РµСЂРµСЏ.</H1>
 
 <pre>
 
-Фотогалерея - это пара "умных" элементов img и select.
+Р¤РѕС‚РѕРіР°Р»РµСЂРµСЏ - СЌС‚Рѕ РїР°СЂР° "СѓРјРЅС‹С…" СЌР»РµРјРµРЅС‚РѕРІ img Рё select.
 
-У img значение class может принимать значения 
-galery_min - в этом случае будет всего 2 кнопки навигации
-или
-galery_max - в этом случае будет всего 4 кнопки навигации и подпись под изображением.
-или
-galery_live - в этом случае навигации не будет, а картинки будут 
-самостоятельно меняться с интервалом 2.5 сек
-или
-galery_show - Навигации так же не будет, будет выведена раскадровка.
+РЈ img Р·РЅР°С‡РµРЅРёРµ class РјРѕР¶РµС‚ РїСЂРёРЅРёРјР°С‚СЊ Р·РЅР°С‡РµРЅРёСЏ 
+galery_min - РІ СЌС‚РѕРј СЃР»СѓС‡Р°Рµ Р±СѓРґРµС‚ РІСЃРµРіРѕ 2 РєРЅРѕРїРєРё РЅР°РІРёРіР°С†РёРё
+РёР»Рё
+galery_max - РІ СЌС‚РѕРј СЃР»СѓС‡Р°Рµ Р±СѓРґРµС‚ РІСЃРµРіРѕ 4 РєРЅРѕРїРєРё РЅР°РІРёРіР°С†РёРё Рё РїРѕРґРїРёСЃСЊ РїРѕРґ РёР·РѕР±СЂР°Р¶РµРЅРёРµРј.
+РёР»Рё
+galery_live - РІ СЌС‚РѕРј СЃР»СѓС‡Р°Рµ РЅР°РІРёРіР°С†РёРё РЅРµ Р±СѓРґРµС‚, Р° РєР°СЂС‚РёРЅРєРё Р±СѓРґСѓС‚ 
+СЃР°РјРѕСЃС‚РѕСЏС‚РµР»СЊРЅРѕ РјРµРЅСЏС‚СЊСЃСЏ СЃ РёРЅС‚РµСЂРІР°Р»РѕРј 2.5 СЃРµРє
+РёР»Рё
+galery_show - РќР°РІРёРіР°С†РёРё С‚Р°Рє Р¶Рµ РЅРµ Р±СѓРґРµС‚, Р±СѓРґРµС‚ РІС‹РІРµРґРµРЅР° СЂР°СЃРєР°РґСЂРѕРІРєР°.
 
-У select значение class может принимать значения 
-galery - в value содержится url картинки, в тексте подпись к ней 
-или
-galery_external - в этом случае список содержится во внешнем файле.
+РЈ select Р·РЅР°С‡РµРЅРёРµ class РјРѕР¶РµС‚ РїСЂРёРЅРёРјР°С‚СЊ Р·РЅР°С‡РµРЅРёСЏ 
+galery - РІ value СЃРѕРґРµСЂР¶РёС‚СЃСЏ url РєР°СЂС‚РёРЅРєРё, РІ С‚РµРєСЃС‚Рµ РїРѕРґРїРёСЃСЊ Рє РЅРµР№ 
+РёР»Рё
+galery_external - РІ СЌС‚РѕРј СЃР»СѓС‡Р°Рµ СЃРїРёСЃРѕРє СЃРѕРґРµСЂР¶РёС‚СЃСЏ РІРѕ РІРЅРµС€РЅРµРј С„Р°Р№Р»Рµ.
 
 
-<b>Это пример с минимальной навигацией и локальным списком фотографий.</b>
+<b>Р­С‚Рѕ РїСЂРёРјРµСЂ СЃ РјРёРЅРёРјР°Р»СЊРЅРѕР№ РЅР°РІРёРіР°С†РёРµР№ Рё Р»РѕРєР°Р»СЊРЅС‹Рј СЃРїРёСЃРєРѕРј С„РѕС‚РѕРіСЂР°С„РёР№.</b>
 
 <span id=area1>
 <img width=300 height=200 border=1 class=galery_min><br> 
 <SELECT id="list1" class=galery>
-  <OPTION VALUE="sat1.jpg">Один</option>
-  <OPTION VALUE="sat2.jpg">Два</option>
-  <OPTION VALUE="sat3.jpg">три</option>
-  <OPTION VALUE="sat4.jpg">четыре</option>
+  <OPTION VALUE="sat1.jpg">РћРґРёРЅ</option>
+  <OPTION VALUE="sat2.jpg">Р”РІР°</option>
+  <OPTION VALUE="sat3.jpg">С‚СЂРё</option>
+  <OPTION VALUE="sat4.jpg">С‡РµС‚С‹СЂРµ</option>
 </SELECT>
 </span>
 
-Здесь текст исходного кода.
+Р—РґРµСЃСЊ С‚РµРєСЃС‚ РёСЃС…РѕРґРЅРѕРіРѕ РєРѕРґР°.
 <textarea class="preview">area1</textarea>
 
 
-<b>Это пример с максимальной навигацией и внешним списком фотографий.</b>
+<b>Р­С‚Рѕ РїСЂРёРјРµСЂ СЃ РјР°РєСЃРёРјР°Р»СЊРЅРѕР№ РЅР°РІРёРіР°С†РёРµР№ Рё РІРЅРµС€РЅРёРј СЃРїРёСЃРєРѕРј С„РѕС‚РѕРіСЂР°С„РёР№.</b>
 
 <span id=area2>
 <img border=1 class=galery_max style="width : 560px"><br> 
 <SELECT class=galery_external><option value="fotogalery.xml"></option></SELECT>
 </span>
 
-Здесь текст исходного кода.
+Р—РґРµСЃСЊ С‚РµРєСЃС‚ РёСЃС…РѕРґРЅРѕРіРѕ РєРѕРґР°.
 <textarea class="preview">area2</textarea>
 
 
-<b>Это пример слайдшоу и локальным списком фотографий.</b> 
+<b>Р­С‚Рѕ РїСЂРёРјРµСЂ СЃР»Р°Р№РґС€РѕСѓ Рё Р»РѕРєР°Р»СЊРЅС‹Рј СЃРїРёСЃРєРѕРј С„РѕС‚РѕРіСЂР°С„РёР№.</b> 
 
-Изображения обновляются автоматически с интервалом 2.5 сек.
+РР·РѕР±СЂР°Р¶РµРЅРёСЏ РѕР±РЅРѕРІР»СЏСЋС‚СЃСЏ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё СЃ РёРЅС‚РµСЂРІР°Р»РѕРј 2.5 СЃРµРє.
 
 <span id=area3>
 <img width=300 height=200 border=1 class=galery_live><br> 
 <SELECT id="list3" class=galery>
-  <OPTION VALUE="sat1.jpg">Один</option>
-  <OPTION VALUE="sat2.jpg">Два</option>
-  <OPTION VALUE="sat3.jpg">три</option>
-  <OPTION VALUE="sat4.jpg">четыре</option>
+  <OPTION VALUE="sat1.jpg">РћРґРёРЅ</option>
+  <OPTION VALUE="sat2.jpg">Р”РІР°</option>
+  <OPTION VALUE="sat3.jpg">С‚СЂРё</option>
+  <OPTION VALUE="sat4.jpg">С‡РµС‚С‹СЂРµ</option>
 </SELECT>
 </span>
 
-Здесь текст исходного кода.
+Р—РґРµСЃСЊ С‚РµРєСЃС‚ РёСЃС…РѕРґРЅРѕРіРѕ РєРѕРґР°.
 <textarea class="preview">area3</textarea>
 
 
-<b>Это пример показа в режиме раскадровки.</b> 
+<b>Р­С‚Рѕ РїСЂРёРјРµСЂ РїРѕРєР°Р·Р° РІ СЂРµР¶РёРјРµ СЂР°СЃРєР°РґСЂРѕРІРєРё.</b> 
 
-Необходим чтобы легко сохранить на локальном диске массив фоторгафий. 
+РќРµРѕР±С…РѕРґРёРј С‡С‚РѕР±С‹ Р»РµРіРєРѕ СЃРѕС…СЂР°РЅРёС‚СЊ РЅР° Р»РѕРєР°Р»СЊРЅРѕРј РґРёСЃРєРµ РјР°СЃСЃРёРІ С„РѕС‚РѕСЂРіР°С„РёР№. 
 <span id=area4>
 <img width=300 height=200 border=1 class=galery_show><br> 
 <SELECT id="list4" class=galery>
-  <OPTION VALUE="sat1.jpg">Один</option>
-  <OPTION VALUE="sat2.jpg">Два</option>
-  <OPTION VALUE="sat3.jpg">три</option>
-  <OPTION VALUE="sat4.jpg">четыре</option>
+  <OPTION VALUE="sat1.jpg">РћРґРёРЅ</option>
+  <OPTION VALUE="sat2.jpg">Р”РІР°</option>
+  <OPTION VALUE="sat3.jpg">С‚СЂРё</option>
+  <OPTION VALUE="sat4.jpg">С‡РµС‚С‹СЂРµ</option>
 </SELECT>
 </span>
 
-Здесь текст исходного кода.
+Р—РґРµСЃСЊ С‚РµРєСЃС‚ РёСЃС…РѕРґРЅРѕРіРѕ РєРѕРґР°.
 <textarea class="preview">area4</textarea>
 
 
-<b>Это пример подготовки конфигурационного файла для flash читалки.</b>
+<b>Р­С‚Рѕ РїСЂРёРјРµСЂ РїРѕРґРіРѕС‚РѕРІРєРё РєРѕРЅС„РёРіСѓСЂР°С†РёРѕРЅРЅРѕРіРѕ С„Р°Р№Р»Р° РґР»СЏ flash С‡РёС‚Р°Р»РєРё.</b>
 
-Вроде бы ерунда, но если каждый день добавлять по 10 ссылок,
-как в случае с Фукусимой...
+Р’СЂРѕРґРµ Р±С‹ РµСЂСѓРЅРґР°, РЅРѕ РµСЃР»Рё РєР°Р¶РґС‹Р№ РґРµРЅСЊ РґРѕР±Р°РІР»СЏС‚СЊ РїРѕ 10 СЃСЃС‹Р»РѕРє,
+РєР°Рє РІ СЃР»СѓС‡Р°Рµ СЃ Р¤СѓРєСѓСЃРёРјРѕР№...
 <span id=area5>
 <img width=300 height=200 border=1 class=galery_flash><br> 
 <SELECT id="list5" class=galery>
-  <OPTION VALUE="sat1.jpg">Один</option>
-  <OPTION VALUE="sat2.jpg">Два</option>
-  <OPTION VALUE="sat3.jpg">три</option>
-  <OPTION VALUE="sat4.jpg">четыре</option>
+  <OPTION VALUE="sat1.jpg">РћРґРёРЅ</option>
+  <OPTION VALUE="sat2.jpg">Р”РІР°</option>
+  <OPTION VALUE="sat3.jpg">С‚СЂРё</option>
+  <OPTION VALUE="sat4.jpg">С‡РµС‚С‹СЂРµ</option>
 </SELECT>
 </span>
 
-Здесь текст исходного кода.
+Р—РґРµСЃСЊ С‚РµРєСЃС‚ РёСЃС…РѕРґРЅРѕРіРѕ РєРѕРґР°.
 <textarea class="preview">area5</textarea>
 
-Всё.
+Р’СЃС‘.
 </body>
 </html>
