--- a/fotogalery0.html
+++ b/fotogalery0.html
@@ -1,5 +1,5 @@
-<html>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+п»ї<html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head>
 <title>#list_title#</title>
 <LINK REL=StyleSheet TYPE=text/css HREF=index_files/style.css>
@@ -140,22 +140,22 @@ function ScanTT() {
 <body id=body1 onLoad="ScanTT();">
 <img width=300 height=200 border=1 class=galery_min><br> 
 <SELECT id="list1" class=galery>
-  <OPTION VALUE="sat1.jpg">Один</option>
-  <OPTION VALUE="sat2.jpg">Два</option>
-  <OPTION VALUE="sat3.jpg">три</option>
-  <OPTION VALUE="sat4.jpg">четыре</option>
-  <OPTION VALUE="sat1.jpg">30 марта 19:00</option>
-  <OPTION VALUE="sat2.jpg">30 марта 18:00</option>
-  <OPTION VALUE="sat3.jpg">30 марта 17:00</option>
-  <OPTION VALUE="sat4.jpg">30 марта 16:00</option>
+  <OPTION VALUE="sat1.jpg">РћРґРёРЅ</option>
+  <OPTION VALUE="sat2.jpg">Р”РІР°</option>
+  <OPTION VALUE="sat3.jpg">С‚СЂРё</option>
+  <OPTION VALUE="sat4.jpg">С‡РµС‚С‹СЂРµ</option>
+  <OPTION VALUE="sat1.jpg">30 РјР°СЂС‚Р° 19:00</option>
+  <OPTION VALUE="sat2.jpg">30 РјР°СЂС‚Р° 18:00</option>
+  <OPTION VALUE="sat3.jpg">30 РјР°СЂС‚Р° 17:00</option>
+  <OPTION VALUE="sat4.jpg">30 РјР°СЂС‚Р° 16:00</option>
 </SELECT><br>
 <img width=300 height=200 border=1 class=galery_max id=qqq><br> 
 <img width=300 height=200 border=1 class=nogalery><br> 
 <SELECT class=galery>
-  <OPTION VALUE="sat1.jpg">Один</option>
-  <OPTION VALUE="sat2.jpg">Два</option>
-  <OPTION VALUE="sat3.jpg">три</option>
-  <OPTION VALUE="sat4.jpg">четыре</option>
+  <OPTION VALUE="sat1.jpg">РћРґРёРЅ</option>
+  <OPTION VALUE="sat2.jpg">Р”РІР°</option>
+  <OPTION VALUE="sat3.jpg">С‚СЂРё</option>
+  <OPTION VALUE="sat4.jpg">С‡РµС‚С‹СЂРµ</option>
   <OPTION VALUE="sat1.jpg">5</option>
   <OPTION VALUE="sat2.jpg">6</option>
   <OPTION VALUE="sat3.jpg">7</option>
