--- a/fukushima.html
+++ b/fukushima.html
@@ -1,17 +1,17 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Архив фотографий с веб камеры АЭС Фукусима</H1>
+  <H1>РђСЂС…РёРІ С„РѕС‚РѕРіСЂР°С„РёР№ СЃ РІРµР± РєР°РјРµСЂС‹ РђР­РЎ Р¤СѓРєСѓСЃРёРјР°</H1>
 
 <pre>
 
-<a href="http://www.tepco.co.jp/nu/f1-np/camera/index-j.html">Online камера TEPCO </a>
-<a href="http://pointscope01.jp/cgi-local/f1np/f1np1/imageview.cgi?mode=past_frame">Архив Pointscope</a>
+<a href="http://www.tepco.co.jp/nu/f1-np/camera/index-j.html">Online РєР°РјРµСЂР° TEPCO </a>
+<a href="http://pointscope01.jp/cgi-local/f1np/f1np1/imageview.cgi?mode=past_frame">РђСЂС…РёРІ Pointscope</a>
 
 <img border=1 class=galery_max style="width : 560px"><br> 
 <SELECT class=galery_external><option value="fukushima.xml"></option></SELECT>
