--- a/galery.html
+++ b/galery.html
@@ -1,12 +1,12 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Фотогалерея.</H1>
+  <H1>Р¤РѕС‚РѕРіР°Р»РµСЂРµСЏ.</H1>
 
   <div class=sitemap_child>sitemap.xml</div>
 
