--- a/geostat.html
+++ b/geostat.html
@@ -1,12 +1,12 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Статистика посещений</H1>
+  <H1>РЎС‚Р°С‚РёСЃС‚РёРєР° РїРѕСЃРµС‰РµРЅРёР№</H1>
 <a href="http://www2.clustrmaps.com/ru/counter/maps.php?url=http://ochicherin.narod.ru" target="_blank">
 <img width=570 height=350 src="http://www2.clustrmaps.com/ru/stats/maps-clusters/ochicherin.narod.ru-world.jpg" border=0>
 </a> 
