--- a/index.html
+++ b/index.html
@@ -1,46 +1,46 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <link rel="shortcut icon" href="favicon.ico">
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
   <script src="script.js"></script>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Итак, главная страница</H1>
+  <H1>РС‚Р°Рє, РіР»Р°РІРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°</H1>
 <pre>
   <div class="tty" id="tty1">
    
-   На главной странице обычно пишут, зачем этот сайт и для чего.
+   РќР° РіР»Р°РІРЅРѕР№ СЃС‚СЂР°РЅРёС†Рµ РѕР±С‹С‡РЅРѕ РїРёС€СѓС‚, Р·Р°С‡РµРј СЌС‚РѕС‚ СЃР°Р№С‚ Рё РґР»СЏ С‡РµРіРѕ.
   
-Сначало конечно было имя. Вернее желание его зарезервировать. 
-Тут же попытался нарисовать что-нибудь в дизайнере Яндекса.       
-Сил хватило только на "Hello    
-                                 world" остался в планах на будущее.
+РЎРЅР°С‡Р°Р»Рѕ РєРѕРЅРµС‡РЅРѕ Р±С‹Р»Рѕ РёРјСЏ. Р’РµСЂРЅРµРµ Р¶РµР»Р°РЅРёРµ РµРіРѕ Р·Р°СЂРµР·РµСЂРІРёСЂРѕРІР°С‚СЊ. 
+РўСѓС‚ Р¶Рµ РїРѕРїС‹С‚Р°Р»СЃСЏ РЅР°СЂРёСЃРѕРІР°С‚СЊ С‡С‚Рѕ-РЅРёР±СѓРґСЊ РІ РґРёР·Р°Р№РЅРµСЂРµ РЇРЅРґРµРєСЃР°.       
+РЎРёР» С…РІР°С‚РёР»Рѕ С‚РѕР»СЊРєРѕ РЅР° "Hello    
+                                 world" РѕСЃС‚Р°Р»СЃСЏ РІ РїР»Р°РЅР°С… РЅР° Р±СѓРґСѓС‰РµРµ.
  
 
-А потом пришло письмо от Яндекса, 
-     что на сайт уже три года никто не ходит, 
-      ничего не меняется 
-  пора его закрывать и освобожать место тем, кому это нужнее.
+Рђ РїРѕС‚РѕРј РїСЂРёС€Р»Рѕ РїРёСЃСЊРјРѕ РѕС‚ РЇРЅРґРµРєСЃР°, 
+     С‡С‚Рѕ РЅР° СЃР°Р№С‚ СѓР¶Рµ С‚СЂРё РіРѕРґР° РЅРёРєС‚Рѕ РЅРµ С…РѕРґРёС‚, 
+      РЅРёС‡РµРіРѕ РЅРµ РјРµРЅСЏРµС‚СЃСЏ 
+  РїРѕСЂР° РµРіРѕ Р·Р°РєСЂС‹РІР°С‚СЊ Рё РѕСЃРІРѕР±РѕР¶Р°С‚СЊ РјРµСЃС‚Рѕ С‚РµРј, РєРѕРјСѓ СЌС‚Рѕ РЅСѓР¶РЅРµРµ.
   
-Задело за живое - пришлось обновляться. 
+Р—Р°РґРµР»Рѕ Р·Р° Р¶РёРІРѕРµ - РїСЂРёС€Р»РѕСЃСЊ РѕР±РЅРѕРІР»СЏС‚СЊСЃСЏ. 
  
-В дизайнере рисовать было скучно и неинтересно. 
-Значит надо рисовать HTML самому. 
+Р’ РґРёР·Р°Р№РЅРµСЂРµ СЂРёСЃРѕРІР°С‚СЊ Р±С‹Р»Рѕ СЃРєСѓС‡РЅРѕ Рё РЅРµРёРЅС‚РµСЂРµСЃРЅРѕ. 
+Р—РЅР°С‡РёС‚ РЅР°РґРѕ СЂРёСЃРѕРІР°С‚СЊ HTML СЃР°РјРѕРјСѓ. 
  
-Так в общем и родилась концепция сайта. 
+РўР°Рє РІ РѕР±С‰РµРј Рё СЂРѕРґРёР»Р°СЃСЊ РєРѕРЅС†РµРїС†РёСЏ СЃР°Р№С‚Р°. 
  
-Страницы должны быть маленькие, 
-делаться в обычном текстовом редакторе, как это всегда и делалось.
+РЎС‚СЂР°РЅРёС†С‹ РґРѕР»Р¶РЅС‹ Р±С‹С‚СЊ РјР°Р»РµРЅСЊРєРёРµ, 
+РґРµР»Р°С‚СЊСЃСЏ РІ РѕР±С‹С‡РЅРѕРј С‚РµРєСЃС‚РѕРІРѕРј СЂРµРґР°РєС‚РѕСЂРµ, РєР°Рє СЌС‚Рѕ РІСЃРµРіРґР° Рё РґРµР»Р°Р»РѕСЃСЊ.
  
-С другой стороны должено же быть хотя бы какое-нибудь подобие дизайна, 
-с одной стороны должна быть рамочка, с другой какие-нибудь часики.
+РЎ РґСЂСѓРіРѕР№ СЃС‚РѕСЂРѕРЅС‹ РґРѕР»Р¶РµРЅРѕ Р¶Рµ Р±С‹С‚СЊ С…РѕС‚СЏ Р±С‹ РєР°РєРѕРµ-РЅРёР±СѓРґСЊ РїРѕРґРѕР±РёРµ РґРёР·Р°Р№РЅР°, 
+СЃ РѕРґРЅРѕР№ СЃС‚РѕСЂРѕРЅС‹ РґРѕР»Р¶РЅР° Р±С‹С‚СЊ СЂР°РјРѕС‡РєР°, СЃ РґСЂСѓРіРѕР№ РєР°РєРёРµ-РЅРёР±СѓРґСЊ С‡Р°СЃРёРєРё.
 
   
-Вот и делаю понемногу.
+Р’РѕС‚ Рё РґРµР»Р°СЋ РїРѕРЅРµРјРЅРѕРіСѓ.
              
-                                                 Иногда получается. :)
+                                                 РРЅРѕРіРґР° РїРѕР»СѓС‡Р°РµС‚СЃСЏ. :)
  
  
 </div>
