--- a/lib.html
+++ b/lib.html
@@ -1,16 +1,16 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Библиотека</H1>
-<p>Здесь, как и положено библиотеке накапливаются полезные книги и публикации. 
-В основном - технической направленности. Частично раздел дублируется с 
-разделом <a href="links.html">Ссылки</a>. Копираст связан с тем, что оригинальный 
-текст может быть утерян, а здесь все останется.</p>
+  <H1>Р‘РёР±Р»РёРѕС‚РµРєР°</H1>
+<p>Р—РґРµСЃСЊ, РєР°Рє Рё РїРѕР»РѕР¶РµРЅРѕ Р±РёР±Р»РёРѕС‚РµРєРµ РЅР°РєР°РїР»РёРІР°СЋС‚СЃСЏ РїРѕР»РµР·РЅС‹Рµ РєРЅРёРіРё Рё РїСѓР±Р»РёРєР°С†РёРё. 
+Р’ РѕСЃРЅРѕРІРЅРѕРј - С‚РµС…РЅРёС‡РµСЃРєРѕР№ РЅР°РїСЂР°РІР»РµРЅРЅРѕСЃС‚Рё. Р§Р°СЃС‚РёС‡РЅРѕ СЂР°Р·РґРµР» РґСѓР±Р»РёСЂСѓРµС‚СЃСЏ СЃ 
+СЂР°Р·РґРµР»РѕРј <a href="links.html">РЎСЃС‹Р»РєРё</a>. РљРѕРїРёСЂР°СЃС‚ СЃРІСЏР·Р°РЅ СЃ С‚РµРј, С‡С‚Рѕ РѕСЂРёРіРёРЅР°Р»СЊРЅС‹Р№ 
+С‚РµРєСЃС‚ РјРѕР¶РµС‚ Р±С‹С‚СЊ СѓС‚РµСЂСЏРЅ, Р° Р·РґРµСЃСЊ РІСЃРµ РѕСЃС‚Р°РЅРµС‚СЃСЏ.</p>
 
 <div class=sitemap_child>sitemap.xml</div>
 
