--- a/management.html
+++ b/management.html
@@ -1,13 +1,13 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Проблемы управления</H1>
-<p>Здесь, собраны публикации, смешные и не очень смешные о проблемах управления в ИТ.
+  <H1>РџСЂРѕР±Р»РµРјС‹ СѓРїСЂР°РІР»РµРЅРёСЏ</H1>
+<p>Р—РґРµСЃСЊ, СЃРѕР±СЂР°РЅС‹ РїСѓР±Р»РёРєР°С†РёРё, СЃРјРµС€РЅС‹Рµ Рё РЅРµ РѕС‡РµРЅСЊ СЃРјРµС€РЅС‹Рµ Рѕ РїСЂРѕР±Р»РµРјР°С… СѓРїСЂР°РІР»РµРЅРёСЏ РІ РРў.
 </p>
 
 <div class=sitemap_child>sitemap.xml</div>
