--- a/menu.html
+++ b/menu.html
@@ -1,13 +1,13 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <link rel="shortcut icon" href="favicon.ico">
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
   <script src="script.js"></script>
 </HEAD>
 <BODY onLoad="onLoad=initBody();GetRSS(example,'menu.xml','menu.xslt');allClose(example.childNodes[0]);">
-  <h1> Пример меню</h1>
+  <h1> РџСЂРёРјРµСЂ РјРµРЅСЋ</h1>
   <div id=example></div>
 </BODY>
 </HTML>
