--- a/mgt02.html
+++ b/mgt02.html
@@ -1,47 +1,47 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
 
-<H1>Типовые вопросы для взаимодействия с разработчиком.</H1>
+<H1>РўРёРїРѕРІС‹Рµ РІРѕРїСЂРѕСЃС‹ РґР»СЏ РІР·Р°РёРјРѕРґРµР№СЃС‚РІРёСЏ СЃ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРѕРј.</H1>
 <ol>
-<li> Когда будет сделано?
-<li> Почему до сих пор не сделано?
-<li> Как так получилось?
-<li> Почему я ничего не знал?
-<li> Почему меня не предупредили о последствиях?
-<li> Почему меня не предупредили о последствиях моего мужественного решения?
-<li> Можно ли было этого избежать?
-<li> Что тут делать?
-<li> Почему все так сложно?
-<li> Какая у нас ситуация?
-<li> Могу я доложить, что все работает? 
-<li> Чего они там делают?
-<li> Вы можете дать гарантию, что ничего не случиться?
-<li> Когда я смогу поехать что-нибудь показать?
-<li> Ты придумал, как мы будем выбираться из возникшей ситуации?
-<li> Из-за чего это случилось и что нужно сделать чтобы такое не повторилось?
-<li> Есть ли какой-нибудь еще выход, кроме этого?
-<li> Как сделать, чтобы все было хорошо?
-<li> Там нормальная винда стоит или Android?
-<li> Как у вас продвигаются дела?
-<li> Когда я смогу на что-нибудь покликать?
-<li> Вы деплоиться собираетесь?
-<li> Сколько еще раз мы должны выглядеть чудаками?
-<li> Старый индекс нельзя на место поставить?
-<li> Что вы сегодня планируете делать?
-<li> Ты чем сейчас занимаешься?
-<li> Где ты был?
-<li> Можно это сделать в фоновом режиме?
-<li> Ну как, процесс идет? (<i>сокр.</i> Ну чё?)
-<li> Точно не успеешь?
-<li> Можно это сделать ночью?
-<li> Можно объяснить это так, чтобы даже я это понял и мог заказчику рассказать?
-<li> А что такое XSLT?
+<li> РљРѕРіРґР° Р±СѓРґРµС‚ СЃРґРµР»Р°РЅРѕ?
+<li> РџРѕС‡РµРјСѓ РґРѕ СЃРёС… РїРѕСЂ РЅРµ СЃРґРµР»Р°РЅРѕ?
+<li> РљР°Рє С‚Р°Рє РїРѕР»СѓС‡РёР»РѕСЃСЊ?
+<li> РџРѕС‡РµРјСѓ СЏ РЅРёС‡РµРіРѕ РЅРµ Р·РЅР°Р»?
+<li> РџРѕС‡РµРјСѓ РјРµРЅСЏ РЅРµ РїСЂРµРґСѓРїСЂРµРґРёР»Рё Рѕ РїРѕСЃР»РµРґСЃС‚РІРёСЏС…?
+<li> РџРѕС‡РµРјСѓ РјРµРЅСЏ РЅРµ РїСЂРµРґСѓРїСЂРµРґРёР»Рё Рѕ РїРѕСЃР»РµРґСЃС‚РІРёСЏС… РјРѕРµРіРѕ РјСѓР¶РµСЃС‚РІРµРЅРЅРѕРіРѕ СЂРµС€РµРЅРёСЏ?
+<li> РњРѕР¶РЅРѕ Р»Рё Р±С‹Р»Рѕ СЌС‚РѕРіРѕ РёР·Р±РµР¶Р°С‚СЊ?
+<li> Р§С‚Рѕ С‚СѓС‚ РґРµР»Р°С‚СЊ?
+<li> РџРѕС‡РµРјСѓ РІСЃРµ С‚Р°Рє СЃР»РѕР¶РЅРѕ?
+<li> РљР°РєР°СЏ Сѓ РЅР°СЃ СЃРёС‚СѓР°С†РёСЏ?
+<li> РњРѕРіСѓ СЏ РґРѕР»РѕР¶РёС‚СЊ, С‡С‚Рѕ РІСЃРµ СЂР°Р±РѕС‚Р°РµС‚? 
+<li> Р§РµРіРѕ РѕРЅРё С‚Р°Рј РґРµР»Р°СЋС‚?
+<li> Р’С‹ РјРѕР¶РµС‚Рµ РґР°С‚СЊ РіР°СЂР°РЅС‚РёСЋ, С‡С‚Рѕ РЅРёС‡РµРіРѕ РЅРµ СЃР»СѓС‡РёС‚СЊСЃСЏ?
+<li> РљРѕРіРґР° СЏ СЃРјРѕРіСѓ РїРѕРµС…Р°С‚СЊ С‡С‚Рѕ-РЅРёР±СѓРґСЊ РїРѕРєР°Р·Р°С‚СЊ?
+<li> РўС‹ РїСЂРёРґСѓРјР°Р», РєР°Рє РјС‹ Р±СѓРґРµРј РІС‹Р±РёСЂР°С‚СЊСЃСЏ РёР· РІРѕР·РЅРёРєС€РµР№ СЃРёС‚СѓР°С†РёРё?
+<li> РР·-Р·Р° С‡РµРіРѕ СЌС‚Рѕ СЃР»СѓС‡РёР»РѕСЃСЊ Рё С‡С‚Рѕ РЅСѓР¶РЅРѕ СЃРґРµР»Р°С‚СЊ С‡С‚РѕР±С‹ С‚Р°РєРѕРµ РЅРµ РїРѕРІС‚РѕСЂРёР»РѕСЃСЊ?
+<li> Р•СЃС‚СЊ Р»Рё РєР°РєРѕР№-РЅРёР±СѓРґСЊ РµС‰Рµ РІС‹С…РѕРґ, РєСЂРѕРјРµ СЌС‚РѕРіРѕ?
+<li> РљР°Рє СЃРґРµР»Р°С‚СЊ, С‡С‚РѕР±С‹ РІСЃРµ Р±С‹Р»Рѕ С…РѕСЂРѕС€Рѕ?
+<li> РўР°Рј РЅРѕСЂРјР°Р»СЊРЅР°СЏ РІРёРЅРґР° СЃС‚РѕРёС‚ РёР»Рё Android?
+<li> РљР°Рє Сѓ РІР°СЃ РїСЂРѕРґРІРёРіР°СЋС‚СЃСЏ РґРµР»Р°?
+<li> РљРѕРіРґР° СЏ СЃРјРѕРіСѓ РЅР° С‡С‚Рѕ-РЅРёР±СѓРґСЊ РїРѕРєР»РёРєР°С‚СЊ?
+<li> Р’С‹ РґРµРїР»РѕРёС‚СЊСЃСЏ СЃРѕР±РёСЂР°РµС‚РµСЃСЊ?
+<li> РЎРєРѕР»СЊРєРѕ РµС‰Рµ СЂР°Р· РјС‹ РґРѕР»Р¶РЅС‹ РІС‹РіР»СЏРґРµС‚СЊ С‡СѓРґР°РєР°РјРё?
+<li> РЎС‚Р°СЂС‹Р№ РёРЅРґРµРєСЃ РЅРµР»СЊР·СЏ РЅР° РјРµСЃС‚Рѕ РїРѕСЃС‚Р°РІРёС‚СЊ?
+<li> Р§С‚Рѕ РІС‹ СЃРµРіРѕРґРЅСЏ РїР»Р°РЅРёСЂСѓРµС‚Рµ РґРµР»Р°С‚СЊ?
+<li> РўС‹ С‡РµРј СЃРµР№С‡Р°СЃ Р·Р°РЅРёРјР°РµС€СЊСЃСЏ?
+<li> Р“РґРµ С‚С‹ Р±С‹Р»?
+<li> РњРѕР¶РЅРѕ СЌС‚Рѕ СЃРґРµР»Р°С‚СЊ РІ С„РѕРЅРѕРІРѕРј СЂРµР¶РёРјРµ?
+<li> РќСѓ РєР°Рє, РїСЂРѕС†РµСЃСЃ РёРґРµС‚? (<i>СЃРѕРєСЂ.</i> РќСѓ С‡С‘?)
+<li> РўРѕС‡РЅРѕ РЅРµ СѓСЃРїРµРµС€СЊ?
+<li> РњРѕР¶РЅРѕ СЌС‚Рѕ СЃРґРµР»Р°С‚СЊ РЅРѕС‡СЊСЋ?
+<li> РњРѕР¶РЅРѕ РѕР±СЉСЏСЃРЅРёС‚СЊ СЌС‚Рѕ С‚Р°Рє, С‡С‚РѕР±С‹ РґР°Р¶Рµ СЏ СЌС‚Рѕ РїРѕРЅСЏР» Рё РјРѕРі Р·Р°РєР°Р·С‡РёРєСѓ СЂР°СЃСЃРєР°Р·Р°С‚СЊ?
+<li> Рђ С‡С‚Рѕ С‚Р°РєРѕРµ XSLT?
 </ol>
 
 </BODY>
