--- a/mgt03.html
+++ b/mgt03.html
@@ -1,75 +1,75 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
 
 <i>
-Эта статья была переведена с английского неизвестным мне автором.
-Оригинал ее видимо находится здесь <a href="http://www.planningforfailure.com/post/1461931855/the-problem-with-working-overtime">The Problem with Working Overtime</a>. 
-Потом она методом copy/paste размножилась по интернету, сохранив везде родовую травму. 
-Фраза "In most organizations, it's usually management coming to the team and either asking or mandating that they work overtime." 
-была переведена как "Кто в вашей компании вызывается работать сверхурочно? Обычно это не разработчики, а менеджеры, либо просящие, либо требующие трудовых подвигов.".
-Мною русский текст взят <a href="http://habrahabr.ru/blogs/pm/107556/">отсюда</a>.
+Р­С‚Р° СЃС‚Р°С‚СЊСЏ Р±С‹Р»Р° РїРµСЂРµРІРµРґРµРЅР° СЃ Р°РЅРіР»РёР№СЃРєРѕРіРѕ РЅРµРёР·РІРµСЃС‚РЅС‹Рј РјРЅРµ Р°РІС‚РѕСЂРѕРј.
+РћСЂРёРіРёРЅР°Р» РµРµ РІРёРґРёРјРѕ РЅР°С…РѕРґРёС‚СЃСЏ Р·РґРµСЃСЊ <a href="http://www.planningforfailure.com/post/1461931855/the-problem-with-working-overtime">The Problem with Working Overtime</a>. 
+РџРѕС‚РѕРј РѕРЅР° РјРµС‚РѕРґРѕРј copy/paste СЂР°Р·РјРЅРѕР¶РёР»Р°СЃСЊ РїРѕ РёРЅС‚РµСЂРЅРµС‚Сѓ, СЃРѕС…СЂР°РЅРёРІ РІРµР·РґРµ СЂРѕРґРѕРІСѓСЋ С‚СЂР°РІРјСѓ. 
+Р¤СЂР°Р·Р° "In most organizations, it's usually management coming to the team and either asking or mandating that they work overtime." 
+Р±С‹Р»Р° РїРµСЂРµРІРµРґРµРЅР° РєР°Рє "РљС‚Рѕ РІ РІР°С€РµР№ РєРѕРјРїР°РЅРёРё РІС‹Р·С‹РІР°РµС‚СЃСЏ СЂР°Р±РѕС‚Р°С‚СЊ СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕ? РћР±С‹С‡РЅРѕ СЌС‚Рѕ РЅРµ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРё, Р° РјРµРЅРµРґР¶РµСЂС‹, Р»РёР±Рѕ РїСЂРѕСЃСЏС‰РёРµ, Р»РёР±Рѕ С‚СЂРµР±СѓСЋС‰РёРµ С‚СЂСѓРґРѕРІС‹С… РїРѕРґРІРёРіРѕРІ.".
+РњРЅРѕСЋ СЂСѓСЃСЃРєРёР№ С‚РµРєСЃС‚ РІР·СЏС‚ <a href="http://habrahabr.ru/blogs/pm/107556/">РѕС‚СЃСЋРґР°</a>.
 </i>
 
-<h1>Сверхурочные? Теперь у вас две проблемы!</h1>
+<h1>РЎРІРµСЂС…СѓСЂРѕС‡РЅС‹Рµ? РўРµРїРµСЂСЊ Сѓ РІР°СЃ РґРІРµ РїСЂРѕР±Р»РµРјС‹!</h1>
 <p>
-В одной старой шутке говорится: если у вас есть проблема, и вы собираетесь решать ее с использованием регулярных выражений, то у вас есть две проблемы. Мне кажется, сверхурочная работа - что-то из той же серии. Я сформулировал бы это так: если у команды есть проблема, и для ее решения планируется работать сверхурочно, то у команды две проблемы. В чем же заключается вторая проблема? 
+Р’ РѕРґРЅРѕР№ СЃС‚Р°СЂРѕР№ С€СѓС‚РєРµ РіРѕРІРѕСЂРёС‚СЃСЏ: РµСЃР»Рё Сѓ РІР°СЃ РµСЃС‚СЊ РїСЂРѕР±Р»РµРјР°, Рё РІС‹ СЃРѕР±РёСЂР°РµС‚РµСЃСЊ СЂРµС€Р°С‚СЊ РµРµ СЃ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµРј СЂРµРіСѓР»СЏСЂРЅС‹С… РІС‹СЂР°Р¶РµРЅРёР№, С‚Рѕ Сѓ РІР°СЃ РµСЃС‚СЊ РґРІРµ РїСЂРѕР±Р»РµРјС‹. РњРЅРµ РєР°Р¶РµС‚СЃСЏ, СЃРІРµСЂС…СѓСЂРѕС‡РЅР°СЏ СЂР°Р±РѕС‚Р° - С‡С‚Рѕ-С‚Рѕ РёР· С‚РѕР№ Р¶Рµ СЃРµСЂРёРё. РЇ СЃС„РѕСЂРјСѓР»РёСЂРѕРІР°Р» Р±С‹ СЌС‚Рѕ С‚Р°Рє: РµСЃР»Рё Сѓ РєРѕРјР°РЅРґС‹ РµСЃС‚СЊ РїСЂРѕР±Р»РµРјР°, Рё РґР»СЏ РµРµ СЂРµС€РµРЅРёСЏ РїР»Р°РЅРёСЂСѓРµС‚СЃСЏ СЂР°Р±РѕС‚Р°С‚СЊ СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕ, С‚Рѕ Сѓ РєРѕРјР°РЅРґС‹ РґРІРµ РїСЂРѕР±Р»РµРјС‹. Р’ С‡РµРј Р¶Рµ Р·Р°РєР»СЋС‡Р°РµС‚СЃСЏ РІС‚РѕСЂР°СЏ РїСЂРѕР±Р»РµРјР°? 
 </p>
 <p>
-У регулярной сверхурочной работы множество вредных последствий - как для команды, так и для компании. Давайте их рассмотрим.
-</p>
-
-<h3>Истощение</h3>
-<p>
-Очевидно, что люди, много работающие сверхурочно, устают, и со временем усталость переходит в истощение - как физическое, так и моральное. Само собой, для здоровья тоже мало хорошего.
+РЈ СЂРµРіСѓР»СЏСЂРЅРѕР№ СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕР№ СЂР°Р±РѕС‚С‹ РјРЅРѕР¶РµСЃС‚РІРѕ РІСЂРµРґРЅС‹С… РїРѕСЃР»РµРґСЃС‚РІРёР№ - РєР°Рє РґР»СЏ РєРѕРјР°РЅРґС‹, С‚Р°Рє Рё РґР»СЏ РєРѕРјРїР°РЅРёРё. Р”Р°РІР°Р№С‚Рµ РёС… СЂР°СЃСЃРјРѕС‚СЂРёРј.
 </p>
 
-<h3>Недоработки</h3>
+<h3>РСЃС‚РѕС‰РµРЅРёРµ</h3>
 <p>
-Чем больше времени люди тратят на работу, тем меньше его остается не только на отдых, но и на личную жизнь во всех ее проявлениях. Следовательно, на работе они будут менее сосредоточенны и больше отвлекаться. В пределе они неизбежно начнут решать личные вопросы в рабочее время, участятся прогулы, больничные и времена "удаленной работы" - и с этим будет крайне сложно бороться. Сочетание этих факторов называется недоработками (undertime).
+РћС‡РµРІРёРґРЅРѕ, С‡С‚Рѕ Р»СЋРґРё, РјРЅРѕРіРѕ СЂР°Р±РѕС‚Р°СЋС‰РёРµ СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕ, СѓСЃС‚Р°СЋС‚, Рё СЃРѕ РІСЂРµРјРµРЅРµРј СѓСЃС‚Р°Р»РѕСЃС‚СЊ РїРµСЂРµС…РѕРґРёС‚ РІ РёСЃС‚РѕС‰РµРЅРёРµ - РєР°Рє С„РёР·РёС‡РµСЃРєРѕРµ, С‚Р°Рє Рё РјРѕСЂР°Р»СЊРЅРѕРµ. РЎР°РјРѕ СЃРѕР±РѕР№, РґР»СЏ Р·РґРѕСЂРѕРІСЊСЏ С‚РѕР¶Рµ РјР°Р»Рѕ С…РѕСЂРѕС€РµРіРѕ.
 </p>
 
-<h3>Демотивация</h3>
+<h3>РќРµРґРѕСЂР°Р±РѕС‚РєРё</h3>
 <p>
-Еще одно очевидное последствие постоянных сверхурочных - демотивация. Кому нравятся эти гонки на выживание? Кому приятно вновь и вновь слышать от руководства "ваше беспокойство оправдано, проект неизбежно провалится, но мы должны продолжать пытаться написать что-то приемлемое к сроку"? Лично мне не хотелось бы провести в такой компании много времени.
+Р§РµРј Р±РѕР»СЊС€Рµ РІСЂРµРјРµРЅРё Р»СЋРґРё С‚СЂР°С‚СЏС‚ РЅР° СЂР°Р±РѕС‚Сѓ, С‚РµРј РјРµРЅСЊС€Рµ РµРіРѕ РѕСЃС‚Р°РµС‚СЃСЏ РЅРµ С‚РѕР»СЊРєРѕ РЅР° РѕС‚РґС‹С…, РЅРѕ Рё РЅР° Р»РёС‡РЅСѓСЋ Р¶РёР·РЅСЊ РІРѕ РІСЃРµС… РµРµ РїСЂРѕСЏРІР»РµРЅРёСЏС…. РЎР»РµРґРѕРІР°С‚РµР»СЊРЅРѕ, РЅР° СЂР°Р±РѕС‚Рµ РѕРЅРё Р±СѓРґСѓС‚ РјРµРЅРµРµ СЃРѕСЃСЂРµРґРѕС‚РѕС‡РµРЅРЅС‹ Рё Р±РѕР»СЊС€Рµ РѕС‚РІР»РµРєР°С‚СЊСЃСЏ. Р’ РїСЂРµРґРµР»Рµ РѕРЅРё РЅРµРёР·Р±РµР¶РЅРѕ РЅР°С‡РЅСѓС‚ СЂРµС€Р°С‚СЊ Р»РёС‡РЅС‹Рµ РІРѕРїСЂРѕСЃС‹ РІ СЂР°Р±РѕС‡РµРµ РІСЂРµРјСЏ, СѓС‡Р°СЃС‚СЏС‚СЃСЏ РїСЂРѕРіСѓР»С‹, Р±РѕР»СЊРЅРёС‡РЅС‹Рµ Рё РІСЂРµРјРµРЅР° "СѓРґР°Р»РµРЅРЅРѕР№ СЂР°Р±РѕС‚С‹" - Рё СЃ СЌС‚РёРј Р±СѓРґРµС‚ РєСЂР°Р№РЅРµ СЃР»РѕР¶РЅРѕ Р±РѕСЂРѕС‚СЊСЃСЏ. РЎРѕС‡РµС‚Р°РЅРёРµ СЌС‚РёС… С„Р°РєС‚РѕСЂРѕРІ РЅР°Р·С‹РІР°РµС‚СЃСЏ РЅРµРґРѕСЂР°Р±РѕС‚РєР°РјРё (undertime).
 </p>
 
-<h3>Текучесть кадров и утрата неявных знаний</h3>
+<h3>Р”РµРјРѕС‚РёРІР°С†РёСЏ</h3>
 <p>
-Со временем истощенные и утратившие всякую веру сотрудники начнут искать другую работу - и найдут ее. Как следствие, будут необратимо утеряны <a href="http://ru.wikipedia.org/wiki/%D0%9D%D0%B5%D1%8F%D0%B2%D0%BD%D0%BE%D0%B5_%D0%B7%D0%BD%D0%B0%D0%BD%D0%B8%D0%B5">неявные знания</a> о том, что уже сделано по проекту. Тем самым дальнейшая работа еще усложнится - люди, которые понимали, что и как здесь крутится, здесь уже не работают.
+Р•С‰Рµ РѕРґРЅРѕ РѕС‡РµРІРёРґРЅРѕРµ РїРѕСЃР»РµРґСЃС‚РІРёРµ РїРѕСЃС‚РѕСЏРЅРЅС‹С… СЃРІРµСЂС…СѓСЂРѕС‡РЅС‹С… - РґРµРјРѕС‚РёРІР°С†РёСЏ. РљРѕРјСѓ РЅСЂР°РІСЏС‚СЃСЏ СЌС‚Рё РіРѕРЅРєРё РЅР° РІС‹Р¶РёРІР°РЅРёРµ? РљРѕРјСѓ РїСЂРёСЏС‚РЅРѕ РІРЅРѕРІСЊ Рё РІРЅРѕРІСЊ СЃР»С‹С€Р°С‚СЊ РѕС‚ СЂСѓРєРѕРІРѕРґСЃС‚РІР° "РІР°С€Рµ Р±РµСЃРїРѕРєРѕР№СЃС‚РІРѕ РѕРїСЂР°РІРґР°РЅРѕ, РїСЂРѕРµРєС‚ РЅРµРёР·Р±РµР¶РЅРѕ РїСЂРѕРІР°Р»РёС‚СЃСЏ, РЅРѕ РјС‹ РґРѕР»Р¶РЅС‹ РїСЂРѕРґРѕР»Р¶Р°С‚СЊ РїС‹С‚Р°С‚СЊСЃСЏ РЅР°РїРёСЃР°С‚СЊ С‡С‚Рѕ-С‚Рѕ РїСЂРёРµРјР»РµРјРѕРµ Рє СЃСЂРѕРєСѓ"? Р›РёС‡РЅРѕ РјРЅРµ РЅРµ С…РѕС‚РµР»РѕСЃСЊ Р±С‹ РїСЂРѕРІРµСЃС‚Рё РІ С‚Р°РєРѕР№ РєРѕРјРїР°РЅРёРё РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё.
 </p>
 
-<h3>Потеря качества и технический долг</h3>
+<h3>РўРµРєСѓС‡РµСЃС‚СЊ РєР°РґСЂРѕРІ Рё СѓС‚СЂР°С‚Р° РЅРµСЏРІРЅС‹С… Р·РЅР°РЅРёР№</h3>
 <p>
-Когда сроки поджимают, а сил ни у кого нет, в первую очередь жертвуют качеством. Это нормально - все мы знаем о <a href="http://en.wikipedia.org/wiki/Technical_debt">техническом долге</a> (метафора, означающая результаты небрежного проектирования и разработки системы), и на этот раз можно немного задолжать - мы обязательно расплатимся потом, правда? Нет. Компании, рассматривающие сверхурочные как нормальное решение проблем, никогда не возвращают этот долг. Небрежность сегодня означает еще несколько срочных багов завтра, с которыми придется расправляться в том же режиме. Кроме того, качество самого кода ухудшается, его становится сложнее дорабатывать, и изменения занимают еще больше времени. 
+РЎРѕ РІСЂРµРјРµРЅРµРј РёСЃС‚РѕС‰РµРЅРЅС‹Рµ Рё СѓС‚СЂР°С‚РёРІС€РёРµ РІСЃСЏРєСѓСЋ РІРµСЂСѓ СЃРѕС‚СЂСѓРґРЅРёРєРё РЅР°С‡РЅСѓС‚ РёСЃРєР°С‚СЊ РґСЂСѓРіСѓСЋ СЂР°Р±РѕС‚Сѓ - Рё РЅР°Р№РґСѓС‚ РµРµ. РљР°Рє СЃР»РµРґСЃС‚РІРёРµ, Р±СѓРґСѓС‚ РЅРµРѕР±СЂР°С‚РёРјРѕ СѓС‚РµСЂСЏРЅС‹ <a href="http://ru.wikipedia.org/wiki/%D0%9D%D0%B5%D1%8F%D0%B2%D0%BD%D0%BE%D0%B5_%D0%B7%D0%BD%D0%B0%D0%BD%D0%B8%D0%B5">РЅРµСЏРІРЅС‹Рµ Р·РЅР°РЅРёСЏ</a> Рѕ С‚РѕРј, С‡С‚Рѕ СѓР¶Рµ СЃРґРµР»Р°РЅРѕ РїРѕ РїСЂРѕРµРєС‚Сѓ. РўРµРј СЃР°РјС‹Рј РґР°Р»СЊРЅРµР№С€Р°СЏ СЂР°Р±РѕС‚Р° РµС‰Рµ СѓСЃР»РѕР¶РЅРёС‚СЃСЏ - Р»СЋРґРё, РєРѕС‚РѕСЂС‹Рµ РїРѕРЅРёРјР°Р»Рё, С‡С‚Рѕ Рё РєР°Рє Р·РґРµСЃСЊ РєСЂСѓС‚РёС‚СЃСЏ, Р·РґРµСЃСЊ СѓР¶Рµ РЅРµ СЂР°Р±РѕС‚Р°СЋС‚.
 </p>
 
-<h3>Непредсказуемость</h3>
+<h3>РџРѕС‚РµСЂСЏ РєР°С‡РµСЃС‚РІР° Рё С‚РµС…РЅРёС‡РµСЃРєРёР№ РґРѕР»Рі</h3>
 <p>
-Становится сложнее предсказать дальнейшее развитие проекта. Посреди следующего этапа или проекта может внезапно вылезти ошибка с предыдущего и пустить его под откос. Кроме того, из-за сложности учета времени, действительно потраченного на работу в напряженном режиме, становится сложнее оценить эффективность команды в нормальном режиме. Расписание на следующие проекты становится все более ненадежным. Впрочем, об этом можно не волноваться, всегда можно поработать сверхурочно, чтобы нагнать расписание: Черт. Где-то я это уже слышал.
+РљРѕРіРґР° СЃСЂРѕРєРё РїРѕРґР¶РёРјР°СЋС‚, Р° СЃРёР» РЅРё Сѓ РєРѕРіРѕ РЅРµС‚, РІ РїРµСЂРІСѓСЋ РѕС‡РµСЂРµРґСЊ Р¶РµСЂС‚РІСѓСЋС‚ РєР°С‡РµСЃС‚РІРѕРј. Р­С‚Рѕ РЅРѕСЂРјР°Р»СЊРЅРѕ - РІСЃРµ РјС‹ Р·РЅР°РµРј Рѕ <a href="http://en.wikipedia.org/wiki/Technical_debt">С‚РµС…РЅРёС‡РµСЃРєРѕРј РґРѕР»РіРµ</a> (РјРµС‚Р°С„РѕСЂР°, РѕР·РЅР°С‡Р°СЋС‰Р°СЏ СЂРµР·СѓР»СЊС‚Р°С‚С‹ РЅРµР±СЂРµР¶РЅРѕРіРѕ РїСЂРѕРµРєС‚РёСЂРѕРІР°РЅРёСЏ Рё СЂР°Р·СЂР°Р±РѕС‚РєРё СЃРёСЃС‚РµРјС‹), Рё РЅР° СЌС‚РѕС‚ СЂР°Р· РјРѕР¶РЅРѕ РЅРµРјРЅРѕРіРѕ Р·Р°РґРѕР»Р¶Р°С‚СЊ - РјС‹ РѕР±СЏР·Р°С‚РµР»СЊРЅРѕ СЂР°СЃРїР»Р°С‚РёРјСЃСЏ РїРѕС‚РѕРј, РїСЂР°РІРґР°? РќРµС‚. РљРѕРјРїР°РЅРёРё, СЂР°СЃСЃРјР°С‚СЂРёРІР°СЋС‰РёРµ СЃРІРµСЂС…СѓСЂРѕС‡РЅС‹Рµ РєР°Рє РЅРѕСЂРјР°Р»СЊРЅРѕРµ СЂРµС€РµРЅРёРµ РїСЂРѕР±Р»РµРј, РЅРёРєРѕРіРґР° РЅРµ РІРѕР·РІСЂР°С‰Р°СЋС‚ СЌС‚РѕС‚ РґРѕР»Рі. РќРµР±СЂРµР¶РЅРѕСЃС‚СЊ СЃРµРіРѕРґРЅСЏ РѕР·РЅР°С‡Р°РµС‚ РµС‰Рµ РЅРµСЃРєРѕР»СЊРєРѕ СЃСЂРѕС‡РЅС‹С… Р±Р°РіРѕРІ Р·Р°РІС‚СЂР°, СЃ РєРѕС‚РѕСЂС‹РјРё РїСЂРёРґРµС‚СЃСЏ СЂР°СЃРїСЂР°РІР»СЏС‚СЊСЃСЏ РІ С‚РѕРј Р¶Рµ СЂРµР¶РёРјРµ. РљСЂРѕРјРµ С‚РѕРіРѕ, РєР°С‡РµСЃС‚РІРѕ СЃР°РјРѕРіРѕ РєРѕРґР° СѓС…СѓРґС€Р°РµС‚СЃСЏ, РµРіРѕ СЃС‚Р°РЅРѕРІРёС‚СЃСЏ СЃР»РѕР¶РЅРµРµ РґРѕСЂР°Р±Р°С‚С‹РІР°С‚СЊ, Рё РёР·РјРµРЅРµРЅРёСЏ Р·Р°РЅРёРјР°СЋС‚ РµС‰Рµ Р±РѕР»СЊС€Рµ РІСЂРµРјРµРЅРё. 
 </p>
 
-<h3>Менеджеры и клиенты</h3>
+<h3>РќРµРїСЂРµРґСЃРєР°Р·СѓРµРјРѕСЃС‚СЊ</h3>
 <p>
-Хорошо, переходим на следующий уровень. <strike>Кто в вашей компании вызывается работать сверхурочно? Обычно это не разработчики, а менеджеры, либо просящие, либо требующие трудовых подвигов.</strike> <i>В большинстве организаций обычно менеджеры подходят к команде и либо просят, а чаще принуждают работать сверхурочно.</i> С точки зрения команды, они идут на жертвы, чтобы выручить менеджмент из западни, в которую они попали из-за неумения планировать работу или общаться с клиентами. Это верно лишь частично: вынужденная непредсказуемость команды, попавшей в этот порочный круг, оставляет менеджеру только выбор случайного срока, не слишком обидного для клиента и правдоподобного для команды. Но это не проблема разработчиков - хотя разработчики и могут дать идеи технической реализации или изменения подхода, чтобы помочь ее решить, это бизнес-проблема. Раз дела пошли плохо - по той или иной причине - планы надо менять. В такой ситуации обычно рассматривается треугольник возможностей, стоимости и сроков - но сверхурочных-то в нем нет.
+РЎС‚Р°РЅРѕРІРёС‚СЃСЏ СЃР»РѕР¶РЅРµРµ РїСЂРµРґСЃРєР°Р·Р°С‚СЊ РґР°Р»СЊРЅРµР№С€РµРµ СЂР°Р·РІРёС‚РёРµ РїСЂРѕРµРєС‚Р°. РџРѕСЃСЂРµРґРё СЃР»РµРґСѓСЋС‰РµРіРѕ СЌС‚Р°РїР° РёР»Рё РїСЂРѕРµРєС‚Р° РјРѕР¶РµС‚ РІРЅРµР·Р°РїРЅРѕ РІС‹Р»РµР·С‚Рё РѕС€РёР±РєР° СЃ РїСЂРµРґС‹РґСѓС‰РµРіРѕ Рё РїСѓСЃС‚РёС‚СЊ РµРіРѕ РїРѕРґ РѕС‚РєРѕСЃ. РљСЂРѕРјРµ С‚РѕРіРѕ, РёР·-Р·Р° СЃР»РѕР¶РЅРѕСЃС‚Рё СѓС‡РµС‚Р° РІСЂРµРјРµРЅРё, РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РїРѕС‚СЂР°С‡РµРЅРЅРѕРіРѕ РЅР° СЂР°Р±РѕС‚Сѓ РІ РЅР°РїСЂСЏР¶РµРЅРЅРѕРј СЂРµР¶РёРјРµ, СЃС‚Р°РЅРѕРІРёС‚СЃСЏ СЃР»РѕР¶РЅРµРµ РѕС†РµРЅРёС‚СЊ СЌС„С„РµРєС‚РёРІРЅРѕСЃС‚СЊ РєРѕРјР°РЅРґС‹ РІ РЅРѕСЂРјР°Р»СЊРЅРѕРј СЂРµР¶РёРјРµ. Р Р°СЃРїРёСЃР°РЅРёРµ РЅР° СЃР»РµРґСѓСЋС‰РёРµ РїСЂРѕРµРєС‚С‹ СЃС‚Р°РЅРѕРІРёС‚СЃСЏ РІСЃРµ Р±РѕР»РµРµ РЅРµРЅР°РґРµР¶РЅС‹Рј. Р’РїСЂРѕС‡РµРј, РѕР± СЌС‚РѕРј РјРѕР¶РЅРѕ РЅРµ РІРѕР»РЅРѕРІР°С‚СЊСЃСЏ, РІСЃРµРіРґР° РјРѕР¶РЅРѕ РїРѕСЂР°Р±РѕС‚Р°С‚СЊ СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕ, С‡С‚РѕР±С‹ РЅР°РіРЅР°С‚СЊ СЂР°СЃРїРёСЃР°РЅРёРµ: Р§РµСЂС‚. Р“РґРµ-С‚Рѕ СЏ СЌС‚Рѕ СѓР¶Рµ СЃР»С‹С€Р°Р».
+</p>
+
+<h3>РњРµРЅРµРґР¶РµСЂС‹ Рё РєР»РёРµРЅС‚С‹</h3>
+<p>
+РҐРѕСЂРѕС€Рѕ, РїРµСЂРµС…РѕРґРёРј РЅР° СЃР»РµРґСѓСЋС‰РёР№ СѓСЂРѕРІРµРЅСЊ. <strike>РљС‚Рѕ РІ РІР°С€РµР№ РєРѕРјРїР°РЅРёРё РІС‹Р·С‹РІР°РµС‚СЃСЏ СЂР°Р±РѕС‚Р°С‚СЊ СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕ? РћР±С‹С‡РЅРѕ СЌС‚Рѕ РЅРµ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРё, Р° РјРµРЅРµРґР¶РµСЂС‹, Р»РёР±Рѕ РїСЂРѕСЃСЏС‰РёРµ, Р»РёР±Рѕ С‚СЂРµР±СѓСЋС‰РёРµ С‚СЂСѓРґРѕРІС‹С… РїРѕРґРІРёРіРѕРІ.</strike> <i>Р’ Р±РѕР»СЊС€РёРЅСЃС‚РІРµ РѕСЂРіР°РЅРёР·Р°С†РёР№ РѕР±С‹С‡РЅРѕ РјРµРЅРµРґР¶РµСЂС‹ РїРѕРґС…РѕРґСЏС‚ Рє РєРѕРјР°РЅРґРµ Рё Р»РёР±Рѕ РїСЂРѕСЃСЏС‚, Р° С‡Р°С‰Рµ РїСЂРёРЅСѓР¶РґР°СЋС‚ СЂР°Р±РѕС‚Р°С‚СЊ СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕ.</i> РЎ С‚РѕС‡РєРё Р·СЂРµРЅРёСЏ РєРѕРјР°РЅРґС‹, РѕРЅРё РёРґСѓС‚ РЅР° Р¶РµСЂС‚РІС‹, С‡С‚РѕР±С‹ РІС‹СЂСѓС‡РёС‚СЊ РјРµРЅРµРґР¶РјРµРЅС‚ РёР· Р·Р°РїР°РґРЅРё, РІ РєРѕС‚РѕСЂСѓСЋ РѕРЅРё РїРѕРїР°Р»Рё РёР·-Р·Р° РЅРµСѓРјРµРЅРёСЏ РїР»Р°РЅРёСЂРѕРІР°С‚СЊ СЂР°Р±РѕС‚Сѓ РёР»Рё РѕР±С‰Р°С‚СЊСЃСЏ СЃ РєР»РёРµРЅС‚Р°РјРё. Р­С‚Рѕ РІРµСЂРЅРѕ Р»РёС€СЊ С‡Р°СЃС‚РёС‡РЅРѕ: РІС‹РЅСѓР¶РґРµРЅРЅР°СЏ РЅРµРїСЂРµРґСЃРєР°Р·СѓРµРјРѕСЃС‚СЊ РєРѕРјР°РЅРґС‹, РїРѕРїР°РІС€РµР№ РІ СЌС‚РѕС‚ РїРѕСЂРѕС‡РЅС‹Р№ РєСЂСѓРі, РѕСЃС‚Р°РІР»СЏРµС‚ РјРµРЅРµРґР¶РµСЂСѓ С‚РѕР»СЊРєРѕ РІС‹Р±РѕСЂ СЃР»СѓС‡Р°Р№РЅРѕРіРѕ СЃСЂРѕРєР°, РЅРµ СЃР»РёС€РєРѕРј РѕР±РёРґРЅРѕРіРѕ РґР»СЏ РєР»РёРµРЅС‚Р° Рё РїСЂР°РІРґРѕРїРѕРґРѕР±РЅРѕРіРѕ РґР»СЏ РєРѕРјР°РЅРґС‹. РќРѕ СЌС‚Рѕ РЅРµ РїСЂРѕР±Р»РµРјР° СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРѕРІ - С…РѕС‚СЏ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРё Рё РјРѕРіСѓС‚ РґР°С‚СЊ РёРґРµРё С‚РµС…РЅРёС‡РµСЃРєРѕР№ СЂРµР°Р»РёР·Р°С†РёРё РёР»Рё РёР·РјРµРЅРµРЅРёСЏ РїРѕРґС…РѕРґР°, С‡С‚РѕР±С‹ РїРѕРјРѕС‡СЊ РµРµ СЂРµС€РёС‚СЊ, СЌС‚Рѕ Р±РёР·РЅРµСЃ-РїСЂРѕР±Р»РµРјР°. Р Р°Р· РґРµР»Р° РїРѕС€Р»Рё РїР»РѕС…Рѕ - РїРѕ С‚РѕР№ РёР»Рё РёРЅРѕР№ РїСЂРёС‡РёРЅРµ - РїР»Р°РЅС‹ РЅР°РґРѕ РјРµРЅСЏС‚СЊ. Р’ С‚Р°РєРѕР№ СЃРёС‚СѓР°С†РёРё РѕР±С‹С‡РЅРѕ СЂР°СЃСЃРјР°С‚СЂРёРІР°РµС‚СЃСЏ С‚СЂРµСѓРіРѕР»СЊРЅРёРє РІРѕР·РјРѕР¶РЅРѕСЃС‚РµР№, СЃС‚РѕРёРјРѕСЃС‚Рё Рё СЃСЂРѕРєРѕРІ - РЅРѕ СЃРІРµСЂС…СѓСЂРѕС‡РЅС‹С…-С‚Рѕ РІ РЅРµРј РЅРµС‚.
 </p><p>
-Почему же об этой проблеме не извещается клиент? Да потому, что это сложный разговор, и большинство людей (включая менеджеров) таких разговоров боятся и избегают их любой ценой. Легче сказать "бегом за работу!" команде, чем "мы это не сможем" - клиенту. На самом деле о таких вещах говорить надо - хорошие отношения с клиентом должны быть основаны на уважении, доверии и открытости, в том числе и в те моменты, когда дела идут плохо. 
+РџРѕС‡РµРјСѓ Р¶Рµ РѕР± СЌС‚РѕР№ РїСЂРѕР±Р»РµРјРµ РЅРµ РёР·РІРµС‰Р°РµС‚СЃСЏ РєР»РёРµРЅС‚? Р”Р° РїРѕС‚РѕРјСѓ, С‡С‚Рѕ СЌС‚Рѕ СЃР»РѕР¶РЅС‹Р№ СЂР°Р·РіРѕРІРѕСЂ, Рё Р±РѕР»СЊС€РёРЅСЃС‚РІРѕ Р»СЋРґРµР№ (РІРєР»СЋС‡Р°СЏ РјРµРЅРµРґР¶РµСЂРѕРІ) С‚Р°РєРёС… СЂР°Р·РіРѕРІРѕСЂРѕРІ Р±РѕСЏС‚СЃСЏ Рё РёР·Р±РµРіР°СЋС‚ РёС… Р»СЋР±РѕР№ С†РµРЅРѕР№. Р›РµРіС‡Рµ СЃРєР°Р·Р°С‚СЊ "Р±РµРіРѕРј Р·Р° СЂР°Р±РѕС‚Сѓ!" РєРѕРјР°РЅРґРµ, С‡РµРј "РјС‹ СЌС‚Рѕ РЅРµ СЃРјРѕР¶РµРј" - РєР»РёРµРЅС‚Сѓ. РќР° СЃР°РјРѕРј РґРµР»Рµ Рѕ С‚Р°РєРёС… РІРµС‰Р°С… РіРѕРІРѕСЂРёС‚СЊ РЅР°РґРѕ - С…РѕСЂРѕС€РёРµ РѕС‚РЅРѕС€РµРЅРёСЏ СЃ РєР»РёРµРЅС‚РѕРј РґРѕР»Р¶РЅС‹ Р±С‹С‚СЊ РѕСЃРЅРѕРІР°РЅС‹ РЅР° СѓРІР°Р¶РµРЅРёРё, РґРѕРІРµСЂРёРё Рё РѕС‚РєСЂС‹С‚РѕСЃС‚Рё, РІ С‚РѕРј С‡РёСЃР»Рµ Рё РІ С‚Рµ РјРѕРјРµРЅС‚С‹, РєРѕРіРґР° РґРµР»Р° РёРґСѓС‚ РїР»РѕС…Рѕ. 
 </p><p>
-Следует отметить, что если дело дошло до такого разговора, не имеет значения, кто виноват. Речь должна идти не о вине, а о сложившейся объективной ситуации и о том, что с ней делать. Потом будет время обсудить, где и что можно улучшить в процессе работы, чтобы ситуация не повторилась, но это уже совсем другая история.
+РЎР»РµРґСѓРµС‚ РѕС‚РјРµС‚РёС‚СЊ, С‡С‚Рѕ РµСЃР»Рё РґРµР»Рѕ РґРѕС€Р»Рѕ РґРѕ С‚Р°РєРѕРіРѕ СЂР°Р·РіРѕРІРѕСЂР°, РЅРµ РёРјРµРµС‚ Р·РЅР°С‡РµРЅРёСЏ, РєС‚Рѕ РІРёРЅРѕРІР°С‚. Р РµС‡СЊ РґРѕР»Р¶РЅР° РёРґС‚Рё РЅРµ Рѕ РІРёРЅРµ, Р° Рѕ СЃР»РѕР¶РёРІС€РµР№СЃСЏ РѕР±СЉРµРєС‚РёРІРЅРѕР№ СЃРёС‚СѓР°С†РёРё Рё Рѕ С‚РѕРј, С‡С‚Рѕ СЃ РЅРµР№ РґРµР»Р°С‚СЊ. РџРѕС‚РѕРј Р±СѓРґРµС‚ РІСЂРµРјСЏ РѕР±СЃСѓРґРёС‚СЊ, РіРґРµ Рё С‡С‚Рѕ РјРѕР¶РЅРѕ СѓР»СѓС‡С€РёС‚СЊ РІ РїСЂРѕС†РµСЃСЃРµ СЂР°Р±РѕС‚С‹, С‡С‚РѕР±С‹ СЃРёС‚СѓР°С†РёСЏ РЅРµ РїРѕРІС‚РѕСЂРёР»Р°СЃСЊ, РЅРѕ СЌС‚Рѕ СѓР¶Рµ СЃРѕРІСЃРµРј РґСЂСѓРіР°СЏ РёСЃС‚РѕСЂРёСЏ.
 </p><p>
-Что, если клиент настаивает на сверхурочной работе команды? Вообще-то для этого и существуют менеджеры - именно они должны объяснить клиенту возможные побочные эффекты такого решения. Кроме того, клиент должен взять на себя компенсацию возникающих дополнительных затрат, времени на восстановление и времени на отработку технического долга, набранного за это время. Хорошие менеджеры всегда убедят клиента, что сверхурочные - это лестница, ведущая вниз.
+Р§С‚Рѕ, РµСЃР»Рё РєР»РёРµРЅС‚ РЅР°СЃС‚Р°РёРІР°РµС‚ РЅР° СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕР№ СЂР°Р±РѕС‚Рµ РєРѕРјР°РЅРґС‹? Р’РѕРѕР±С‰Рµ-С‚Рѕ РґР»СЏ СЌС‚РѕРіРѕ Рё СЃСѓС‰РµСЃС‚РІСѓСЋС‚ РјРµРЅРµРґР¶РµСЂС‹ - РёРјРµРЅРЅРѕ РѕРЅРё РґРѕР»Р¶РЅС‹ РѕР±СЉСЏСЃРЅРёС‚СЊ РєР»РёРµРЅС‚Сѓ РІРѕР·РјРѕР¶РЅС‹Рµ РїРѕР±РѕС‡РЅС‹Рµ СЌС„С„РµРєС‚С‹ С‚Р°РєРѕРіРѕ СЂРµС€РµРЅРёСЏ. РљСЂРѕРјРµ С‚РѕРіРѕ, РєР»РёРµРЅС‚ РґРѕР»Р¶РµРЅ РІР·СЏС‚СЊ РЅР° СЃРµР±СЏ РєРѕРјРїРµРЅСЃР°С†РёСЋ РІРѕР·РЅРёРєР°СЋС‰РёС… РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹С… Р·Р°С‚СЂР°С‚, РІСЂРµРјРµРЅРё РЅР° РІРѕСЃСЃС‚Р°РЅРѕРІР»РµРЅРёРµ Рё РІСЂРµРјРµРЅРё РЅР° РѕС‚СЂР°Р±РѕС‚РєСѓ С‚РµС…РЅРёС‡РµСЃРєРѕРіРѕ РґРѕР»РіР°, РЅР°Р±СЂР°РЅРЅРѕРіРѕ Р·Р° СЌС‚Рѕ РІСЂРµРјСЏ. РҐРѕСЂРѕС€РёРµ РјРµРЅРµРґР¶РµСЂС‹ РІСЃРµРіРґР° СѓР±РµРґСЏС‚ РєР»РёРµРЅС‚Р°, С‡С‚Рѕ СЃРІРµСЂС…СѓСЂРѕС‡РЅС‹Рµ - СЌС‚Рѕ Р»РµСЃС‚РЅРёС†Р°, РІРµРґСѓС‰Р°СЏ РІРЅРёР·.
 </p>
 
-<h3>Вывод</h3>
+<h3>Р’С‹РІРѕРґ</h3>
 <p>
-Теперь исходную шутку можно перефразировать еще точнее. Когда менеджеры сталкиваются с проблемой в планировании, они думают "О, вместо бизнес-разговора с клиентом я просто заставлю команду поработать сверхурочно". Теперь у них множество непредсказуемых проблем, которые аукнутся в будущем в самый неожиданный момент, измотанная команда на грани бунта и недовольный клиент, не доверяющий команде.
+РўРµРїРµСЂСЊ РёСЃС…РѕРґРЅСѓСЋ С€СѓС‚РєСѓ РјРѕР¶РЅРѕ РїРµСЂРµС„СЂР°Р·РёСЂРѕРІР°С‚СЊ РµС‰Рµ С‚РѕС‡РЅРµРµ. РљРѕРіРґР° РјРµРЅРµРґР¶РµСЂС‹ СЃС‚Р°Р»РєРёРІР°СЋС‚СЃСЏ СЃ РїСЂРѕР±Р»РµРјРѕР№ РІ РїР»Р°РЅРёСЂРѕРІР°РЅРёРё, РѕРЅРё РґСѓРјР°СЋС‚ "Рћ, РІРјРµСЃС‚Рѕ Р±РёР·РЅРµСЃ-СЂР°Р·РіРѕРІРѕСЂР° СЃ РєР»РёРµРЅС‚РѕРј СЏ РїСЂРѕСЃС‚Рѕ Р·Р°СЃС‚Р°РІР»СЋ РєРѕРјР°РЅРґСѓ РїРѕСЂР°Р±РѕС‚Р°С‚СЊ СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕ". РўРµРїРµСЂСЊ Сѓ РЅРёС… РјРЅРѕР¶РµСЃС‚РІРѕ РЅРµРїСЂРµРґСЃРєР°Р·СѓРµРјС‹С… РїСЂРѕР±Р»РµРј, РєРѕС‚РѕСЂС‹Рµ Р°СѓРєРЅСѓС‚СЃСЏ РІ Р±СѓРґСѓС‰РµРј РІ СЃР°РјС‹Р№ РЅРµРѕР¶РёРґР°РЅРЅС‹Р№ РјРѕРјРµРЅС‚, РёР·РјРѕС‚Р°РЅРЅР°СЏ РєРѕРјР°РЅРґР° РЅР° РіСЂР°РЅРё Р±СѓРЅС‚Р° Рё РЅРµРґРѕРІРѕР»СЊРЅС‹Р№ РєР»РёРµРЅС‚, РЅРµ РґРѕРІРµСЂСЏСЋС‰РёР№ РєРѕРјР°РЅРґРµ.
 </p><p>
-Вы все еще хотите работать сверхурочно?
+Р’С‹ РІСЃРµ РµС‰Рµ С…РѕС‚РёС‚Рµ СЂР°Р±РѕС‚Р°С‚СЊ СЃРІРµСЂС…СѓСЂРѕС‡РЅРѕ?
 </p>
 
 </BODY>
