--- a/mgt04.html
+++ b/mgt04.html
@@ -1,15 +1,15 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="/script.js"></script>
   <LINK href="/index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Сказка про гребцов</H1>
+  <H1>РЎРєР°Р·РєР° РїСЂРѕ РіСЂРµР±С†РѕРІ</H1>
 
 <pre>
-Принесло почтой. Авторство неизвестно.
+РџСЂРёРЅРµСЃР»Рѕ РїРѕС‡С‚РѕР№. РђРІС‚РѕСЂСЃС‚РІРѕ РЅРµРёР·РІРµСЃС‚РЅРѕ.
 <span id=area1>
 <img width=500 border=1 class=galery_max><br> 
 <SELECT id="list1" class=galery>
@@ -29,6 +29,6 @@
 </SELECT>
 </span>
 
-Всё.
+Р’СЃС‘.
 </body>
 </html>
