--- a/mgt05.html
+++ b/mgt05.html
@@ -1,16 +1,16 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="/script.js"></script>
   <LINK href="/index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Сказка про муравья</H1>
+  <H1>РЎРєР°Р·РєР° РїСЂРѕ РјСѓСЂР°РІСЊСЏ</H1>
 
 <pre>
-Принесло почтой. Авторство неизвестно.
-В оригинале это файл PowerPoint. Лежит <a href="managers/Muravej.pps">здесь</a>.
+РџСЂРёРЅРµСЃР»Рѕ РїРѕС‡С‚РѕР№. РђРІС‚РѕСЂСЃС‚РІРѕ РЅРµРёР·РІРµСЃС‚РЅРѕ.
+Р’ РѕСЂРёРіРёРЅР°Р»Рµ СЌС‚Рѕ С„Р°Р№Р» PowerPoint. Р›РµР¶РёС‚ <a href="managers/Muravej.pps">Р·РґРµСЃСЊ</a>.
 <span id=area1>
 <img width=500 border=1 class=galery_max><br> 
 <SELECT id="list1" class=galery>
@@ -38,6 +38,6 @@
 </SELECT>
 </span>
 
-Всё.
+Р’СЃС‘.
 </body>
 </html>
