--- a/newsru.html
+++ b/newsru.html
@@ -1,12 +1,12 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();GetRSS(example,'http://www.newsru.com/plain/rss/all.xml','rss.xslt');">
-  <h1> Пример импорта внешней новостной ленты </h1>
-  <div id=example>Здесь размещен текст главной страницы</div>
+  <h1> РџСЂРёРјРµСЂ РёРјРїРѕСЂС‚Р° РІРЅРµС€РЅРµР№ РЅРѕРІРѕСЃС‚РЅРѕР№ Р»РµРЅС‚С‹ </h1>
+  <div id=example>Р—РґРµСЃСЊ СЂР°Р·РјРµС‰РµРЅ С‚РµРєСЃС‚ РіР»Р°РІРЅРѕР№ СЃС‚СЂР°РЅРёС†С‹</div>
 </BODY>
 </HTML>
