--- a/print_div.html
+++ b/print_div.html
@@ -1,4 +1,4 @@
-<html>
+п»ї<html>
 <head>
 <title>Call duty</title>
 <script language=javascript>
@@ -38,16 +38,16 @@ else alert('empty content');
 <table class=MsoNormalTable border=1 cellpadding=0> 
  <tr> 
   <td width=100 > 
-  <div><b>Марка бетона </b></p> 
+  <div><b>РњР°СЂРєР° Р±РµС‚РѕРЅР° </b></p> 
   </td> 
   <td width=100 > 
-  <div><b>Массовый состав, Ц:П:Щ, кг </b></p> 
+  <div><b>РњР°СЃСЃРѕРІС‹Р№ СЃРѕСЃС‚Р°РІ, Р¦:Рџ:Р©, РєРі </b></p> 
   </td> 
   <td width=100 > 
-  <div><b>Объемный состав на 10 л цемента, П:Щ, л </b></p> 
+  <div><b>РћР±СЉРµРјРЅС‹Р№ СЃРѕСЃС‚Р°РІ РЅР° 10 Р» С†РµРјРµРЅС‚Р°, Рџ:Р©, Р» </b></p> 
   </td> 
   <td width=100 > 
-  <div><b>Количество бетона из 10 л цемента, л </b></p> 
+  <div><b>РљРѕР»РёС‡РµСЃС‚РІРѕ Р±РµС‚РѕРЅР° РёР· 10 Р» С†РµРјРµРЅС‚Р°, Р» </b></p> 
   </td> 
  </tr> 
  <tr> 
@@ -150,7 +150,7 @@ else alert('empty content');
  </tr> 
 </table> 
 </div>
-<a href="#1" onClick="CallPrint(document.getElementById('prew'));">Печать</a>
-<a href="#1" onClick="CallPrint(document.getElementById('prew'),'index_files/style.css');">Печать css</a>
+<a href="#1" onClick="CallPrint(document.getElementById('prew'));">РџРµС‡Р°С‚СЊ</a>
+<a href="#1" onClick="CallPrint(document.getElementById('prew'),'index_files/style.css');">РџРµС‡Р°С‚СЊ css</a>
 </body>
 </html>
