--- a/printdemo.html
+++ b/printdemo.html
@@ -1,24 +1,24 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Пример печати области страницы.</H1>
+  <H1>РџСЂРёРјРµСЂ РїРµС‡Р°С‚Рё РѕР±Р»Р°СЃС‚Рё СЃС‚СЂР°РЅРёС†С‹.</H1>
 
-<h3>Этот текст не будет напечатан</h3> 
+<h3>Р­С‚РѕС‚ С‚РµРєСЃС‚ РЅРµ Р±СѓРґРµС‚ РЅР°РїРµС‡Р°С‚Р°РЅ</h3> 
 
 <div id="Area1">
-<h3>Состав и пропорции бетона из цемента М-400, песка и щебня, таблица</h3> 
+<h3>РЎРѕСЃС‚Р°РІ Рё РїСЂРѕРїРѕСЂС†РёРё Р±РµС‚РѕРЅР° РёР· С†РµРјРµРЅС‚Р° Рњ-400, РїРµСЃРєР° Рё С‰РµР±РЅСЏ, С‚Р°Р±Р»РёС†Р°</h3> 
  
 <table border=0 cellpadding=2> 
  <tr> 
-  <th width=100> Марка бетона </th> 
-  <th width=100> Массовый состав, Ц:П:Щ, кг </th> 
-  <th width=100> Объемный состав на 10 л цемента, П:Щ, л </th> 
-  <th width=100> Количество бетона из 10 л цемента, л </th> 
+  <th width=100> РњР°СЂРєР° Р±РµС‚РѕРЅР° </th> 
+  <th width=100> РњР°СЃСЃРѕРІС‹Р№ СЃРѕСЃС‚Р°РІ, Р¦:Рџ:Р©, РєРі </th> 
+  <th width=100> РћР±СЉРµРјРЅС‹Р№ СЃРѕСЃС‚Р°РІ РЅР° 10 Р» С†РµРјРµРЅС‚Р°, Рџ:Р©, Р» </th> 
+  <th width=100> РљРѕР»РёС‡РµСЃС‚РІРѕ Р±РµС‚РѕРЅР° РёР· 10 Р» С†РµРјРµРЅС‚Р°, Р» </th> 
  </tr> 
  <tr align=center> 
   <td>100</td><td> 1 : 4,6 : 7,0 </td><td> 41 : 61 </td><td> 78 </td> 
@@ -44,11 +44,11 @@
 </table> 
 </div>
  
-<h3>Этот текст не будет напечатан</h3> 
+<h3>Р­С‚РѕС‚ С‚РµРєСЃС‚ РЅРµ Р±СѓРґРµС‚ РЅР°РїРµС‡Р°С‚Р°РЅ</h3> 
  
 <ul>
-<li><a href="#1" onClick="PrintContent('Area1');">Печать без CSS</a>
-<li><a href="#1" onClick="PrintContent('Area1','index_files/style.css');">Печать с использованием CSS</a>
+<li><a href="#1" onClick="PrintContent('Area1');">РџРµС‡Р°С‚СЊ Р±РµР· CSS</a>
+<li><a href="#1" onClick="PrintContent('Area1','index_files/style.css');">РџРµС‡Р°С‚СЊ СЃ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµРј CSS</a>
 </ul>
  
  
