--- a/q.html
+++ b/q.html
@@ -1,5 +1,5 @@
-<html>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+п»ї<html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head>
 <script type="text/javascript">
 
@@ -125,7 +125,7 @@ alert(xmlhttp.responseText);
    var xmlDoc = emptyXML(xmlhttp.responseText);
   }
   catch(e) {
-   alert(e.description+" - это не xml");
+   alert(e.description+" - СЌС‚Рѕ РЅРµ xml");
   }
   var xmlDoc = xmlhttp.responseXML;
 
@@ -155,7 +155,7 @@ document.getElementById("menu").innerHTML= MakeXSLT(xmlDoc,'simple.xsl');
 </head>
 <body onload="alert('load');test();">
 
-<h1>Оглавление.</h1>
+<h1>РћРіР»Р°РІР»РµРЅРёРµ.</h1>
 <div>
 <b>To:</b> <span id="to"></span><br />
 <b>From:</b> <span id="from"></span><br />
