--- a/test4.html
+++ b/test4.html
@@ -1,5 +1,5 @@
-<html>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+п»ї<html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head>
 <title>#list_title#</title>
 <LINK REL=StyleSheet TYPE=text/css HREF=index_files/style.css>
@@ -38,7 +38,7 @@ function test() {
 </head>
 <body onload="alert('load'); test();">
 
-<h1>Оглавление.</h1>
+<h1>РћРіР»Р°РІР»РµРЅРёРµ.</h1>
 <div id=book_title></div>
 <div id=book_author></div>
 <div id=book_toc></div>
