--- a/tocdemo.html
+++ b/tocdemo.html
@@ -1,18 +1,18 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-<h1>Автоматическое оглавление.</h1>
+<h1>РђРІС‚РѕРјР°С‚РёС‡РµСЃРєРѕРµ РѕРіР»Р°РІР»РµРЅРёРµ.</h1>
 <pre>
-При отображении большого документа желательно иметь оглавление.
-Больше объем документа и запутанее структура, тем проще ошибиться.
-Данный пример демонстрирует, как сделать автоматическое оглавление.
-Робот находит специальный тег, переходит на родительский и от него 
-пробегает все теги &lt;H&gt; и сам строит список.
+РџСЂРё РѕС‚РѕР±СЂР°Р¶РµРЅРёРё Р±РѕР»СЊС€РѕРіРѕ РґРѕРєСѓРјРµРЅС‚Р° Р¶РµР»Р°С‚РµР»СЊРЅРѕ РёРјРµС‚СЊ РѕРіР»Р°РІР»РµРЅРёРµ.
+Р‘РѕР»СЊС€Рµ РѕР±СЉРµРј РґРѕРєСѓРјРµРЅС‚Р° Рё Р·Р°РїСѓС‚Р°РЅРµРµ СЃС‚СЂСѓРєС‚СѓСЂР°, С‚РµРј РїСЂРѕС‰Рµ РѕС€РёР±РёС‚СЊСЃСЏ.
+Р”Р°РЅРЅС‹Р№ РїСЂРёРјРµСЂ РґРµРјРѕРЅСЃС‚СЂРёСЂСѓРµС‚, РєР°Рє СЃРґРµР»Р°С‚СЊ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРѕРµ РѕРіР»Р°РІР»РµРЅРёРµ.
+Р РѕР±РѕС‚ РЅР°С…РѕРґРёС‚ СЃРїРµС†РёР°Р»СЊРЅС‹Р№ С‚РµРі, РїРµСЂРµС…РѕРґРёС‚ РЅР° СЂРѕРґРёС‚РµР»СЊСЃРєРёР№ Рё РѕС‚ РЅРµРіРѕ 
+РїСЂРѕР±РµРіР°РµС‚ РІСЃРµ С‚РµРіРё &lt;H&gt; Рё СЃР°Рј СЃС‚СЂРѕРёС‚ СЃРїРёСЃРѕРє.
 </pre>
 
 <span id=toc_area>
@@ -20,44 +20,44 @@
 </span>
 
 <span id=h_area>
-<h1>Заголовок уровня 1 в дочернем элементе</h1>
+<h1>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 1 РІ РґРѕС‡РµСЂРЅРµРј СЌР»РµРјРµРЅС‚Рµ</h1>
 </span>
 
-<h1>Заголовок уровня 1</h1>
-<h2>Заголовок уровня 2</h2>
-<h3>Заголовок уровня 3</h3>
-<h4>Заголовок уровня 4</h4>
-<h5>Заголовок уровня 5</h5>
+<h1>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 1</h1>
+<h2>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 2</h2>
+<h3>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 3</h3>
+<h4>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 4</h4>
+<h5>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 5</h5>
 <div class=demo_text></div>
 
 <span>
-<h1>Заголовок того же уровня, но в дочернем элементе</h1>
+<h1>Р—Р°РіРѕР»РѕРІРѕРє С‚РѕРіРѕ Р¶Рµ СѓСЂРѕРІРЅСЏ, РЅРѕ РІ РґРѕС‡РµСЂРЅРµРј СЌР»РµРјРµРЅС‚Рµ</h1>
 <div class=demo_text></div>
 </span>
 
-<h2>Заголовок уровня 2</h2>
+<h2>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 2</h2>
 <div class=demo_text></div>
 
-<span><h3>Заголовок уровня 3 в дочернем элементе</h3><div class=demo_text></div><h1>Заголовок уровня 1 в дочернем элементе</h1><div class=demo_text></div></span>
+<span><h3>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 3 РІ РґРѕС‡РµСЂРЅРµРј СЌР»РµРјРµРЅС‚Рµ</h3><div class=demo_text></div><h1>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 1 РІ РґРѕС‡РµСЂРЅРµРј СЌР»РµРјРµРЅС‚Рµ</h1><div class=demo_text></div></span>
 <div class=demo_text></div>
 
-<h5>Заголовок уровня 5</h5>
+<h5>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 5</h5>
 <div class=demo_text></div>
-<h3>Заголовок уровня 3</h3>
+<h3>Р—Р°РіРѕР»РѕРІРѕРє СѓСЂРѕРІРЅСЏ 3</h3>
 <div class=demo_text></div>
 
-<h1>Как это работает</h1>
+<h1>РљР°Рє СЌС‚Рѕ СЂР°Р±РѕС‚Р°РµС‚</h1>
 
-<h2>Исходный вид оглавления на странице.</h2>
+<h2>РСЃС…РѕРґРЅС‹Р№ РІРёРґ РѕРіР»Р°РІР»РµРЅРёСЏ РЅР° СЃС‚СЂР°РЅРёС†Рµ.</h2>
 <textarea class=preview>toc_area</textarea>
 
-<h2>Исходный вид заголовка на странице.</h2>
+<h2>РСЃС…РѕРґРЅС‹Р№ РІРёРґ Р·Р°РіРѕР»РѕРІРєР° РЅР° СЃС‚СЂР°РЅРёС†Рµ.</h2>
 <textarea class=preview>h_area</textarea>
 
-<h2>Конечный вид оглавления после отработки скриптов.</h2>
+<h2>РљРѕРЅРµС‡РЅС‹Р№ РІРёРґ РѕРіР»Р°РІР»РµРЅРёСЏ РїРѕСЃР»Рµ РѕС‚СЂР°Р±РѕС‚РєРё СЃРєСЂРёРїС‚РѕРІ.</h2>
 <textarea class=postview>toc_area</textarea>
 
-<h2>Конечный вид заголовка после отработки скриптов.</h2>
+<h2>РљРѕРЅРµС‡РЅС‹Р№ РІРёРґ Р·Р°РіРѕР»РѕРІРєР° РїРѕСЃР»Рµ РѕС‚СЂР°Р±РѕС‚РєРё СЃРєСЂРёРїС‚РѕРІ.</h2>
 <textarea class=postview>h_area</textarea>
 
 </body>
