--- a/tty.html
+++ b/tty.html
@@ -1,37 +1,37 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <h1>Эффект телетайпа</h1>
-Хороший способ борьбы с чтением по диагонали.<br> 
-Иногда требуется, чтобы текст был прочитан сначала и до конца.<br> 
-В таком режиме придется читать все...<br> 
+  <h1>Р­С„С„РµРєС‚ С‚РµР»РµС‚Р°Р№РїР°</h1>
+РҐРѕСЂРѕС€РёР№ СЃРїРѕСЃРѕР± Р±РѕСЂСЊР±С‹ СЃ С‡С‚РµРЅРёРµРј РїРѕ РґРёР°РіРѕРЅР°Р»Рё.<br> 
+РРЅРѕРіРґР° С‚СЂРµР±СѓРµС‚СЃСЏ, С‡С‚РѕР±С‹ С‚РµРєСЃС‚ Р±С‹Р» РїСЂРѕС‡РёС‚Р°РЅ СЃРЅР°С‡Р°Р»Р° Рё РґРѕ РєРѕРЅС†Р°.<br> 
+Р’ С‚Р°РєРѕРј СЂРµР¶РёРјРµ РїСЂРёРґРµС‚СЃСЏ С‡РёС‚Р°С‚СЊ РІСЃРµ...<br> 
 <hr>
 <div class=tty>
                                                                               
-Сенсационный поворот в <b>судебном</b> процессе над захватчиками судна Arctic Sea: 
-прокурор назвал имена заказчиков захвата судна.
-<i>По словам прокурора, один из захватчиков судна</i> Дмитрий Савинс дал признательные
- показания и назвал имена заказчиков преступления. Организаторами захвата были 
-сам Д.Савинс и немецкий бизнесмен Сергей Демченко, а заказчиком- эстонский историк 
-и военный эксперт Эрик-Нийлес Кросс.
-О причинах, побудивших историка на такие действия, ничего не сообщается.
-По данным эстонских СМИ, Э.Кросс до недавнего времени возглавлял Бюро информации 
-Государственной канцелярии Эстонии, то есть службу внешней политической 
-разведки страны.
-Напомним, ночью 24 июля 2009г. в водах открытого моря и вне юрисдикции 
-какого-либо государства преступники на небольшой лодке напали и захватили 
-корабль с грузом древесины, шедший под флагом Мальты, с экипажем, состоящим из 
-российских граждан.
-По данным следствия, преступники заранее подобрали оружие для подавления 
-сопротивления членов экипажа сухогруза, а также подготовили маски, черную 
-одежду с надписями Police и маленькую лодку для захвата. 17 августа 2009г. 
-моряками Военно-морского флота России судно Arctic Sea и его экипаж были 
-освобождены, а захватчики задержаны.
+РЎРµРЅСЃР°С†РёРѕРЅРЅС‹Р№ РїРѕРІРѕСЂРѕС‚ РІ <b>СЃСѓРґРµР±РЅРѕРј</b> РїСЂРѕС†РµСЃСЃРµ РЅР°Рґ Р·Р°С…РІР°С‚С‡РёРєР°РјРё СЃСѓРґРЅР° Arctic Sea: 
+РїСЂРѕРєСѓСЂРѕСЂ РЅР°Р·РІР°Р» РёРјРµРЅР° Р·Р°РєР°Р·С‡РёРєРѕРІ Р·Р°С…РІР°С‚Р° СЃСѓРґРЅР°.
+<i>РџРѕ СЃР»РѕРІР°Рј РїСЂРѕРєСѓСЂРѕСЂР°, РѕРґРёРЅ РёР· Р·Р°С…РІР°С‚С‡РёРєРѕРІ СЃСѓРґРЅР°</i> Р”РјРёС‚СЂРёР№ РЎР°РІРёРЅСЃ РґР°Р» РїСЂРёР·РЅР°С‚РµР»СЊРЅС‹Рµ
+ РїРѕРєР°Р·Р°РЅРёСЏ Рё РЅР°Р·РІР°Р» РёРјРµРЅР° Р·Р°РєР°Р·С‡РёРєРѕРІ РїСЂРµСЃС‚СѓРїР»РµРЅРёСЏ. РћСЂРіР°РЅРёР·Р°С‚РѕСЂР°РјРё Р·Р°С…РІР°С‚Р° Р±С‹Р»Рё 
+СЃР°Рј Р”.РЎР°РІРёРЅСЃ Рё РЅРµРјРµС†РєРёР№ Р±РёР·РЅРµСЃРјРµРЅ РЎРµСЂРіРµР№ Р”РµРјС‡РµРЅРєРѕ, Р° Р·Р°РєР°Р·С‡РёРєРѕРј- СЌСЃС‚РѕРЅСЃРєРёР№ РёСЃС‚РѕСЂРёРє 
+Рё РІРѕРµРЅРЅС‹Р№ СЌРєСЃРїРµСЂС‚ Р­СЂРёРє-РќРёР№Р»РµСЃ РљСЂРѕСЃСЃ.
+Рћ РїСЂРёС‡РёРЅР°С…, РїРѕР±СѓРґРёРІС€РёС… РёСЃС‚РѕСЂРёРєР° РЅР° С‚Р°РєРёРµ РґРµР№СЃС‚РІРёСЏ, РЅРёС‡РµРіРѕ РЅРµ СЃРѕРѕР±С‰Р°РµС‚СЃСЏ.
+РџРѕ РґР°РЅРЅС‹Рј СЌСЃС‚РѕРЅСЃРєРёС… РЎРњР, Р­.РљСЂРѕСЃСЃ РґРѕ РЅРµРґР°РІРЅРµРіРѕ РІСЂРµРјРµРЅРё РІРѕР·РіР»Р°РІР»СЏР» Р‘СЋСЂРѕ РёРЅС„РѕСЂРјР°С†РёРё 
+Р“РѕСЃСѓРґР°СЂСЃС‚РІРµРЅРЅРѕР№ РєР°РЅС†РµР»СЏСЂРёРё Р­СЃС‚РѕРЅРёРё, С‚Рѕ РµСЃС‚СЊ СЃР»СѓР¶Р±Сѓ РІРЅРµС€РЅРµР№ РїРѕР»РёС‚РёС‡РµСЃРєРѕР№ 
+СЂР°Р·РІРµРґРєРё СЃС‚СЂР°РЅС‹.
+РќР°РїРѕРјРЅРёРј, РЅРѕС‡СЊСЋ 24 РёСЋР»СЏ 2009Рі. РІ РІРѕРґР°С… РѕС‚РєСЂС‹С‚РѕРіРѕ РјРѕСЂСЏ Рё РІРЅРµ СЋСЂРёСЃРґРёРєС†РёРё 
+РєР°РєРѕРіРѕ-Р»РёР±Рѕ РіРѕСЃСѓРґР°СЂСЃС‚РІР° РїСЂРµСЃС‚СѓРїРЅРёРєРё РЅР° РЅРµР±РѕР»СЊС€РѕР№ Р»РѕРґРєРµ РЅР°РїР°Р»Рё Рё Р·Р°С…РІР°С‚РёР»Рё 
+РєРѕСЂР°Р±Р»СЊ СЃ РіСЂСѓР·РѕРј РґСЂРµРІРµСЃРёРЅС‹, С€РµРґС€РёР№ РїРѕРґ С„Р»Р°РіРѕРј РњР°Р»СЊС‚С‹, СЃ СЌРєРёРїР°Р¶РµРј, СЃРѕСЃС‚РѕСЏС‰РёРј РёР· 
+СЂРѕСЃСЃРёР№СЃРєРёС… РіСЂР°Р¶РґР°РЅ.
+РџРѕ РґР°РЅРЅС‹Рј СЃР»РµРґСЃС‚РІРёСЏ, РїСЂРµСЃС‚СѓРїРЅРёРєРё Р·Р°СЂР°РЅРµРµ РїРѕРґРѕР±СЂР°Р»Рё РѕСЂСѓР¶РёРµ РґР»СЏ РїРѕРґР°РІР»РµРЅРёСЏ 
+СЃРѕРїСЂРѕС‚РёРІР»РµРЅРёСЏ С‡Р»РµРЅРѕРІ СЌРєРёРїР°Р¶Р° СЃСѓС…РѕРіСЂСѓР·Р°, Р° С‚Р°РєР¶Рµ РїРѕРґРіРѕС‚РѕРІРёР»Рё РјР°СЃРєРё, С‡РµСЂРЅСѓСЋ 
+РѕРґРµР¶РґСѓ СЃ РЅР°РґРїРёСЃСЏРјРё Police Рё РјР°Р»РµРЅСЊРєСѓСЋ Р»РѕРґРєСѓ РґР»СЏ Р·Р°С…РІР°С‚Р°. 17 Р°РІРіСѓСЃС‚Р° 2009Рі. 
+РјРѕСЂСЏРєР°РјРё Р’РѕРµРЅРЅРѕ-РјРѕСЂСЃРєРѕРіРѕ С„Р»РѕС‚Р° Р РѕСЃСЃРёРё СЃСѓРґРЅРѕ Arctic Sea Рё РµРіРѕ СЌРєРёРїР°Р¶ Р±С‹Р»Рё 
+РѕСЃРІРѕР±РѕР¶РґРµРЅС‹, Р° Р·Р°С…РІР°С‚С‡РёРєРё Р·Р°РґРµСЂР¶Р°РЅС‹.
 </div>
 <hr>
 </BODY>
