--- a/viewcode.html
+++ b/viewcode.html
@@ -1,46 +1,46 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-<H1>Просмотр исходного кода.</H1>
+<H1>РџСЂРѕСЃРјРѕС‚СЂ РёСЃС…РѕРґРЅРѕРіРѕ РєРѕРґР°.</H1>
 
 <pre>
-В примерах часто необходимо посмотреть исходный код части страницы.
-Причем как оригинальный код, так и тот, который получается после того,
-как по нему "прошлись" скрипты. 
-Для этого используются два специальных класса textarea. В одну из них попадает
-оригинальный код элемента, в другую код элемента после обработки javascript.
-Это позволяет увидеть, как работают "умные" элементы. 
+Р’ РїСЂРёРјРµСЂР°С… С‡Р°СЃС‚Рѕ РЅРµРѕР±С…РѕРґРёРјРѕ РїРѕСЃРјРѕС‚СЂРµС‚СЊ РёСЃС…РѕРґРЅС‹Р№ РєРѕРґ С‡Р°СЃС‚Рё СЃС‚СЂР°РЅРёС†С‹.
+РџСЂРёС‡РµРј РєР°Рє РѕСЂРёРіРёРЅР°Р»СЊРЅС‹Р№ РєРѕРґ, С‚Р°Рє Рё С‚РѕС‚, РєРѕС‚РѕСЂС‹Р№ РїРѕР»СѓС‡Р°РµС‚СЃСЏ РїРѕСЃР»Рµ С‚РѕРіРѕ,
+РєР°Рє РїРѕ РЅРµРјСѓ "РїСЂРѕС€Р»РёСЃСЊ" СЃРєСЂРёРїС‚С‹. 
+Р”Р»СЏ СЌС‚РѕРіРѕ РёСЃРїРѕР»СЊР·СѓСЋС‚СЃСЏ РґРІР° СЃРїРµС†РёР°Р»СЊРЅС‹С… РєР»Р°СЃСЃР° textarea. Р’ РѕРґРЅСѓ РёР· РЅРёС… РїРѕРїР°РґР°РµС‚
+РѕСЂРёРіРёРЅР°Р»СЊРЅС‹Р№ РєРѕРґ СЌР»РµРјРµРЅС‚Р°, РІ РґСЂСѓРіСѓСЋ РєРѕРґ СЌР»РµРјРµРЅС‚Р° РїРѕСЃР»Рµ РѕР±СЂР°Р±РѕС‚РєРё javascript.
+Р­С‚Рѕ РїРѕР·РІРѕР»СЏРµС‚ СѓРІРёРґРµС‚СЊ, РєР°Рє СЂР°Р±РѕС‚Р°СЋС‚ "СѓРјРЅС‹Рµ" СЌР»РµРјРµРЅС‚С‹. 
 
-Например ниже приведена карта сайта, отображаемая слева. 
+РќР°РїСЂРёРјРµСЂ РЅРёР¶Рµ РїСЂРёРІРµРґРµРЅР° РєР°СЂС‚Р° СЃР°Р№С‚Р°, РѕС‚РѕР±СЂР°Р¶Р°РµРјР°СЏ СЃР»РµРІР°. 
 <span id=sitemap_area>
 <div class=sitemap_current>sitemap.xml</div>
 </span>
 
 <span id=preview_area>
-В исходном виде текст элемента выглядит так.
+Р’ РёСЃС…РѕРґРЅРѕРј РІРёРґРµ С‚РµРєСЃС‚ СЌР»РµРјРµРЅС‚Р° РІС‹РіР»СЏРґРёС‚ С‚Р°Рє.
 <textarea class=preview>sitemap_area</textarea>
 </span>
 
 <span id=postview_area>
-После обработки вот так.
+РџРѕСЃР»Рµ РѕР±СЂР°Р±РѕС‚РєРё РІРѕС‚ С‚Р°Рє.
 <textarea class=postview>sitemap_area</textarea>
 </span>
 
 
-Для того, чтобы достичь этого, в текст добавляется два элемента.
-Так выглядит исходный текст элемента отображающего исходный код.
+Р”Р»СЏ С‚РѕРіРѕ, С‡С‚РѕР±С‹ РґРѕСЃС‚РёС‡СЊ СЌС‚РѕРіРѕ, РІ С‚РµРєСЃС‚ РґРѕР±Р°РІР»СЏРµС‚СЃСЏ РґРІР° СЌР»РµРјРµРЅС‚Р°.
+РўР°Рє РІС‹РіР»СЏРґРёС‚ РёСЃС…РѕРґРЅС‹Р№ С‚РµРєСЃС‚ СЌР»РµРјРµРЅС‚Р° РѕС‚РѕР±СЂР°Р¶Р°СЋС‰РµРіРѕ РёСЃС…РѕРґРЅС‹Р№ РєРѕРґ.
 <textarea class=preview>preview_area</textarea>
 
-А так исходный текст элемента отображающего результирующий код.
+Рђ С‚Р°Рє РёСЃС…РѕРґРЅС‹Р№ С‚РµРєСЃС‚ СЌР»РµРјРµРЅС‚Р° РѕС‚РѕР±СЂР°Р¶Р°СЋС‰РµРіРѕ СЂРµР·СѓР»СЊС‚РёСЂСѓСЋС‰РёР№ РєРѕРґ.
 <textarea class=preview>postview_area</textarea>
  
 
-Вот собственно и всё.
+Р’РѕС‚ СЃРѕР±СЃС‚РІРµРЅРЅРѕ Рё РІСЃС‘.
 </pre>
 </body>
 </html>
