--- a/Reinvoter_Dch.Hank__Kak_pasti_kotov._Nastavlenie_dlya_programmistov_rukovodyashih_drugimi_programmistami_www.Litru.ru_90031.html
+++ b/Reinvoter_Dch.Hank__Kak_pasti_kotov._Nastavlenie_dlya_programmistov_rukovodyashih_drugimi_programmistami_www.Litru.ru_90031.html
@@ -1,20 +1,20 @@
- <HTML>
+п»ї <HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
 
-<h1>Как пасти котов.</h1>
+<h1>РљР°Рє РїР°СЃС‚Рё РєРѕС‚РѕРІ.</h1>
 
-<a href="managers/Reinvoter_Dch.Hank__Kak_pasti_kotov._Nastavlenie_dlya_programmistov_rukovodyashih_drugimi_programmistami_www.Litru.ru_90031.fb2">Файл в формате FB2</a>.
+<a href="managers/Reinvoter_Dch.Hank__Kak_pasti_kotov._Nastavlenie_dlya_programmistov_rukovodyashih_drugimi_programmistami_www.Litru.ru_90031.fb2">Р¤Р°Р№Р» РІ С„РѕСЂРјР°С‚Рµ FB2</a>.
 
 <div class=fb2 style="width: 475px;">managers/Reinvoter_Dch.Hank__Kak_pasti_kotov._Nastavlenie_dlya_programmistov_rukovodyashih_drugimi_programmistami_www.Litru.ru_90031.fb2</div>
 
 
-Всё.
+Р’СЃС‘.
 </pre>
 
 </body>
