--- a/csv.html
+++ b/csv.html
@@ -1,14 +1,14 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Пример импорта внешнего csv</H1>
+  <H1>РџСЂРёРјРµСЂ РёРјРїРѕСЂС‚Р° РІРЅРµС€РЅРµРіРѕ csv</H1>
 
-<h3>Курс доллара</h3>
+<h3>РљСѓСЂСЃ РґРѕР»Р»Р°СЂР°</h3>
 <div class=csv>usd.csv</div>
 
 </BODY>
