--- a/demobarcode.html
+++ b/demobarcode.html
@@ -1,83 +1,83 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Двумерные штрихкоды на сайте</H1>
+  <H1>Р”РІСѓРјРµСЂРЅС‹Рµ С€С‚СЂРёС…РєРѕРґС‹ РЅР° СЃР°Р№С‚Рµ</H1>
 <pre>
-Принципы описаны <a href="/faq19.html">здесь</a>.
+РџСЂРёРЅС†РёРїС‹ РѕРїРёСЃР°РЅС‹ <a href="/faq19.html">Р·РґРµСЃСЊ</a>.
 
-Сфера применения штрихкодов достаточно узкая.
-Это необходимость передать информацию с твердой копии документа, например
-бумаги на мобильное устройство. Чаще всего это сотовый телефон.
-Передаются ссылки, номера телефонов, небольшие тексты и визитные карточки.
+РЎС„РµСЂР° РїСЂРёРјРµРЅРµРЅРёСЏ С€С‚СЂРёС…РєРѕРґРѕРІ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ СѓР·РєР°СЏ.
+Р­С‚Рѕ РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚СЊ РїРµСЂРµРґР°С‚СЊ РёРЅС„РѕСЂРјР°С†РёСЋ СЃ С‚РІРµСЂРґРѕР№ РєРѕРїРёРё РґРѕРєСѓРјРµРЅС‚Р°, РЅР°РїСЂРёРјРµСЂ
+Р±СѓРјР°РіРё РЅР° РјРѕР±РёР»СЊРЅРѕРµ СѓСЃС‚СЂРѕР№СЃС‚РІРѕ. Р§Р°С‰Рµ РІСЃРµРіРѕ СЌС‚Рѕ СЃРѕС‚РѕРІС‹Р№ С‚РµР»РµС„РѕРЅ.
+РџРµСЂРµРґР°СЋС‚СЃСЏ СЃСЃС‹Р»РєРё, РЅРѕРјРµСЂР° С‚РµР»РµС„РѕРЅРѕРІ, РЅРµР±РѕР»СЊС€РёРµ С‚РµРєСЃС‚С‹ Рё РІРёР·РёС‚РЅС‹Рµ РєР°СЂС‚РѕС‡РєРё.
 
-Ссылка на текущую страницу.
+РЎСЃС‹Р»РєР° РЅР° С‚РµРєСѓС‰СѓСЋ СЃС‚СЂР°РЅРёС†Сѓ.
 <span id=area1>
 <img class=href>
 </span>
 
 
-Исходный вид элемента на странице.
+РСЃС…РѕРґРЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° РЅР° СЃС‚СЂР°РЅРёС†Рµ.
 
 <textarea class=preview>area1</textarea>
 
-Конечный вид элемента .
+РљРѕРЅРµС‡РЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° .
 
 <textarea class=postview>area1</textarea>
 
 
-Номер телефона в формате datamatrix
+РќРѕРјРµСЂ С‚РµР»РµС„РѕРЅР° РІ С„РѕСЂРјР°С‚Рµ datamatrix
 <span id=area2>
 <img class=datamatrix alt="TEL:+7495999999">
 </span>
 
-Исходный вид элемента на странице.
+РСЃС…РѕРґРЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° РЅР° СЃС‚СЂР°РЅРёС†Рµ.
 
 <textarea class=preview>area2</textarea>
 
-Конечный вид элемента .
+РљРѕРЅРµС‡РЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° .
 
 <textarea class=postview>area2</textarea>
 
 
-Номер телефона в формате qr-code 
+РќРѕРјРµСЂ С‚РµР»РµС„РѕРЅР° РІ С„РѕСЂРјР°С‚Рµ qr-code 
 <span id=area3>
 <img class=qrcode alt="TEL:+7495999999">
 </span>
 
-Исходный вид элемента на странице.
+РСЃС…РѕРґРЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° РЅР° СЃС‚СЂР°РЅРёС†Рµ.
 
 <textarea class=preview>area3</textarea>
 
-Конечный вид элемента .
+РљРѕРЅРµС‡РЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° .
 
 <textarea class=postview>area3</textarea>
 
 
-Простой текст.
+РџСЂРѕСЃС‚РѕР№ С‚РµРєСЃС‚.
 <span id=area4>
-<img class=datamatrix alt="Ехал Гpека через реку, 
-Видит Гpека - в рeкe рак, 
+<img class=datamatrix alt="Р•С…Р°Р» Р“pРµРєР° С‡РµСЂРµР· СЂРµРєСѓ, 
+Р’РёРґРёС‚ Р“pРµРєР° - РІ СЂeРєe СЂР°Рє, 
 ">
 </span>
 
-Исходный вид элемента на странице.
+РСЃС…РѕРґРЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° РЅР° СЃС‚СЂР°РЅРёС†Рµ.
 
 <textarea class=preview>area4</textarea>
 
-Конечный вид элемента .
+РљРѕРЅРµС‡РЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° .
 
 <textarea class=postview>area4</textarea>
 
 
-Визитная карточка
+Р’РёР·РёС‚РЅР°СЏ РєР°СЂС‚РѕС‡РєР°
 <span id=area5>
 <img class=datamatrix alt="BEGIN:VCARD
-N;ENCODING=BASE64;CHARSET=windows-1251:1+j35fDo7TvO6+XjO83o6u7r4OXi6Pc7Ow==
+N;ENCODING=BASE64;CHARSET=utf-8:1+j35fDo7TvO6+XjO83o6u7r4OXi6Pc7Ow==
 
 EMAIL:OChicherin@yandex.ru
 URL:http://ochicherin.narod.ru
@@ -85,17 +85,17 @@ END:VCARD
 "> 
 </span>
 
-Исходный вид элемента на странице.
+РСЃС…РѕРґРЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° РЅР° СЃС‚СЂР°РЅРёС†Рµ.
 
 <textarea class=preview>area5</textarea>
 
-Конечный вид элемента .
+РљРѕРЅРµС‡РЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° .
 
 <textarea class=postview>area5</textarea>
 
 
 
-Всё.
+Р’СЃС‘.
 </pre>
 </body>
 </html>
