--- a/extcombo.html
+++ b/extcombo.html
@@ -1,45 +1,45 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-<H1>Combobox загружаемый из внешнего файла.</H1>
+<H1>Combobox Р·Р°РіСЂСѓР¶Р°РµРјС‹Р№ РёР· РІРЅРµС€РЅРµРіРѕ С„Р°Р№Р»Р°.</H1>
 
 <pre>
-Часто возникают ситуации, когда элемент select с один и тем же содержимым
-используется на нескольких страницах. 
-Чтобы избежать copy/paste можно загружать элемент из внешнего файла.
+Р§Р°СЃС‚Рѕ РІРѕР·РЅРёРєР°СЋС‚ СЃРёС‚СѓР°С†РёРё, РєРѕРіРґР° СЌР»РµРјРµРЅС‚ select СЃ РѕРґРёРЅ Рё С‚РµРј Р¶Рµ СЃРѕРґРµСЂР¶РёРјС‹Рј
+РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ РЅР° РЅРµСЃРєРѕР»СЊРєРёС… СЃС‚СЂР°РЅРёС†Р°С…. 
+Р§С‚РѕР±С‹ РёР·Р±РµР¶Р°С‚СЊ copy/paste РјРѕР¶РЅРѕ Р·Р°РіСЂСѓР¶Р°С‚СЊ СЌР»РµРјРµРЅС‚ РёР· РІРЅРµС€РЅРµРіРѕ С„Р°Р№Р»Р°.
  
 
-Вот работающий элемент
+Р’РѕС‚ СЂР°Р±РѕС‚Р°СЋС‰РёР№ СЌР»РµРјРµРЅС‚
 <span id=list_area>
 <SELECT id="list1" class=external>
-<option value="fotogalery.xml">Фотогалерея</option>
-<option value="fotogalery.xml">Фотогалерея 2</option>
+<option value="fotogalery.xml">Р¤РѕС‚РѕРіР°Р»РµСЂРµСЏ</option>
+<option value="fotogalery.xml">Р¤РѕС‚РѕРіР°Р»РµСЂРµСЏ 2</option>
 </SELECT>
 </span>
 
-Для того, чтобы его сделать, надо создать один или несколько файлов с наполнением 
-аналогичным стандартному наполнению тега select, т.е. тегами option. 
-Файл должен иметь кодировку utf-8.
-В самом документе в тегах option в атрибуте value указывается путь к файлу.
-В тексте тега option может указываться заголовок списка(заготовка на будущее).
+Р”Р»СЏ С‚РѕРіРѕ, С‡С‚РѕР±С‹ РµРіРѕ СЃРґРµР»Р°С‚СЊ, РЅР°РґРѕ СЃРѕР·РґР°С‚СЊ РѕРґРёРЅ РёР»Рё РЅРµСЃРєРѕР»СЊРєРѕ С„Р°Р№Р»РѕРІ СЃ РЅР°РїРѕР»РЅРµРЅРёРµРј 
+Р°РЅР°Р»РѕРіРёС‡РЅС‹Рј СЃС‚Р°РЅРґР°СЂС‚РЅРѕРјСѓ РЅР°РїРѕР»РЅРµРЅРёСЋ С‚РµРіР° select, С‚.Рµ. С‚РµРіР°РјРё option. 
+Р¤Р°Р№Р» РґРѕР»Р¶РµРЅ РёРјРµС‚СЊ РєРѕРґРёСЂРѕРІРєСѓ utf-8.
+Р’ СЃР°РјРѕРј РґРѕРєСѓРјРµРЅС‚Рµ РІ С‚РµРіР°С… option РІ Р°С‚СЂРёР±СѓС‚Рµ value СѓРєР°Р·С‹РІР°РµС‚СЃСЏ РїСѓС‚СЊ Рє С„Р°Р№Р»Сѓ.
+Р’ С‚РµРєСЃС‚Рµ С‚РµРіР° option РјРѕР¶РµС‚ СѓРєР°Р·С‹РІР°С‚СЊСЃСЏ Р·Р°РіРѕР»РѕРІРѕРє СЃРїРёСЃРєР°(Р·Р°РіРѕС‚РѕРІРєР° РЅР° Р±СѓРґСѓС‰РµРµ).
 
-Пример содержимого файла.
+РџСЂРёРјРµСЂ СЃРѕРґРµСЂР¶РёРјРѕРіРѕ С„Р°Р№Р»Р°.
 
 <textarea class=sample>fotogalery.xml</textarea>
 
-Исходный вид элемента на странице.
+РСЃС…РѕРґРЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° РЅР° СЃС‚СЂР°РЅРёС†Рµ.
 
 <textarea class=preview>list_area</textarea>
 
-Конечный вид элемента после отработки скриптов.
+РљРѕРЅРµС‡РЅС‹Р№ РІРёРґ СЌР»РµРјРµРЅС‚Р° РїРѕСЃР»Рµ РѕС‚СЂР°Р±РѕС‚РєРё СЃРєСЂРёРїС‚РѕРІ.
 <textarea class=postview>list_area</textarea>
 
-Все.
+Р’СЃРµ.
 </pre>
 </body>
 </html>
