--- a/faq1.html
+++ b/faq1.html
@@ -1,30 +1,30 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Как обжать витую пару.</H1>
+  <H1>РљР°Рє РѕР±Р¶Р°С‚СЊ РІРёС‚СѓСЋ РїР°СЂСѓ.</H1>
 
-Все очень просто.
+Р’СЃРµ РѕС‡РµРЅСЊ РїСЂРѕСЃС‚Рѕ.
 <ol>
-<li> Зачищаем наружную изоляцию кабеля. На круглом кабеле лучше сделать кольцевой надрез и снять оплетку вручную.
-<li> Разводим оплетку в определенном порядке, выравниваем длинну проводов и подрезаем. 
-<li> Вставляем провода в разъем и обжимаем.
+<li> Р—Р°С‡РёС‰Р°РµРј РЅР°СЂСѓР¶РЅСѓСЋ РёР·РѕР»СЏС†РёСЋ РєР°Р±РµР»СЏ. РќР° РєСЂСѓРіР»РѕРј РєР°Р±РµР»Рµ Р»СѓС‡С€Рµ СЃРґРµР»Р°С‚СЊ РєРѕР»СЊС†РµРІРѕР№ РЅР°РґСЂРµР· Рё СЃРЅСЏС‚СЊ РѕРїР»РµС‚РєСѓ РІСЂСѓС‡РЅСѓСЋ.
+<li> Р Р°Р·РІРѕРґРёРј РѕРїР»РµС‚РєСѓ РІ РѕРїСЂРµРґРµР»РµРЅРЅРѕРј РїРѕСЂСЏРґРєРµ, РІС‹СЂР°РІРЅРёРІР°РµРј РґР»РёРЅРЅСѓ РїСЂРѕРІРѕРґРѕРІ Рё РїРѕРґСЂРµР·Р°РµРј. 
+<li> Р’СЃС‚Р°РІР»СЏРµРј РїСЂРѕРІРѕРґР° РІ СЂР°Р·СЉРµРј Рё РѕР±Р¶РёРјР°РµРј.
 </ol>
 
 <table>
 <tr>
 <td></td>
-<td colspan=8 align=center bgcolor=#DDDDDD height=30> разъем </td>
+<td colspan=8 align=center bgcolor=#DDDDDD height=30> СЂР°Р·СЉРµРј </td>
 <td></td>
-<td colspan=8 align=center bgcolor=#DDDDDD height=30> разъем </td>
+<td colspan=8 align=center bgcolor=#DDDDDD height=30> СЂР°Р·СЉРµРј </td>
 </tr>
 <tr height=70>
 <td rowspan=2 width=130 style="PADDING: 16px;">
-Для обычного соединения (HUB - Comp) распределение проводов с обеих сторон одинаково и выглядит так.
+Р”Р»СЏ РѕР±С‹С‡РЅРѕРіРѕ СЃРѕРµРґРёРЅРµРЅРёСЏ (HUB - Comp) СЂР°СЃРїСЂРµРґРµР»РµРЅРёРµ РїСЂРѕРІРѕРґРѕРІ СЃ РѕР±РµРёС… СЃС‚РѕСЂРѕРЅ РѕРґРёРЅР°РєРѕРІРѕ Рё РІС‹РіР»СЏРґРёС‚ С‚Р°Рє.
 </td> 
 <td style="border-left-style:dashed;border-color:Orange;border-width:4px">&nbsp;</td>
 <td style="border-left-style:solid; border-color:Orange;border-width:4px">&nbsp;</td>
@@ -35,8 +35,8 @@
 <td style="border-left-style:dashed;border-color:Brown;border-width: 4px">&nbsp;</td>
 <td style="border-left-style:solid; border-color:Brown;border-width: 4px">&nbsp;</td>
 <td rowspan=2 width=130 style="PADDING: 16px;">
-Для кросс соединения (HUB - HUB) распределение проводов разное.
-Она сторона должна выглядеть как на картинке слева, другая как на картинке справа.
+Р”Р»СЏ РєСЂРѕСЃСЃ СЃРѕРµРґРёРЅРµРЅРёСЏ (HUB - HUB) СЂР°СЃРїСЂРµРґРµР»РµРЅРёРµ РїСЂРѕРІРѕРґРѕРІ СЂР°Р·РЅРѕРµ.
+РћРЅР° СЃС‚РѕСЂРѕРЅР° РґРѕР»Р¶РЅР° РІС‹РіР»СЏРґРµС‚СЊ РєР°Рє РЅР° РєР°СЂС‚РёРЅРєРµ СЃР»РµРІР°, РґСЂСѓРіР°СЏ РєР°Рє РЅР° РєР°СЂС‚РёРЅРєРµ СЃРїСЂР°РІР°.
 </td> 
 <td style="border-left-style:dashed;border-color:Green;border-width: 4px">&nbsp;</td>
 <td style="border-left-style:solid; border-color:Green;border-width: 4px">&nbsp;</td>
@@ -48,8 +48,8 @@
 <td style="border-left-style:solid; border-color:Brown;border-width: 4px">&nbsp;</td>
 </tr>
 <tr height=130>
-<td colspan=8 align=center bgcolor=#999999> кабель </td>
-<td colspan=8 align=center bgcolor=#999999> кабель </td>
+<td colspan=8 align=center bgcolor=#999999> РєР°Р±РµР»СЊ </td>
+<td colspan=8 align=center bgcolor=#999999> РєР°Р±РµР»СЊ </td>
 </tr>
 </table>
 
