--- a/faq10.html
+++ b/faq10.html
@@ -1,20 +1,20 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Как сделать создать Java сервлет в XDB</H1>
+  <H1>РљР°Рє СЃРґРµР»Р°С‚СЊ СЃРѕР·РґР°С‚СЊ Java СЃРµСЂРІР»РµС‚ РІ XDB</H1>
 
 <pre>
-Оригинал <a href="http://citforum.ru/database/oracle/servlets_db/">здесь</a>. Слегка модифицируем его.
+РћСЂРёРіРёРЅР°Р» <a href="http://citforum.ru/database/oracle/servlets_db/">Р·РґРµСЃСЊ</a>. РЎР»РµРіРєР° РјРѕРґРёС„РёС†РёСЂСѓРµРј РµРіРѕ.
 
 
-Коннектимся к БД как SCOTT.
+РљРѕРЅРЅРµРєС‚РёРјСЃСЏ Рє Р‘Р” РєР°Рє SCOTT.
 
-Создаем собственно сервлет.
+РЎРѕР·РґР°РµРј СЃРѕР±СЃС‚РІРµРЅРЅРѕ СЃРµСЂРІР»РµС‚.
 </pre>
 <textarea class="example">
 create or replace and compile java source named XMLDBServlet as
@@ -50,7 +50,7 @@ public class XMLDBServlet extends GenericServlet {
 </textarea>
 <pre>
 
-Регистрируем его в XBD.
+Р РµРіРёСЃС‚СЂРёСЂСѓРµРј РµРіРѕ РІ XBD.
 </pre>
 <textarea class="example">
 DECLARE
@@ -74,7 +74,7 @@ DECLARE
 </textarea>
 <pre>
 
-Смотрим, что получилось в <i>/xdbconfig.xml</i>.
+РЎРјРѕС‚СЂРёРј, С‡С‚Рѕ РїРѕР»СѓС‡РёР»РѕСЃСЊ РІ <i>/xdbconfig.xml</i>.
 </pre>
 <textarea class="example">
  <servlet xmlns="http://xmlns.oracle.com/xdb/xdbconfig.xsd">
@@ -92,7 +92,7 @@ DECLARE
               </servlet></textarea>
 <pre>
 
-Вызываем его через браузер 
+Р’С‹Р·С‹РІР°РµРј РµРіРѕ С‡РµСЂРµР· Р±СЂР°СѓР·РµСЂ 
 
 <b>http://localhost:8080/xdbserv?rex=Oleg</b>
 </pre>
@@ -110,7 +110,7 @@ DECLARE
 <pre>
 
 
-Всё.
+Р’СЃС‘.
 </pre>
 
 </BODY>
