--- a/faq19.html
+++ b/faq19.html
@@ -1,116 +1,116 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Штрихкоды и мобильный телефон</H1>
+  <H1>РЁС‚СЂРёС…РєРѕРґС‹ Рё РјРѕР±РёР»СЊРЅС‹Р№ С‚РµР»РµС„РѕРЅ</H1>
 
 <pre>
-В мобильник трудно вводить большие объемы данных.
-Эту проблему решили при помощи генерации двухмерного штрихкода и приложений, 
-которые этот код считывают. Как всегда есть проблемы с русским языком.
+Р’ РјРѕР±РёР»СЊРЅРёРє С‚СЂСѓРґРЅРѕ РІРІРѕРґРёС‚СЊ Р±РѕР»СЊС€РёРµ РѕР±СЉРµРјС‹ РґР°РЅРЅС‹С….
+Р­С‚Сѓ РїСЂРѕР±Р»РµРјСѓ СЂРµС€РёР»Рё РїСЂРё РїРѕРјРѕС‰Рё РіРµРЅРµСЂР°С†РёРё РґРІСѓС…РјРµСЂРЅРѕРіРѕ С€С‚СЂРёС…РєРѕРґР° Рё РїСЂРёР»РѕР¶РµРЅРёР№, 
+РєРѕС‚РѕСЂС‹Рµ СЌС‚РѕС‚ РєРѕРґ СЃС‡РёС‚С‹РІР°СЋС‚. РљР°Рє РІСЃРµРіРґР° РµСЃС‚СЊ РїСЂРѕР±Р»РµРјС‹ СЃ СЂСѓСЃСЃРєРёРј СЏР·С‹РєРѕРј.
 
-Сайты генерирующие код
+РЎР°Р№С‚С‹ РіРµРЅРµСЂРёСЂСѓСЋС‰РёРµ РєРѕРґ
  - <a href="http://mobilecodes.nokia.com/create.jsp">Nokia</a>
  - <a href="http://www.i-nigma.com/CreateBarcodes.html">i-nigma</a>
- - <a href="http://datamatrix.kaywa.com/">kaywa(работает русский язык)</a>
+ - <a href="http://datamatrix.kaywa.com/">kaywa(СЂР°Р±РѕС‚Р°РµС‚ СЂСѓСЃСЃРєРёР№ СЏР·С‹Рє)</a>
  
 
-Программы считывания кода 
+РџСЂРѕРіСЂР°РјРјС‹ СЃС‡РёС‚С‹РІР°РЅРёСЏ РєРѕРґР° 
  - <a href="http://mobilecodes.nokia.com/scan.htm">Nokia Barcode Reader</a>
  - <a href="http://www.upc.fi/en/upcode/instructions/download">Upcode</a>
 
-Примеры:
-RSS лента РБК "Главные новости"
-<img src="http://datamatrix.kaywa.com/img.php?s=4&d=http%3A%2F%2Fstatic.feed.rbc.ru%2Frbc%2Finternal%2Frss.rbc.ru%2Frbc.ru%2Fmainnews.rss" alt="RSS лента РБК Главные новости"  />
+РџСЂРёРјРµСЂС‹:
+RSS Р»РµРЅС‚Р° Р Р‘Рљ "Р“Р»Р°РІРЅС‹Рµ РЅРѕРІРѕСЃС‚Рё"
+<img src="http://datamatrix.kaywa.com/img.php?s=4&d=http%3A%2F%2Fstatic.feed.rbc.ru%2Frbc%2Finternal%2Frss.rbc.ru%2Frbc.ru%2Fmainnews.rss" alt="RSS Р»РµРЅС‚Р° Р Р‘Рљ Р“Р»Р°РІРЅС‹Рµ РЅРѕРІРѕСЃС‚Рё"  />
 
-RSS лента NEWSru.com "Все новости"
+RSS Р»РµРЅС‚Р° NEWSru.com "Р’СЃРµ РЅРѕРІРѕСЃС‚Рё"
 <img src="http://datamatrix.kaywa.com/img.php?s=4&d=http%3A%2F%2Ffeeds.newsru.com%2Fcom%2Fwww%2Fnews%2Fall">
 
-RSS лента lenta.ru
+RSS Р»РµРЅС‚Р° lenta.ru
 <img src="http://datamatrix.kaywa.com/img.php?s=4&d=http%3A%2F%2Flenta.ru%2Frss%2F">
 
 
-Плоский английский текст
+РџР»РѕСЃРєРёР№ Р°РЅРіР»РёР№СЃРєРёР№ С‚РµРєСЃС‚
 <img src="http://datamatrix.kaywa.com/img.php?s=4&d=Select%20what%20information%20you%20want%20to%20encode%3A%20a%20website%20link%2C%20some%20text%2C%20or%20a%20phone%20number%20to%20dial">
 
 
-Плоский русский текст
+РџР»РѕСЃРєРёР№ СЂСѓСЃСЃРєРёР№ С‚РµРєСЃС‚
 <img src="http://datamatrix.kaywa.com/img.php?s=4&d=%D0%92%20%D1%87%D0%B0%D1%89%D0%B0%D1%85%20%D1%8E%D0%B3%D0%B0%20%D0%B6%D0%B8%D0%BB%20%D0%B1%D1%8B%20%D1%84%D0%B8%D0%BA%D1%83%D1%81%3F%20%D0%B4%D0%B0%20%D0%BD%D0%BE%20%D1%84%D0%B0%D0%BB%D1%8C%D1%88%D0%B8%D0%B2%D1%8B%D0%B9%20%D1%8D%D0%BA%D0%B7%D0%B5%D0%BC%D0%BF%D0%BB%D1%8F%D1%80">
 
-При этом телефон поддерживает не только произвольный текст, 
-но и специальные форматы, позволяющие вводить контакты, смс, ссылки и тд
+РџСЂРё СЌС‚РѕРј С‚РµР»РµС„РѕРЅ РїРѕРґРґРµСЂР¶РёРІР°РµС‚ РЅРµ С‚РѕР»СЊРєРѕ РїСЂРѕРёР·РІРѕР»СЊРЅС‹Р№ С‚РµРєСЃС‚, 
+РЅРѕ Рё СЃРїРµС†РёР°Р»СЊРЅС‹Рµ С„РѕСЂРјР°С‚С‹, РїРѕР·РІРѕР»СЏСЋС‰РёРµ РІРІРѕРґРёС‚СЊ РєРѕРЅС‚Р°РєС‚С‹, СЃРјСЃ, СЃСЃС‹Р»РєРё Рё С‚Рґ
 
-Шаблон СМС.
+РЁР°Р±Р»РѕРЅ РЎРњРЎ.
 
-Формат сообщения
-SMSTO:[номер телефона]:[текст сообщения]
+Р¤РѕСЂРјР°С‚ СЃРѕРѕР±С‰РµРЅРёСЏ
+SMSTO:[РЅРѕРјРµСЂ С‚РµР»РµС„РѕРЅР°]:[С‚РµРєСЃС‚ СЃРѕРѕР±С‰РµРЅРёСЏ]
 
-Пример
-SMSTO:84951234567:Поздравляем. Вы выиграли в лотерею Ауди А6.
+РџСЂРёРјРµСЂ
+SMSTO:84951234567:РџРѕР·РґСЂР°РІР»СЏРµРј. Р’С‹ РІС‹РёРіСЂР°Р»Рё РІ Р»РѕС‚РµСЂРµСЋ РђСѓРґРё Рђ6.
 <img src="http://datamatrix.kaywa.com/img.php?s=5&d=SMSTO%3A84951234567%3A%D0%9F%D0%BE%D0%B7%D0%B4%D1%80%D0%B0%D0%B2%D0%BB%D1%8F%D0%B5%D0%BC.%20%D0%92%D1%8B%20%D0%B2%D1%8B%D0%B8%D0%B3%D1%80%D0%B0%D0%BB%D0%B8%20%D0%B2%20%D0%BB%D0%BE%D1%82%D0%B5%D1%80%D0%B5%D1%8E%20%D0%90%D1%83%D0%B4%D0%B8%20%D0%906.">
 
-Телефон
+РўРµР»РµС„РѕРЅ
 
-Формат сообщения
-TEL:[номер телефона]
+Р¤РѕСЂРјР°С‚ СЃРѕРѕР±С‰РµРЅРёСЏ
+TEL:[РЅРѕРјРµСЂ С‚РµР»РµС„РѕРЅР°]
 
-Пример
+РџСЂРёРјРµСЂ
 TEL:84951234567
 <img src="http://datamatrix.kaywa.com/img.php?s=4&d=TEL%3A84951234567">
 
 
-Интернет ссылка
+РРЅС‚РµСЂРЅРµС‚ СЃСЃС‹Р»РєР°
 
-Формат сообщения
+Р¤РѕСЂРјР°С‚ СЃРѕРѕР±С‰РµРЅРёСЏ
 [URL]
 
-Пример
+РџСЂРёРјРµСЂ
 http://ochicherin.narod.ru/faq19.html
 <img src="http://datamatrix.kaywa.com/img.php?s=4&d=http%3A%2F%2Fochicherin.narod.ru%2Ffaq19.html">
 
 
-Визитка vCard
+Р’РёР·РёС‚РєР° vCard
 
-Примерный формат сообщения
+РџСЂРёРјРµСЂРЅС‹Р№ С„РѕСЂРјР°С‚ СЃРѕРѕР±С‰РµРЅРёСЏ
 BEGIN:VCARD
 VERSION:2.1
-N:[Фамилия];[Имя];;;
-ORG:[Организация]
-TITLE:[Должность]
-TEL;CELL:[Сотовый телефон]
-TEL:[Телефон]
-TEL;FAX:[Факс]
-EMAIL;INTERNET:[Электронная почта]
-URL:[Адрес сайта]
+N:[Р¤Р°РјРёР»РёСЏ];[РРјСЏ];;;
+ORG:[РћСЂРіР°РЅРёР·Р°С†РёСЏ]
+TITLE:[Р”РѕР»Р¶РЅРѕСЃС‚СЊ]
+TEL;CELL:[РЎРѕС‚РѕРІС‹Р№ С‚РµР»РµС„РѕРЅ]
+TEL:[РўРµР»РµС„РѕРЅ]
+TEL;FAX:[Р¤Р°РєСЃ]
+EMAIL;INTERNET:[Р­Р»РµРєС‚СЂРѕРЅРЅР°СЏ РїРѕС‡С‚Р°]
+URL:[РђРґСЂРµСЃ СЃР°Р№С‚Р°]
 END:VCARD
 
-Подробнее о тегах можно прочитать
+РџРѕРґСЂРѕР±РЅРµРµ Рѕ С‚РµРіР°С… РјРѕР¶РЅРѕ РїСЂРѕС‡РёС‚Р°С‚СЊ
  - <a href="http://ru.wikipedia.org/wiki/VCard"> http://ru.wikipedia.org/wiki/VCard </a>
  - <a href="http://tools.ietf.org/html/rfc2426"> http://tools.ietf.org/html/rfc2426 </a>
 
-Есть проблема с русским языком.
-Поля содержащие русский текст надо кодировать и указывать кодовую страницу.
-Метод кодировки указывается параметром ENCODING и может принимать значения 
-QUOTED-PRINTABLE или BASE64. Если используется BASE64 надо в конце строки 
-добавлять дополнительный перевод строки.
-Кодовая страница указывается в параметре CHARSET, проверялись следующие 
-значения UTF-8 и WINDOWS-1251.
+Р•СЃС‚СЊ РїСЂРѕР±Р»РµРјР° СЃ СЂСѓСЃСЃРєРёРј СЏР·С‹РєРѕРј.
+РџРѕР»СЏ СЃРѕРґРµСЂР¶Р°С‰РёРµ СЂСѓСЃСЃРєРёР№ С‚РµРєСЃС‚ РЅР°РґРѕ РєРѕРґРёСЂРѕРІР°С‚СЊ Рё СѓРєР°Р·С‹РІР°С‚СЊ РєРѕРґРѕРІСѓСЋ СЃС‚СЂР°РЅРёС†Сѓ.
+РњРµС‚РѕРґ РєРѕРґРёСЂРѕРІРєРё СѓРєР°Р·С‹РІР°РµС‚СЃСЏ РїР°СЂР°РјРµС‚СЂРѕРј ENCODING Рё РјРѕР¶РµС‚ РїСЂРёРЅРёРјР°С‚СЊ Р·РЅР°С‡РµРЅРёСЏ 
+QUOTED-PRINTABLE РёР»Рё BASE64. Р•СЃР»Рё РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ BASE64 РЅР°РґРѕ РІ РєРѕРЅС†Рµ СЃС‚СЂРѕРєРё 
+РґРѕР±Р°РІР»СЏС‚СЊ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹Р№ РїРµСЂРµРІРѕРґ СЃС‚СЂРѕРєРё.
+РљРѕРґРѕРІР°СЏ СЃС‚СЂР°РЅРёС†Р° СѓРєР°Р·С‹РІР°РµС‚СЃСЏ РІ РїР°СЂР°РјРµС‚СЂРµ CHARSET, РїСЂРѕРІРµСЂСЏР»РёСЃСЊ СЃР»РµРґСѓСЋС‰РёРµ 
+Р·РЅР°С‡РµРЅРёСЏ UTF-8 Рё utf-8.
 
-Пример.
+РџСЂРёРјРµСЂ.
 
 BEGIN:VCARD
-N;ENCODING=BASE64;CHARSET=windows-1251:1+j35fDo7TvO6+XjO83o6u7r4OXi6Pc7Ow==
+N;ENCODING=BASE64;CHARSET=utf-8:1+j35fDo7TvO6+XjO83o6u7r4OXi6Pc7Ow==
 
 TEL;CELL:+74950000000
 TEL;FAX:+74959999999
 EMAIL:OChicherin@yandex.ru
 END:VCARD
 
-<img src="http://datamatrix.kaywa.com/img.php?s=4&d=BEGIN%3AVCARD%0D%0AN%3BENCODING%3DBASE64%3BCHARSET%3Dwindows-1251%3A1%2Bj35fDo7TvO6%2BXjO83o6u7r4OXi6Pc7Ow%3D%3D%0D%0A%0D%0ATEL%3BCELL%3A%2B74950000000%0D%0ATEL%3BFAX%3A%2B74959999999%0D%0AEMAIL%3AOChicherin%40yandex.ru%0D%0AEND%3AVCARD%0D%0A">
+<img src="http://datamatrix.kaywa.com/img.php?s=4&d=BEGIN%3AVCARD%0D%0AN%3BENCODING%3DBASE64%3BCHARSET%3Dutf-8%3A1%2Bj35fDo7TvO6%2BXjO83o6u7r4OXi6Pc7Ow%3D%3D%0D%0A%0D%0ATEL%3BCELL%3A%2B74950000000%0D%0ATEL%3BFAX%3A%2B74959999999%0D%0AEMAIL%3AOChicherin%40yandex.ru%0D%0AEND%3AVCARD%0D%0A">
 </pre>
 
 </BODY>
