--- a/form1.html
+++ b/form1.html
@@ -1,35 +1,35 @@
-<form id=form1>
-Тестовая форма<br>
+п»ї<form id=form1>
+РўРµСЃС‚РѕРІР°СЏ С„РѕСЂРјР°<br>
 <table>
-<tr><td>Простое поле A1 </td><td> <input type=text name="A1" value=""></td></tr>
-<tr><td>Простое поле b1 </td><td> <input type=text name="b1" value=""></td></tr>
-<tr><td>Простое поле c1 </td><td> <input type=text name="c1" value=""></td></tr>
-<tr><td>Чек бокс D  </td><td> <input type=checkbox name="d1" value="D_is_checked" style="width:20px;"> </td></tr>
-<tr><td>Радио кнопка E </td><td>
-<input type=radio name="e1" value="1" style="width:20px;"> Один<br>
-<input type=radio name="e1" value="2" style="width:20px;"> Два <br>
-<input type=radio name="e1" value="3" style="width:20px;"> Три <br>
+<tr><td>РџСЂРѕСЃС‚РѕРµ РїРѕР»Рµ A1 </td><td> <input type=text name="A1" value=""></td></tr>
+<tr><td>РџСЂРѕСЃС‚РѕРµ РїРѕР»Рµ b1 </td><td> <input type=text name="b1" value=""></td></tr>
+<tr><td>РџСЂРѕСЃС‚РѕРµ РїРѕР»Рµ c1 </td><td> <input type=text name="c1" value=""></td></tr>
+<tr><td>Р§РµРє Р±РѕРєСЃ D  </td><td> <input type=checkbox name="d1" value="D_is_checked" style="width:20px;"> </td></tr>
+<tr><td>Р Р°РґРёРѕ РєРЅРѕРїРєР° E </td><td>
+<input type=radio name="e1" value="1" style="width:20px;"> РћРґРёРЅ<br>
+<input type=radio name="e1" value="2" style="width:20px;"> Р”РІР° <br>
+<input type=radio name="e1" value="3" style="width:20px;"> РўСЂРё <br>
 </td></tr>
-<tr><td>Поле одиночного выбора f1</td><td>
+<tr><td>РџРѕР»Рµ РѕРґРёРЅРѕС‡РЅРѕРіРѕ РІС‹Р±РѕСЂР° f1</td><td>
 <select name="f1">
-  <option value="1">Один</option>
-  <option value="2">Два</option>
-  <option value="3">Три</option>
-  <option value="4">Четыре</option>
-  <option value="5">Пять</option>
+  <option value="1">РћРґРёРЅ</option>
+  <option value="2">Р”РІР°</option>
+  <option value="3">РўСЂРё</option>
+  <option value="4">Р§РµС‚С‹СЂРµ</option>
+  <option value="5">РџСЏС‚СЊ</option>
   </select></td></tr>
-<tr><td>Поле множественного выбора g1</td><td>
+<tr><td>РџРѕР»Рµ РјРЅРѕР¶РµСЃС‚РІРµРЅРЅРѕРіРѕ РІС‹Р±РѕСЂР° g1</td><td>
  <select name="g1" multiple>
-  <option value="1">Один</option>
-  <option value="2">Два</option>
-  <option value="3">Три</option>
-  <option value="4">Четыре</option>
-  <option value="5">Пять</option>
+  <option value="1">РћРґРёРЅ</option>
+  <option value="2">Р”РІР°</option>
+  <option value="3">РўСЂРё</option>
+  <option value="4">Р§РµС‚С‹СЂРµ</option>
+  <option value="5">РџСЏС‚СЊ</option>
   </select></td></tr>
-<tr><td>Поле ввода файла h1 </td><td><input type="file" name=h1></td></tr>
-<tr><td>Поле пароля i1 </td><td><input type=password name="i1" value=""></td></tr>
-<tr><td colspan=2 align=center><input type=submit name=subm value="Кнопка Submit"></td></tr>
-<tr><td colspan=2 align=center><input type=reset name=rese value="Кнопка Reset"></td></tr>
+<tr><td>РџРѕР»Рµ РІРІРѕРґР° С„Р°Р№Р»Р° h1 </td><td><input type="file" name=h1></td></tr>
+<tr><td>РџРѕР»Рµ РїР°СЂРѕР»СЏ i1 </td><td><input type=password name="i1" value=""></td></tr>
+<tr><td colspan=2 align=center><input type=submit name=subm value="РљРЅРѕРїРєР° Submit"></td></tr>
+<tr><td colspan=2 align=center><input type=reset name=rese value="РљРЅРѕРїРєР° Reset"></td></tr>
 </table>
 
 </form>
