--- a/links.html
+++ b/links.html
@@ -1,11 +1,11 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Заголовок первый</H1>
+  <H1>Р—Р°РіРѕР»РѕРІРѕРє РїРµСЂРІС‹Р№</H1>
 </BODY>
 </HTML>
