--- a/lov_main.html
+++ b/lov_main.html
@@ -1,34 +1,34 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Заголовок первый</H1>
-  <H1>Примеры формирования списков</H1>
+  <H1>Р—Р°РіРѕР»РѕРІРѕРє РїРµСЂРІС‹Р№</H1>
+  <H1>РџСЂРёРјРµСЂС‹ С„РѕСЂРјРёСЂРѕРІР°РЅРёСЏ СЃРїРёСЃРєРѕРІ</H1>
 
 <form name=test_form>
 
 
-<label>Простое поле А</label><INPUT TYPE="TEXT" NAME="a" VALUE="aa" alt="sssss"> <br>
-<label>Простое поле Б</label><INPUT TYPE="TEXT" NAME="b" VALUE="bbb" alt="sssss"> <br> 
+<label>РџСЂРѕСЃС‚РѕРµ РїРѕР»Рµ Рђ</label><INPUT TYPE="TEXT" NAME="a" VALUE="aa" alt="sssss"> <br>
+<label>РџСЂРѕСЃС‚РѕРµ РїРѕР»Рµ Р‘</label><INPUT TYPE="TEXT" NAME="b" VALUE="bbb" alt="sssss"> <br> 
 
-<label>Заполняемый по команде список из внутреннего ресурса</label>
+<label>Р—Р°РїРѕР»РЅСЏРµРјС‹Р№ РїРѕ РєРѕРјР°РЅРґРµ СЃРїРёСЃРѕРє РёР· РІРЅСѓС‚СЂРµРЅРЅРµРіРѕ СЂРµСЃСѓСЂСЃР°</label>
 <select name=list2 size=1></select>
 <a href="javascript:fill_list('http://ochicherin.narod.ru/satlist.xml',test_form.list2);">
 <img src="index_files/calendar.gif" border="0"></a><br>
 
-<label>Заполняемый по команде список из внешнего ресурса</label>
+<label>Р—Р°РїРѕР»РЅСЏРµРјС‹Р№ РїРѕ РєРѕРјР°РЅРґРµ СЃРїРёСЃРѕРє РёР· РІРЅРµС€РЅРµРіРѕ СЂРµСЃСѓСЂСЃР°</label>
 <select name=list1 size=5></select>
-<a href="javascript:fill_list('http://10.32.1.156:8080/oleg/z3950client.lov?total=100&name=p1003&mask=Лермо',test_form.list1);">
+<a href="javascript:fill_list('http://10.32.1.156:8080/oleg/z3950client.lov?total=100&name=p1003&mask=Р›РµСЂРјРѕ',test_form.list1);">
 <img src="index_files/calendar.gif" border="0"></a><br>
 
-<label>Поле с выпадающим списком</label>
-<INPUT TYPE="TEXT" NAME="REPORT_text" VALUE="Лермо" alt="sssss"> 
+<label>РџРѕР»Рµ СЃ РІС‹РїР°РґР°СЋС‰РёРј СЃРїРёСЃРєРѕРј</label>
+<INPUT TYPE="TEXT" NAME="REPORT_text" VALUE="Р›РµСЂРјРѕ" alt="sssss"> 
 <!--a href="javascript:alert(test_form.REPORT_text.alt);"-->
-<a href="javascript:list_of_values(test_form.REPORT_text,'http://10.32.1.156:8080/oleg/z3950client.lov?total=100&name=p1003&mask=#REPORT_text#','Выберите','Выбор автора');">
+<a href="javascript:list_of_values(test_form.REPORT_text,'http://10.32.1.156:8080/oleg/z3950client.lov?total=100&name=p1003&mask=#REPORT_text#','Р’С‹Р±РµСЂРёС‚Рµ','Р’С‹Р±РѕСЂ Р°РІС‚РѕСЂР°');">
 <img src="index_files/calendar.gif" border="0"></a><br>
 
 </form> 
