--- a/menu_h.html
+++ b/menu_h.html
@@ -1,13 +1,13 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <link rel="shortcut icon" href="favicon.ico">
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
   <script src="script.js"></script>
 </HEAD>
 <BODY onLoad="initBody();">
-  <h1> Пример меню</h1>
+  <h1> РџСЂРёРјРµСЂ РјРµРЅСЋ</h1>
   <div id=example class=bar href="menu.xml">menu.xml</div>
    <div id=example21 class=menu href="menu.xml">menu.xml</div>
   <div id=example2 class=news>3</div>
