--- a/other.html
+++ b/other.html
@@ -1,13 +1,13 @@
-<HTML>
+п»ї<HTML>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Прочее</H1>
-<p>Здесь, как и следует из названия - самое главное.</p>
+  <H1>РџСЂРѕС‡РµРµ</H1>
+<p>Р—РґРµСЃСЊ, РєР°Рє Рё СЃР»РµРґСѓРµС‚ РёР· РЅР°Р·РІР°РЅРёСЏ - СЃР°РјРѕРµ РіР»Р°РІРЅРѕРµ.</p>
 
 <div class=sitemap_child>sitemap.xml</div>
 
